--- a/artikel/02.tex
+++ b/artikel/02.tex
@@ -9,28 +9,28 @@
   \item Diese Verordnung gilt für die ganz oder teilweise automatisierte \hyperref[itm:04-2]{Verarbeitung} \hyperref
    [itm:04-1]{personenbezogener Daten} sowie für die nichtautomatisierte \hyperref[itm:04-2]{Verarbeitung} \hyperref
    [itm:04-1]{personenbezogener Daten}, die in einem \hyperref[itm:04-6]{Dateisystem} gespeichert sind oder gespeichert
-   werden sollen.
+   werden sollen.%
   \label{itm:02-1}
 
   \item Diese Verordnung findet keine Anwendung auf die \hyperref[itm:04-2]{Verarbeitung} \hyperref[itm:04-1]
-   {personenbezogener Daten}
+   {personenbezogener Daten}%
   \label{itm:02-2}
 
   \begin{enumerate}
   
-    \item im Rahmen einer Tätigkeit, die nicht in den Anwendungsbereich des Unionsrechts fällt,
+    \item im Rahmen einer Tätigkeit, die nicht in den Anwendungsbereich des Unionsrechts fällt,%
     \label{itm:02-2a}
 
     \item durch die Mitgliedstaaten im Rahmen von Tätigkeiten, die in den Anwendungsbereich von Titel V Kapitel 2 EUV
-     fallen,
+     fallen,%
     \label{itm:02-2b}
 
-    \item durch natürliche Personen zur Ausübung ausschließlich persönlicher oder familiärer Tätigkeiten,
+    \item durch natürliche Personen zur Ausübung ausschließlich persönlicher oder familiärer Tätigkeiten,%
     \label{itm:02-2c}
 
     \item durch die zuständigen Behörden zum Zwecke der Verhütung, Ermittlung, Aufdeckung oder Verfolgung von Straftaten
      oder der Strafvollstreckung, einschließlich des Schutzes vor und der Abwehr von Gefahren für die öffentliche
-     Sicherheit.
+     Sicherheit.%
     \label{itm:02-2d}
 
   \end{enumerate}
@@ -39,11 +39,11 @@
    Einrichtungen, Ämter und Agenturen der Union gilt die Verordnung (EG) Nr. 45/2001. Die Verordnung (EG) Nr. 45/2001
    und sonstige Rechtsakte der Union, die diese \hyperref[itm:04-2]{Verarbeitung} \hyperref[itm:04-1]
    {personenbezogener Daten} regeln, werden im Einklang mit \hyperref[ch:98]{Artikel 98} an die Grundsätze und
-   Vorschriften der vorliegenden Verordnung angepasst.
+   Vorschriften der vorliegenden Verordnung angepasst.%
   \label{itm:02-3}
 
   \item Die vorliegende Verordnung lässt die Anwendung der Richtlinie 2000/31/EG und speziell die Vorschriften der
-   Artikel 12 bis 15 dieser Richtlinie zur Verantwortlichkeit der Vermittler unberührt.
+   Artikel 12 bis 15 dieser Richtlinie zur Verantwortlichkeit der Vermittler unberührt.%
   \label{itm:02-4}
 
 \end{enumerate}
