--- a/artikel/03.tex
+++ b/artikel/03.tex
@@ -9,7 +9,7 @@
   \item Diese Verordnung findet Anwendung auf die \hyperref[itm:04-2]{Verarbeitung} \hyperref[itm:04-1]
    {personenbezogener Daten}, soweit diese im Rahmen der Tätigkeiten einer Niederlassung eines \hyperref[itm:04-7]
    {Verantwortlichen} oder eines \hyperref[itm:04-8]{Auftragsverarbeiters} in der Union erfolgt, unabhängig davon, ob
-   die \hyperref[itm:04-2]{Verarbeitung} in der Union stattfindet.
+   die \hyperref[itm:04-2]{Verarbeitung} in der Union stattfindet.%
   \label{itm:03-1}
 
   \item Diese Verordnung findet Anwendung auf die \hyperref[itm:04-2]{Verarbeitung} \hyperref[itm:04-1]
@@ -17,25 +17,25 @@
    \hyperref[itm:04-1]{betroffenen Personen}, die sich in der Union befinden, durch einen nicht in der Union
     niedergelassenen
    \hyperref[itm:04-7]{Verantwortlichen} oder \hyperref[itm:04-8]{Auftragsverarbeiter}, wenn die Datenverarbeitung im
-    Zusammenhang damit steht
+    Zusammenhang damit steht%
   \label{itm:03-2}
 
   \begin{enumerate}
   
     \item \hyperref[itm:04-1]{betroffenen Personen} in der Union Waren oder Dienstleistungen anzubieten, unabhängig
      davon, ob von diesen
-     \hyperref[itm:04-1]{betroffenen Personen} eine Zahlung zu leisten ist;
+     \hyperref[itm:04-1]{betroffenen Personen} eine Zahlung zu leisten ist;%
     \label{itm:03-2a}
 
     \item das Verhalten \hyperref[itm:04-1]{betroffener Personen} zu beobachten, soweit ihr Verhalten in der Union
-     erfolgt.
+     erfolgt.%
     \label{itm:03-2b}
 
   \end{enumerate}
 
   \item Diese Verordnung findet Anwendung auf die \hyperref[itm:04-2]{Verarbeitung} \hyperref[itm:04-1]
    {personenbezogener Daten} durch einen nicht in der Union niedergelassenen \hyperref[itm:04-7]{Verantwortlichen} an
-   einem Ort, der aufgrund Völkerrechts dem Recht eines Mitgliedstaats unterliegt.
+   einem Ort, der aufgrund Völkerrechts dem Recht eines Mitgliedstaats unterliegt.%
   \label{itm:03-3}
 
 \end{enumerate}
