--- a/artikel/05.tex
+++ b/artikel/05.tex
@@ -6,30 +6,30 @@
 
 \begin{enumerate}
 
-  \item \hyperref[itm:04-1]{Personenbezogene Daten} müssen
+  \item \hyperref[itm:04-1]{Personenbezogene Daten} müssen%
   \label{itm:05-1}
 
   \begin{enumerate}
   
     \item auf rechtmäßige Weise, nach Treu und Glauben und in einer für die \hyperref[itm:04-1]{betroffene Person}
      nachvollziehbaren Weise verarbeitet werden („Rechtmäßigkeit, \hyperref[itm:04-2]{Verarbeitung} nach Treu und
-     Glauben, Transparenz“);
+     Glauben, Transparenz“);%
     \label{itm:05-1a}
 
     \item für festgelegte, eindeutige und legitime Zwecke erhoben werden und dürfen nicht in einer mit diesen Zwecken
      nicht zu vereinbarenden Weise weiterverarbeitet werden; eine Weiterverarbeitung für im öffentlichen Interesse
      liegende Archivzwecke, für wissenschaftliche oder historische Forschungszwecke oder für statistische Zwecke gilt
      gemäß \hyperref[itm:89-1]{Artikel 89 Absatz 1} nicht als unvereinbar mit den ursprünglichen Zwecken
-     („Zweckbindung“);
+     („Zweckbindung“);%
     \label{itm:05-1b}
 
     \item dem Zweck angemessen und erheblich sowie auf das für die Zwecke der \hyperref[itm:04-2]
-     {Verarbeitung} notwendige Maß beschränkt sein („Datenminimierung“);
+     {Verarbeitung} notwendige Maß beschränkt sein („Datenminimierung“);%
     \label{itm:05-1c}
 
     \item sachlich richtig und erforderlichenfalls auf dem neuesten Stand sein; es sind alle angemessenen Maßnahmen zu
      treffen, damit \hyperref[itm:04-1]{personenbezogene Daten}, die im Hinblick auf die Zwecke ihrer \hyperref
-     [itm:04-2]{Verarbeitung} unrichtig sind, unverzüglich gelöscht oder berichtigt werden („Richtigkeit“);
+     [itm:04-2]{Verarbeitung} unrichtig sind, unverzüglich gelöscht oder berichtigt werden („Richtigkeit“);%
     \label{itm:05-1d}
 
     \item in einer Form gespeichert werden, die die Identifizierung der \hyperref[itm:04-1]{betroffenen Personen} nur so
@@ -39,19 +39,19 @@
      zum Schutz der Rechte und Freiheiten der \hyperref[itm:04-1]{betroffenen Person} gefordert werden, ausschließlich
      für im öffentlichen Interesse liegende Archivzwecke oder für wissenschaftliche und historische Forschungszwecke
      oder für statistische Zwecke gemäß \hyperref[itm:89-1]{Artikel 89 Absatz 1} verarbeitet werden
-     („Speicherbegrenzung“);
+     („Speicherbegrenzung“);%
     \label{itm:05-1e}
 
     \item in einer Weise verarbeitet werden, die eine angemessene Sicherheit der \hyperref[itm:04-1]
      {personenbezogenen Daten} gewährleistet, einschließlich Schutz vor unbefugter oder unrechtmäßiger \hyperref
      [itm:04-2]{Verarbeitung} und vor unbeabsichtigtem Verlust, unbeabsichtigter Zerstörung oder unbeabsichtigter
-     Schädigung durch geeignete technische und organisatorische Maßnahmen („Integrität und Vertraulichkeit“);
+     Schädigung durch geeignete technische und organisatorische Maßnahmen („Integrität und Vertraulichkeit“);%
     \label{itm:05-1f}
 
   \end{enumerate}
 
   \item Der \hyperref[itm:04-7]{Verantwortliche} ist für die Einhaltung des \hyperref[itm:05-1]{Absatzes 1}
-   verantwortlich und muss dessen Einhaltung nachweisen können („Rechenschaftspflicht“).
+   verantwortlich und muss dessen Einhaltung nachweisen können („Rechenschaftspflicht“).%
   \label{itm:05-2}
 
 \end{enumerate}
