--- a/artikel/08.tex
+++ b/artikel/08.tex
@@ -11,7 +11,7 @@
    {Verarbeitung} der \hyperref[itm:04-1]{personenbezogenen Daten} des Kindes rechtmäßig, wenn das Kind das sechzehnte
    Lebensjahr vollendet hat. Hat das Kind noch nicht das sechzehnte Lebensjahr vollendet, so ist diese \hyperref
    [itm:04-2]{Verarbeitung} nur rechtmäßig, sofern und soweit diese \hyperref[itm:04-11]{Einwilligung} durch den Träger
-   der elterlichen Verantwortung für das Kind oder mit dessen Zustimmung erteilt wird. 
+   der elterlichen Verantwortung für das Kind oder mit dessen Zustimmung erteilt wird. %
   \label{itm:08-1}
 
    Die Mitgliedstaaten können durch Rechtsvorschriften zu diesen Zwecken eine niedrigere Altersgrenze vorsehen, die
@@ -19,11 +19,11 @@
 
   \item Der \hyperref[itm:04-7]{Verantwortliche} unternimmt unter Berücksichtigung der verfügbaren Technik angemessene
    Anstrengungen, um sich in solchen Fällen zu vergewissern, dass die \hyperref[itm:04-11]{Einwilligung} durch den
-   Träger der elterlichen Verantwortung für das Kind oder mit dessen Zustimmung erteilt wurde.
+   Träger der elterlichen Verantwortung für das Kind oder mit dessen Zustimmung erteilt wurde.%
   \label{itm:08-2}
 
   \item \hyperref[itm:08-1]{Absatz 1} lässt das allgemeine Vertragsrecht der Mitgliedstaaten, wie etwa die Vorschriften
-   zur Gültigkeit, zum Zustandekommen oder zu den Rechtsfolgen eines Vertrags in Bezug auf ein Kind, unberührt.
+   zur Gültigkeit, zum Zustandekommen oder zu den Rechtsfolgen eines Vertrags in Bezug auf ein Kind, unberührt.%
   \label{itm:08-3}
 
 \end{enumerate}
