--- a/artikel/09.tex
+++ b/artikel/09.tex
@@ -12,10 +12,10 @@
    \hyperref[itm:04-2]{Verarbeitung} von \hyperref[itm:04-13]{genetischen Daten}, \hyperref[itm:04-14]
     {biometrischen Daten} zur eindeutigen Identifizierung einer natürlichen Person,
    \hyperref[itm:04-15]{Gesundheitsdaten} oder Daten zum Sexualleben oder der sexuellen Orientierung einer natürlichen
-    Person ist untersagt.
+    Person ist untersagt.%
   \label{itm:09-1}
 
-  \item \hyperref[itm:09-1]{Absatz 1} gilt nicht in folgenden Fällen:
+  \item \hyperref[itm:09-1]{Absatz 1} gilt nicht in folgenden Fällen:%
   \label{itm:09-2}
 
   \begin{enumerate}
@@ -24,7 +24,7 @@
      genannten \hyperref[itm:04-1]{personenbezogenen Daten} für einen oder mehrere festgelegte Zwecke ausdrücklich
      eingewilligt, es sei denn, nach Unionsrecht oder dem Recht der Mitgliedstaaten kann das Verbot nach \hyperref
      [itm:09-1]{Absatz 1} durch die \hyperref[itm:04-11]{Einwilligung} der \hyperref[itm:04-1]{betroffenen Person}
-     nicht aufgehoben werden,
+     nicht aufgehoben werden,%
     \label{itm:09-2a}
 
     \item die \hyperref[itm:04-2]{Verarbeitung} ist erforderlich, damit der \hyperref[itm:04-7]{Verantwortliche} oder
@@ -32,13 +32,13 @@
      Sicherheit und des Sozialschutzes erwachsenden Rechte ausüben und seinen bzw. ihren diesbezüglichen Pflichten
      nachkommen kann, soweit dies nach Unionsrecht oder dem Recht der Mitgliedstaaten oder einer Kollektivvereinbarung
      nach dem Recht der Mitgliedstaaten, das geeignete Garantien für die Grundrechte und die Interessen der \hyperref
-     [itm:04-1]{betroffenen Person} vorsieht, zulässig ist,
+     [itm:04-1]{betroffenen Person} vorsieht, zulässig ist,%
     \label{itm:09-2b}
 
     \item die \hyperref[itm:04-2]{Verarbeitung} ist zum Schutz lebenswichtiger Interessen der \hyperref[itm:04-1]
      {betroffenen Person} oder einer anderen natürlichen Person erforderlich und die \hyperref[itm:04-1]
      {betroffene Person} ist aus körperlichen oder rechtlichen Gründen außerstande, ihre \hyperref[itm:04-11]
-     {Einwilligung} zu geben,
+     {Einwilligung} zu geben,%
     \label{itm:09-2c}
 
     \item die \hyperref[itm:04-2]{Verarbeitung} erfolgt auf der Grundlage geeigneter Garantien durch eine politisch,
@@ -48,22 +48,22 @@
       auf Personen, die im Zusammenhang mit deren Tätigkeitszweck regelmäßige Kontakte mit ihr unterhalten, bezieht und
       die
      \hyperref[itm:04-1]{personenbezogenen Daten} nicht ohne \hyperref[itm:04-11]{Einwilligung} der \hyperref[itm:04-1]
-      {betroffenen Personen} nach außen offengelegt werden,
+      {betroffenen Personen} nach außen offengelegt werden,%
     \label{itm:09-2d}
 
     \item die \hyperref[itm:04-2]{Verarbeitung} bezieht sich auf \hyperref[itm:04-1]{personenbezogene Daten}, die
-     die \hyperref[itm:04-1]{betroffene Person} offensichtlich öffentlich gemacht hat,
+     die \hyperref[itm:04-1]{betroffene Person} offensichtlich öffentlich gemacht hat,%
     \label{itm:09-2e}
 
     \item die \hyperref[itm:04-2]{Verarbeitung} ist zur Geltendmachung, Ausübung oder Verteidigung von Rechtsansprüchen
-     oder bei Handlungen der Gerichte im Rahmen ihrer justiziellen Tätigkeit erforderlich,
+     oder bei Handlungen der Gerichte im Rahmen ihrer justiziellen Tätigkeit erforderlich,%
     \label{itm:09-2f}
 
     \item die \hyperref[itm:04-2]{Verarbeitung} ist auf der Grundlage des Unionsrechts oder des Rechts eines
      Mitgliedstaats, das in angemessenem Verhältnis zu dem verfolgten Ziel steht, den Wesensgehalt des Rechts auf
      Datenschutz wahrt und angemessene und spezifische Maßnahmen zur Wahrung der Grundrechte und Interessen
      der \hyperref[itm:04-1]{betroffenen Person} vorsieht, aus Gründen eines erheblichen öffentlichen Interesses
-     erforderlich,
+     erforderlich,%
     \label{itm:09-2g}
 
     \item die \hyperref[itm:04-2]{Verarbeitung} ist für Zwecke der Gesundheitsvorsorge oder der Arbeitsmedizin, für die
@@ -71,7 +71,7 @@
      Behandlung im Gesundheits- oder Sozialbereich oder für die Verwaltung von Systemen und Diensten im Gesundheits-
      oder Sozialbereich auf der Grundlage des Unionsrechts oder des Rechts eines Mitgliedstaats oder aufgrund eines
      Vertrags mit einem Angehörigen eines Gesundheitsberufs und vorbehaltlich der in \hyperref[itm:09-3]{Absatz 3}
-     genannten Bedingungen und Garantien erforderlich,
+     genannten Bedingungen und Garantien erforderlich,%
     \label{itm:09-2h}
 
     \item die \hyperref[itm:04-2]{Verarbeitung} ist aus Gründen des öffentlichen Interesses im Bereich der öffentlichen
@@ -79,7 +79,7 @@
      hoher Qualitäts- und Sicherheitsstandards bei der Gesundheitsversorgung und bei Arzneimitteln und
      Medizinprodukten, auf der Grundlage des Unionsrechts oder des Rechts eines Mitgliedstaats, das angemessene und
      spezifische Maßnahmen zur Wahrung der Rechte und Freiheiten der \hyperref[itm:04-1]{betroffenen Person},
-     insbesondere des Berufsgeheimnisses, vorsieht, erforderlich, oder
+     insbesondere des Berufsgeheimnisses, vorsieht, erforderlich, oder%
     \label{itm:09-2i}
 
     \item die \hyperref[itm:04-2]{Verarbeitung} ist auf der Grundlage des Unionsrechts oder des Rechts eines
@@ -87,7 +87,7 @@
      Datenschutz wahrt und angemessene und spezifische Maßnahmen zur Wahrung der Grundrechte und Interessen
      der \hyperref[itm:04-1]{betroffenen Person} vorsieht, für im öffentlichen Interesse liegende Archivzwecke, für
      wissenschaftliche oder historische Forschungszwecke oder für statistische Zwecke gemäß \hyperref[itm:89-1]
-     {Artikel 89 Absatz 1} erforderlich.
+     {Artikel 89 Absatz 1} erforderlich.%
     \label{itm:09-2j}
 
   \end{enumerate}
@@ -98,12 +98,12 @@
    dem Recht eines Mitgliedstaats oder den Vorschriften nationaler zuständiger Stellen dem Berufsgeheimnis unterliegt,
    oder wenn die \hyperref[itm:04-2]{Verarbeitung} durch eine andere Person erfolgt, die ebenfalls nach dem Unionsrecht
    oder dem Recht eines Mitgliedstaats oder den Vorschriften nationaler zuständiger Stellen einer Geheimhaltungspflicht
-   unterliegt.
+   unterliegt.%
   \label{itm:09-3}
 
   \item Die Mitgliedstaaten können zusätzliche Bedingungen, einschließlich Beschränkungen, einführen oder
    aufrechterhalten, soweit die \hyperref[itm:04-2]{Verarbeitung} von \hyperref[itm:04-13]{genetischen}, \hyperref
-   [itm:04-14]{biometrischen} oder \hyperref[itm:04-15]{Gesundheitsdaten} betroffen ist.
+   [itm:04-14]{biometrischen} oder \hyperref[itm:04-15]{Gesundheitsdaten} betroffen ist.%
   \label{itm:09-4}
 
 \end{enumerate}
