--- a/artikel/17.tex
+++ b/artikel/17.tex
@@ -10,38 +10,38 @@
    verlangen, dass sie betreffende
    \hyperref[itm:04-1]{personenbezogene Daten} unverzüglich gelöscht werden, und der \hyperref[itm:04-7]
     {Verantwortliche} ist verpflichtet, personenbezogene Daten unverzüglich zu löschen, sofern einer der folgenden
-    Gründe zutrifft:
+    Gründe zutrifft:%
   \label{itm:17-1}
 
   \begin{enumerate}
   
     \item Die \hyperref[itm:04-1]{personenbezogenen Daten} sind für die Zwecke, für die sie erhoben oder auf sonstige
-     Weise verarbeitet wurden, nicht mehr notwendig.
+     Weise verarbeitet wurden, nicht mehr notwendig.%
     \label{itm:17-1a}
 
     \item Die \hyperref[itm:04-1]{betroffene Person} widerruft ihre \hyperref[itm:04-11]{Einwilligung}, auf die sich
      die \hyperref[itm:04-2]{Verarbeitung} gemäß \hyperref[itm:06-1a]{Artikel 6 Absatz 1 Buchstabe a} oder \hyperref
      [itm:09-2a]{Artikel 9 Absatz 2 Buchstabe a} stützte, und es fehlt an einer anderweitigen Rechtsgrundlage für
-     die \hyperref[itm:04-2]{Verarbeitung}.
+     die \hyperref[itm:04-2]{Verarbeitung}.%
     \label{itm:17-1b}
 
     \item Die \hyperref[itm:04-1]{betroffene Person} legt gemäß \hyperref[itm:21-1]{Artikel 21 Absatz 1} Widerspruch
      gegen die \hyperref[itm:04-2]{Verarbeitung} ein und es liegen keine vorrangigen berechtigten Gründe für
      die \hyperref[itm:04-2]{Verarbeitung} vor, oder die \hyperref[itm:04-1]{betroffene Person} legt gemäß \hyperref
-     [itm:21-2]{Artikel 21 Absatz 2} Widerspruch gegen die \hyperref[itm:04-2]{Verarbeitung} ein.
+     [itm:21-2]{Artikel 21 Absatz 2} Widerspruch gegen die \hyperref[itm:04-2]{Verarbeitung} ein.%
     \label{itm:17-1c}
 
-    \item Die \hyperref[itm:04-1]{personenbezogenen Daten} wurden unrechtmäßig verarbeitet.
+    \item Die \hyperref[itm:04-1]{personenbezogenen Daten} wurden unrechtmäßig verarbeitet.%
     \label{itm:17-1d}
 
     \item Die Löschung der \hyperref[itm:04-1]{personenbezogenen Daten} ist zur Erfüllung einer rechtlichen
      Verpflichtung nach dem Unionsrecht oder dem Recht der Mitgliedstaaten erforderlich, dem der \hyperref[itm:04-7]
-     {Verantwortliche} unterliegt.
+     {Verantwortliche} unterliegt.%
     \label{itm:17-1e}
 
     \item Die \hyperref[itm:04-1]{personenbezogenen Daten} wurden in Bezug auf angebotene \hyperref[itm:04-28]
      {Dienste der Informationsgesellschaft} gemäß
-     \hyperref[itm:08-1]{Artikel 8 Absatz 1} erhoben.
+     \hyperref[itm:08-1]{Artikel 8 Absatz 1} erhoben.%
     \label{itm:17-1f}
 
   \end{enumerate}
@@ -52,36 +52,36 @@
    Datenverarbeitung \hyperref[itm:04-7]{Verantwortliche}, die die \hyperref[itm:04-1]{personenbezogenen Daten}
    verarbeiten, darüber zu informieren, dass eine \hyperref[itm:04-1]{betroffene Person} von ihnen die Löschung aller
    Links zu diesen \hyperref[itm:04-1]{personenbezogenen Daten} oder von Kopien oder Replikationen dieser
-   personenbezogenen Daten verlangt hat.
+   personenbezogenen Daten verlangt hat.%
   \label{itm:17-2}
 
   \item Die Absätze \hyperref[itm:17-1]{1} und \hyperref[itm:17-2]{2} gelten nicht, soweit die \hyperref[itm:04-2]
-   {Verarbeitung} erforderlich ist
+   {Verarbeitung} erforderlich ist%
   \label{itm:17-3}
 
   \begin{enumerate}
   
-    \item zur Ausübung des Rechts auf freie Meinungsäußerung und Information;
+    \item zur Ausübung des Rechts auf freie Meinungsäußerung und Information;%
     \label{itm:17-3a}
 
     \item zur Erfüllung einer rechtlichen Verpflichtung, die die \hyperref[itm:04-2]{Verarbeitung} nach dem Recht der
      Union oder der Mitgliedstaaten, dem der \hyperref[itm:04-7]{Verantwortliche} unterliegt, erfordert, oder zur
      Wahrnehmung einer Aufgabe, die im öffentlichen Interesse liegt oder in Ausübung öffentlicher Gewalt erfolgt, die
-     dem \hyperref[itm:04-7]{Verantwortlichen} übertragen wurde;
+     dem \hyperref[itm:04-7]{Verantwortlichen} übertragen wurde;%
     \label{itm:17-3b}
 
     \item aus Gründen des öffentlichen Interesses im Bereich der öffentlichen Gesundheit gemäß \hyperref[itm:09-2]
      {Artikel 9 Absatz 2} Buchstaben \hyperref[itm:09-2h]{h} und \hyperref[itm:09-2i]{i} sowie \hyperref[itm:09-3]
-     {Artikel 9 Absatz 3};
+     {Artikel 9 Absatz 3};%
     \label{itm:17-3c}
 
     \item für im öffentlichen Interesse liegende Archivzwecke, wissenschaftliche oder historische Forschungszwecke oder
      für statistische Zwecke gemäß \hyperref[itm:89-1]{Artikel 89 Absatz 1}, soweit das in \hyperref[itm:17-1]
      {Absatz 1} genannte Recht voraussichtlich die Verwirklichung der Ziele dieser \hyperref[itm:04-2]
-     {Verarbeitung} unmöglich macht oder ernsthaft beeinträchtigt, oder
+     {Verarbeitung} unmöglich macht oder ernsthaft beeinträchtigt, oder%
     \label{itm:17-3d}
 
-    \item zur Geltendmachung, Ausübung oder Verteidigung von Rechtsansprüchen.
+    \item zur Geltendmachung, Ausübung oder Verteidigung von Rechtsansprüchen.%
     \label{itm:17-3e}
 
   \end{enumerate}
