--- a/artikel/20.tex
+++ b/artikel/20.tex
@@ -11,7 +11,7 @@
    \hyperref[itm:04-7]{Verantwortlichen} bereitgestellt hat, in einem strukturierten, gängigen und maschinenlesbaren
     Format zu erhalten, und sie hat das Recht, diese Daten einem anderen \hyperref[itm:04-7]{Verantwortlichen} ohne
     Behinderung durch den \hyperref[itm:04-7]{Verantwortlichen}, dem die
-   \hyperref[itm:04-1]{personenbezogenen Daten} bereitgestellt wurden, zu übermitteln, sofern
+   \hyperref[itm:04-1]{personenbezogenen Daten} bereitgestellt wurden, zu übermitteln, sofern%
   \label{itm:20-1}
 
   \begin{enumerate}
@@ -19,10 +19,10 @@
     \item die \hyperref[itm:04-2]{Verarbeitung} auf einer \hyperref[itm:04-11]{Einwilligung} gemäß \hyperref[itm:06-1a]
      {Artikel 6 Absatz 1 Buchstabe a} oder
     \hyperref[itm:09-2a]{Artikel 9 Absatz 2 Buchstabe a} oder auf einem Vertrag gemäß \hyperref[itm:06-1b]{Artikel 6
-     Absatz 1 Buchstabe b} beruht und
+     Absatz 1 Buchstabe b} beruht und%
   \label{itm:20-1a}
 
-    \item die \hyperref[itm:04-2]{Verarbeitung} mithilfe automatisierter Verfahren erfolgt.
+    \item die \hyperref[itm:04-2]{Verarbeitung} mithilfe automatisierter Verfahren erfolgt.%
   \label{itm:20-1b}
 
   \end{enumerate}
@@ -30,18 +30,18 @@
   \item Bei der Ausübung ihres Rechts auf Datenübertragbarkeit gemäß \hyperref[itm:20-1]{Absatz 1} hat die \hyperref
    [itm:04-1]{betroffene Person} das Recht, zu erwirken, dass die \hyperref[itm:04-1]{personenbezogenen Daten} direkt
    von einem \hyperref[itm:04-7]{Verantwortlichen} einem anderen
-   \hyperref[itm:04-7]{Verantwortlichen} übermittelt werden, soweit dies technisch machbar ist.
+   \hyperref[itm:04-7]{Verantwortlichen} übermittelt werden, soweit dies technisch machbar ist.%
   \label{itm:20-2}
 
   \item Die Ausübung des Rechts nach \hyperref[itm:20-1]{Absatz 1} des vorliegenden Artikels lässt \hyperref[ch:17]
    {Artikel 17} unberührt. Dieses Recht gilt nicht für eine \hyperref[itm:04-2]{Verarbeitung}, die für die Wahrnehmung
    einer Aufgabe erforderlich ist, die im öffentlichen Interesse liegt oder in Ausübung öffentlicher Gewalt erfolgt,
    die dem
-   \hyperref[itm:04-7]{Verantwortlichen} übertragen wurde.
+   \hyperref[itm:04-7]{Verantwortlichen} übertragen wurde.%
   \label{itm:20-3}
 
   \item Das Recht gemäß \hyperref[itm:20-1]{Absatz 1} darf die Rechte und Freiheiten anderer Personen nicht
-   beeinträchtigen.
+   beeinträchtigen.%
   \label{itm:20-4}
 
 \end{enumerate}
