--- a/artikel/22.tex
+++ b/artikel/22.tex
@@ -9,25 +9,25 @@
   \item Die \hyperref[itm:04-1]{betroffene Person} hat das Recht, nicht einer ausschließlich auf einer
    automatisierten \hyperref[itm:04-2]{Verarbeitung} -- einschließlich \hyperref[itm:04-4]{Profiling} -- beruhenden
    Entscheidung unterworfen zu werden, die ihr gegenüber rechtliche Wirkung entfaltet oder sie in ähnlicher Weise
-   erheblich beeinträchtigt.
+   erheblich beeinträchtigt.%
   \label{itm:22-1}
 
-  \item \hyperref[itm:22-1]{Absatz 1} gilt nicht, wenn die Entscheidung
+  \item \hyperref[itm:22-1]{Absatz 1} gilt nicht, wenn die Entscheidung%
   \label{itm:22-2}
 
   \begin{enumerate}
   
     \item für den Abschluss oder die Erfüllung eines Vertrags zwischen der \hyperref[itm:04-1]{betroffenen Person} und
-     dem \hyperref[itm:04-7]{Verantwortlichen} erforderlich ist,
+     dem \hyperref[itm:04-7]{Verantwortlichen} erforderlich ist,%
     \label{itm:22-2a}
 
     \item aufgrund von Rechtsvorschriften der Union oder der Mitgliedstaaten, denen der \hyperref[itm:04-7]
      {Verantwortliche} unterliegt, zulässig ist und diese Rechtsvorschriften angemessene Maßnahmen zur Wahrung der
      Rechte und Freiheiten sowie der berechtigten Interessen der \hyperref[itm:04-1]{betroffenen Person} enthalten
-     oder
+     oder%
     \label{itm:22-2b}
 
-    \item mit ausdrücklicher \hyperref[itm:04-11]{Einwilligung} der \hyperref[itm:04-1]{betroffenen Person} erfolgt.
+    \item mit ausdrücklicher \hyperref[itm:04-11]{Einwilligung} der \hyperref[itm:04-1]{betroffenen Person} erfolgt.%
     \label{itm:22-2c}
 
   \end{enumerate}
@@ -36,14 +36,14 @@
    Fällen trifft der \hyperref[itm:04-7]{Verantwortliche} angemessene Maßnahmen, um die Rechte und Freiheiten sowie die
    berechtigten Interessen der \hyperref[itm:04-1]{betroffenen Person} zu wahren, wozu mindestens das Recht auf
    Erwirkung des Eingreifens einer Person seitens des \hyperref[itm:04-7]{Verantwortlichen}, auf Darlegung des eigenen
-   Standpunkts und auf Anfechtung der Entscheidung gehört.
+   Standpunkts und auf Anfechtung der Entscheidung gehört.%
   \label{itm:22-3}
 
   \item Entscheidungen nach \hyperref[itm:22-2]{Absatz 2} dürfen nicht auf besonderen Kategorien \hyperref[itm:04-1]
    {personenbezogener Daten} nach \hyperref[itm:09-1]{Artikel 9 Absatz 1} beruhen, sofern nicht \hyperref[itm:09-2]
    {Artikel 9 Absatz 2} Buchstabe
   \hyperref[itm:09-2a]{a} oder \hyperref[itm:09-2g]{g} gilt und angemessene Maßnahmen zum Schutz der Rechte und
-   Freiheiten sowie der berechtigten Interessen der \hyperref[itm:04-1]{betroffenen Person} getroffen wurden.
+   Freiheiten sowie der berechtigten Interessen der \hyperref[itm:04-1]{betroffenen Person} getroffen wurden.%
   \label{itm:22-4}
 
 \end{enumerate}
