--- a/artikel/23.tex
+++ b/artikel/23.tex
@@ -13,81 +13,81 @@
     dessen Bestimmungen den in den Artikeln \hyperref[ch:12]{12} bis \hyperref[ch:22]{22} vorgesehenen Rechten und
     Pflichten entsprechen, im Wege von Gesetzgebungsmaßnahmen beschränkt werden, sofern eine solche Beschränkung den
     Wesensgehalt der Grundrechte und Grundfreiheiten achtet und in einer demokratischen Gesellschaft eine notwendige
-    und verhältnismäßige Maßnahme darstellt, die Folgendes sicherstellt:
+    und verhältnismäßige Maßnahme darstellt, die Folgendes sicherstellt:%
   \label{itm:23-1}
 
   \begin{enumerate}
   
-    \item die nationale Sicherheit;
+    \item die nationale Sicherheit;%
     \label{itm:23-1a}
 
-    \item die Landesverteidigung;
+    \item die Landesverteidigung;%
     \label{itm:23-1b}
 
-    \item die öffentliche Sicherheit;
+    \item die öffentliche Sicherheit;%
     \label{itm:23-1c}
 
     \item die Verhütung, Ermittlung, Aufdeckung oder Verfolgung von Straftaten oder die Strafvollstreckung,
-     einschließlich des Schutzes vor und der Abwehr von Gefahren für die öffentliche Sicherheit;
+     einschließlich des Schutzes vor und der Abwehr von Gefahren für die öffentliche Sicherheit;%
     \label{itm:23-1d}
 
     \item den Schutz sonstiger wichtiger Ziele des allgemeinen öffentlichen Interesses der Union oder eines
      Mitgliedstaats, insbesondere eines wichtigen wirtschaftlichen oder finanziellen Interesses der Union oder eines
      Mitgliedstaats, etwa im Währungs-, Haushalts- und Steuerbereich sowie im Bereich der öffentlichen Gesundheit und
-     der sozialen Sicherheit;
+     der sozialen Sicherheit;%
     \label{itm:23-1e}
 
-    \item den Schutz der Unabhängigkeit der Justiz und den Schutz von Gerichtsverfahren;
+    \item den Schutz der Unabhängigkeit der Justiz und den Schutz von Gerichtsverfahren;%
     \label{itm:23-1f}
 
     \item die Verhütung, Aufdeckung, Ermittlung und Verfolgung von Verstößen gegen die berufsständischen Regeln
-     reglementierter Berufe;
+     reglementierter Berufe;%
     \label{itm:23-1g}
 
     \item Kontroll-, Überwachungs- und Ordnungsfunktionen, die dauernd oder zeitweise mit der Ausübung öffentlicher
      Gewalt für die unter den Buchstaben \hyperref[itm:23-1a]{a} bis \hyperref[itm:23-1e]{e} und \hyperref[itm:23-1g]
-     {g} genannten Zwecke verbunden sind;
+     {g} genannten Zwecke verbunden sind;%
     \label{itm:23-1h}
 
-    \item den Schutz der \hyperref[itm:04-1]{betroffenen Person} oder der Rechte und Freiheiten anderer Personen;
+    \item den Schutz der \hyperref[itm:04-1]{betroffenen Person} oder der Rechte und Freiheiten anderer Personen;%
     \label{itm:23-1i}
 
-    \item die Durchsetzung zivilrechtlicher Ansprüche.
+    \item die Durchsetzung zivilrechtlicher Ansprüche.%
     \label{itm:23-1j}
 
   \end{enumerate}
 
   \item Jede Gesetzgebungsmaßnahme im Sinne des \hyperref[itm:23-1]{Absatzes 1} muss insbesondere gegebenenfalls
-   spezifische Vorschriften enthalten zumindest in Bezug auf
+   spezifische Vorschriften enthalten zumindest in Bezug auf%
   \label{itm:23-2}
 
   \begin{enumerate}
   
-    \item die Zwecke der \hyperref[itm:04-2]{Verarbeitung} oder die Verarbeitungskategorien,
+    \item die Zwecke der \hyperref[itm:04-2]{Verarbeitung} oder die Verarbeitungskategorien,%
     \label{itm:23-2a}
 
-    \item die Kategorien \hyperref[itm:04-1]{personenbezogener Daten},
+    \item die Kategorien \hyperref[itm:04-1]{personenbezogener Daten},%
     \label{itm:23-2b}
 
-    \item den Umfang der vorgenommenen Beschränkungen,
+    \item den Umfang der vorgenommenen Beschränkungen,%
     \label{itm:23-2c}
 
-    \item die Garantien gegen Missbrauch oder unrechtmäßigen Zugang oder unrechtmäßige Übermittlung;
+    \item die Garantien gegen Missbrauch oder unrechtmäßigen Zugang oder unrechtmäßige Übermittlung;%
     \label{itm:23-2d}
 
     \item die Angaben zu dem \hyperref[itm:04-7]{Verantwortlichen} oder den Kategorien von \hyperref[itm:04-7]
-     {Verantwortlichen},
+     {Verantwortlichen},%
     \label{itm:23-2e}
 
     \item die jeweiligen Speicherfristen sowie die geltenden Garantien unter Berücksichtigung von Art, Umfang und
-     Zwecken der \hyperref[itm:04-2]{Verarbeitung} oder der Verarbeitungskategorien,
+     Zwecken der \hyperref[itm:04-2]{Verarbeitung} oder der Verarbeitungskategorien,%
     \label{itm:23-2f}
 
-    \item die Risiken für die Rechte und Freiheiten der \hyperref[itm:04-1]{betroffenen Personen} und
+    \item die Risiken für die Rechte und Freiheiten der \hyperref[itm:04-1]{betroffenen Personen} und%
     \label{itm:23-2g}
 
     \item das Recht der \hyperref[itm:04-1]{betroffenen Personen} auf Unterrichtung über die Beschränkung, sofern dies
-     nicht dem Zweck der Beschränkung abträglich ist.
+     nicht dem Zweck der Beschränkung abträglich ist.%
     \label{itm:23-2h}
 
   \end{enumerate}
