--- a/artikel/25.tex
+++ b/artikel/25.tex
@@ -16,7 +16,7 @@
     [itm:04-5]{Pseudonymisierung} --, die dafür ausgelegt sind, die Datenschutzgrundsätze wie etwa
     \hyperref[itm:05-1c]{Datenminimierung} wirksam umzusetzen und die notwendigen Garantien in die \hyperref[itm:04-2]
      {Verarbeitung} aufzunehmen, um den Anforderungen dieser Verordnung zu genügen und die Rechte der \hyperref
-     [itm:04-1]{betroffenen Personen} zu schützen.
+     [itm:04-1]{betroffenen Personen} zu schützen.%
   \label{itm:25-1}
 
   \item Der \hyperref[itm:04-7]{Verantwortliche} trifft geeignete technische und organisatorische Maßnahmen, die
@@ -26,12 +26,12 @@
    \hyperref[itm:04-1]{personenbezogenen Daten}, den Umfang ihrer \hyperref[itm:04-2]{Verarbeitung}, ihre Speicherfrist
     und ihre Zugänglichkeit. Solche Maßnahmen müssen insbesondere sicherstellen, dass \hyperref[itm:04-1]
     {personenbezogene Daten} durch Voreinstellungen nicht ohne Eingreifen der Person einer unbestimmten Zahl von
-    natürlichen Personen zugänglich gemacht werden.
+    natürlichen Personen zugänglich gemacht werden.%
   \label{itm:25-2}
 
   \item Ein genehmigtes Zertifizierungsverfahren gemäß \hyperref[ch:42]{Artikel 42} kann als Faktor herangezogen werden,
    um die Erfüllung der in den Absätzen \hyperref[itm:25-1]{1} und \hyperref[itm:25-2]{2} des vorliegenden Artikels
-   genannten Anforderungen nachzuweisen.
+   genannten Anforderungen nachzuweisen.%
   \label{itm:25-3}
 
 \end{enumerate}
