--- a/artikel/26.tex
+++ b/artikel/26.tex
@@ -13,18 +13,18 @@
    Informationspflichten gemäß den Artikeln \hyperref[ch:13]{13} und \hyperref[ch:14]{14} nachkommt, sofern und soweit
    die jeweiligen Aufgaben der \hyperref[itm:04-7]{Verantwortlichen} nicht durch Rechtsvorschriften der Union oder der
    Mitgliedstaaten, denen die \hyperref[itm:04-7]{Verantwortlichen} unterliegen, festgelegt sind. In der Vereinbarung
-   kann eine Anlaufstelle für die \hyperref[itm:04-1]{betroffenen Personen} angegeben werden.
+   kann eine Anlaufstelle für die \hyperref[itm:04-1]{betroffenen Personen} angegeben werden.%
   \label{itm:26-1}
 
   \item Die Vereinbarung gemäß \hyperref[itm:26-1]{Absatz 1} muss die jeweiligen tatsächlichen Funktionen und
    Beziehungen der gemeinsam \hyperref[itm:04-7]{Verantwortlichen} gegenüber \hyperref[itm:04-1]{betroffenen Personen}
    gebührend widerspiegeln. Das wesentliche der Vereinbarung wird der \hyperref[itm:04-1]{betroffenen Person} zur
-   Verfügung gestellt.
+   Verfügung gestellt.%
   \label{itm:26-2}
 
   \item Ungeachtet der Einzelheiten der Vereinbarung gemäß \hyperref[itm:26-1]{Absatz 1} kann die \hyperref[itm:04-1]
    {betroffene Person} ihre Rechte im Rahmen dieser Verordnung bei und gegenüber jedem einzelnen der \hyperref
-   [itm:04-7]{Verantwortlichen} geltend machen.
+   [itm:04-7]{Verantwortlichen} geltend machen.%
   \label{itm:26-3}
 
 \end{enumerate}
