--- a/artikel/27.tex
+++ b/artikel/27.tex
@@ -8,10 +8,10 @@
 
   \item In den Fällen gemäß \hyperref[itm:03-2]{Artikel 3 Absatz 2} benennt der \hyperref[itm:04-7]
    {Verantwortliche} oder der
-   \hyperref[itm:04-8]{Auftragsverarbeiter} schriftlich einen \hyperref[itm:04-17]{Vertreter} in der Union.
+   \hyperref[itm:04-8]{Auftragsverarbeiter} schriftlich einen \hyperref[itm:04-17]{Vertreter} in der Union.%
   \label{itm:27-1}
 
-  \item Die Pflicht gemäß \hyperref[itm:27-1]{Absatz 1 des vorliegenden Artikels} gilt nicht für
+  \item Die Pflicht gemäß \hyperref[itm:27-1]{Absatz 1 des vorliegenden Artikels} gilt nicht für%
   \label{itm:27-2}
 
   \begin{enumerate}
@@ -22,10 +22,10 @@
      strafrechtliche Verurteilungen und Straftaten im Sinne des \hyperref[ch:10]{Artikels 10} einschließt und unter
      Berücksichtigung der Art, der Umstände, des Umfangs und der Zwecke der \hyperref[itm:04-2]
      {Verarbeitung} voraussichtlich nicht zu einem Risiko für die Rechte und Freiheiten natürlicher Personen führt,
-     oder
+     oder%
     \label{itm:27-2a}
 
-    \item Behörden oder öffentliche Stellen.
+    \item Behörden oder öffentliche Stellen.%
     \label{itm:27-2b}
 
   \end{enumerate}
@@ -33,19 +33,19 @@
   \item Der \hyperref[itm:04-17]{Vertreter} muss in einem der Mitgliedstaaten niedergelassen sein, in denen
    die \hyperref[itm:04-1]{betroffenen Personen}, deren
    \hyperref[itm:04-1]{personenbezogene Daten} im Zusammenhang mit den ihnen angebotenen Waren oder Dienstleistungen
-    verarbeitet werden oder deren Verhalten beobachtet wird, sich befinden.
+    verarbeitet werden oder deren Verhalten beobachtet wird, sich befinden.%
   \label{itm:27-3}
 
   \item Der \hyperref[itm:04-17]{Vertreter} wird durch den \hyperref[itm:04-7]{Verantwortlichen} oder den \hyperref
    [itm:04-8]{Auftragsverarbeiter} beauftragt, zusätzlich zu diesem oder an seiner Stelle insbesondere für \hyperref
    [itm:04-21]{Aufsichtsbehörden} und \hyperref[itm:04-1]{betroffene Personen} bei sämtlichen Fragen im Zusammenhang
    mit der \hyperref[itm:04-2]{Verarbeitung} zur Gewährleistung der Einhaltung dieser Verordnung als Anlaufstelle zu
-   dienen.
+   dienen.%
   \label{itm:27-4}
 
   \item Die Benennung eines \hyperref[itm:04-17]{Vertreters} durch den \hyperref[itm:04-7]{Verantwortlichen} oder
    den \hyperref[itm:04-8]{Auftragsverarbeiter} erfolgt unbeschadet etwaiger rechtlicher Schritte gegen den \hyperref
-   [itm:04-7]{Verantwortlichen} oder den \hyperref[itm:04-8]{Auftragsverarbeiter} selbst.
+   [itm:04-7]{Verantwortlichen} oder den \hyperref[itm:04-8]{Auftragsverarbeiter} selbst.%
   \label{itm:27-5}
 
 \end{enumerate}
