--- a/artikel/30.tex
+++ b/artikel/30.tex
@@ -8,46 +8,46 @@
 
   \item Jeder \hyperref[itm:04-7]{Verantwortliche} und gegebenenfalls sein \hyperref[itm:04-17]{Vertreter} führen ein
    Verzeichnis aller Verarbeitungstätigkeiten, die ihrer Zuständigkeit unterliegen. Dieses Verzeichnis enthält
-   sämtliche folgenden Angaben:
+   sämtliche folgenden Angaben:%
   \label{itm:30-1}
 
   \begin{enumerate}
   
     \item den Namen und die Kontaktdaten des \hyperref[itm:04-7]{Verantwortlichen} und gegebenenfalls des gemeinsam mit
      ihm \hyperref[itm:04-7]{Verantwortlichen}, des \hyperref[itm:04-17]{Vertreters} des \hyperref[itm:04-7]
-     {Verantwortlichen} sowie eines etwaigen Datenschutzbeauftragten;
+     {Verantwortlichen} sowie eines etwaigen Datenschutzbeauftragten;%
     \label{itm:30-1a}
 
-    \item die Zwecke der \hyperref[itm:04-2]{Verarbeitung};
+    \item die Zwecke der \hyperref[itm:04-2]{Verarbeitung};%
     \label{itm:30-1b}
 
     \item eine Beschreibung der Kategorien \hyperref[itm:04-1]{betroffener Personen} und der Kategorien \hyperref
-     [itm:04-1]{personenbezogener Daten};
+     [itm:04-1]{personenbezogener Daten};%
     \label{itm:30-1c}
 
     \item die Kategorien von \hyperref[itm:04-9]{Empfängern}, gegenüber denen die \hyperref[itm:04-1]
      {personenbezogenen Daten} offengelegt worden sind oder noch offengelegt werden, einschließlich \hyperref[itm:04-9]
-     {Empfänger} in Drittländern oder internationalen Organisationen;
+     {Empfänger} in Drittländern oder internationalen Organisationen;%
     \label{itm:30-1d}
 
     \item gegebenenfalls Übermittlungen von \hyperref[itm:04-1]{personenbezogenen Daten} an ein Drittland oder an
      eine \hyperref[itm:04-29]{internationale Organisation}, einschließlich der Angabe des betreffenden Drittlands oder
      der betreffenden internationalen Organisation, sowie bei den in \hyperref[itm:49-1-2]{Artikel 49 Absatz 1
-     Unterabsatz 2} genannten Datenübermittlungen die Dokumentierung geeigneter Garantien;
+     Unterabsatz 2} genannten Datenübermittlungen die Dokumentierung geeigneter Garantien;%
     \label{itm:30-1e}
 
-    \item wenn möglich, die vorgesehenen Fristen für die Löschung der verschiedenen Datenkategorien;
+    \item wenn möglich, die vorgesehenen Fristen für die Löschung der verschiedenen Datenkategorien;%
     \label{itm:30-1f}
 
     \item wenn möglich, eine allgemeine Beschreibung der technischen und organisatorischen Maßnahmen gemäß
-     \hyperref[itm:32-1]{Artikel 32 Absatz 1}.
+     \hyperref[itm:32-1]{Artikel 32 Absatz 1}.%
     \label{itm:30-1g}
 
   \end{enumerate}
 
   \item Jeder \hyperref[itm:04-8]{Auftragsverarbeiter} und gegebenenfalls sein \hyperref[itm:04-17]{Vertreter} führen
    ein Verzeichnis zu allen Kategorien von im Auftrag eines \hyperref[itm:04-7]{Verantwortlichen} durchgeführten
-   Tätigkeiten der \hyperref[itm:04-2]{Verarbeitung}, das Folgendes enthält:
+   Tätigkeiten der \hyperref[itm:04-2]{Verarbeitung}, das Folgendes enthält:%
   \label{itm:30-2}
 
   \begin{enumerate}
@@ -57,33 +57,33 @@
      \hyperref[itm:04-7]{Verantwortlichen}, in dessen Auftrag der \hyperref[itm:04-8]{Auftragsverarbeiter} tätig ist,
       sowie gegebenenfalls des \hyperref[itm:04-17]{Vertreters} des
      \hyperref[itm:04-7]{Verantwortlichen} oder des \hyperref[itm:04-8]{Auftragsverarbeiters} und eines etwaigen
-      Datenschutzbeauftragten;
+      Datenschutzbeauftragten;%
     \label{itm:30-2a}
 
     \item die Kategorien von \hyperref[itm:04-2]{Verarbeitungen}, die im Auftrag jedes \hyperref[itm:04-7]
-     {Verantwortlichen} durchgeführt werden;
+     {Verantwortlichen} durchgeführt werden;%
     \label{itm:30-2b}
 
     \item gegebenenfalls Übermittlungen von \hyperref[itm:04-1]{personenbezogenen Daten} an ein Drittland oder an
      eine \hyperref[itm:04-29]{internationale Organisation}, einschließlich der Angabe des betreffenden Drittlands oder
      der betreffenden internationalen Organisation, sowie bei den in \hyperref[itm:49-1-2]{Artikel 49 Absatz 1
-     Unterabsatz 2} genannten Datenübermittlungen die Dokumentierung geeigneter Garantien;
+     Unterabsatz 2} genannten Datenübermittlungen die Dokumentierung geeigneter Garantien;%
     \label{itm:30-2c}
 
     \item wenn möglich, eine allgemeine Beschreibung der technischen und organisatorischen Maßnahmen gemäß \hyperref
-     [itm:32-1]{Artikel 32 Absatz 1}.
+     [itm:32-1]{Artikel 32 Absatz 1}.%
     \label{itm:30-2d}
 
   \end{enumerate}
 
   \item Das in den Absätzen \hyperref[itm:30-1]{1} und \hyperref[itm:30-2]{2} genannte Verzeichnis ist schriftlich zu
-   führen, was auch in einem elektronischen Format erfolgen kann.
+   führen, was auch in einem elektronischen Format erfolgen kann.%
   \label{itm:30-3}
 
   \item Der \hyperref[itm:04-7]{Verantwortliche} oder der \hyperref[itm:04-8]{Auftragsverarbeiter} sowie gegebenenfalls
    der \hyperref[itm:04-17]{Vertreter} des \hyperref[itm:04-7]{Verantwortlichen} oder des \hyperref[itm:04-8]
    {Auftragsverarbeiters} stellen der \hyperref[itm:04-21]{Aufsichtsbehörde} das Verzeichnis auf Anfrage zur
-   Verfügung.
+   Verfügung.%
   \label{itm:30-4}
 
   \item Die in den Absätzen \hyperref[itm:30-1]{1} und \hyperref[itm:30-2]{2} genannten Pflichten gelten nicht für
@@ -92,7 +92,7 @@
     der \hyperref[itm:04-1]{betroffenen Personen}, die \hyperref[itm:04-2]{Verarbeitung} erfolgt nicht nur gelegentlich
     oder es erfolgt eine \hyperref[itm:04-2]{Verarbeitung} besonderer Datenkategorien gemäß \hyperref[itm:09-1]
     {Artikel 9 Absatz 1} bzw. die \hyperref[itm:04-2]{Verarbeitung} von \hyperref[itm:04-1]{personenbezogenen Daten}
-    über strafrechtliche Verurteilungen und Straftaten im Sinne des \hyperref[ch:10]{Artikels 10}.
+    über strafrechtliche Verurteilungen und Straftaten im Sinne des \hyperref[ch:10]{Artikels 10}.%
 
 
   \label{itm:30-5}
