--- a/artikel/32.tex
+++ b/artikel/32.tex
@@ -11,25 +11,25 @@
    Schwere des Risikos für die Rechte und Freiheiten natürlicher Personen treffen der \hyperref[itm:04-7]
    {Verantwortliche} und der \hyperref[itm:04-8]{Auftragsverarbeiter} geeignete technische und organisatorische
    Maßnahmen, um ein dem Risiko angemessenes Schutzniveau zu gewährleisten; diese Maßnahmen schließen gegebenenfalls
-   unter anderem Folgendes ein:
+   unter anderem Folgendes ein:%
   \label{itm:32-1}
 
   \begin{enumerate}
   
-    \item die \hyperref[itm:04-5]{Pseudonymisierung} und Verschlüsselung \hyperref[itm:04-1]{personenbezogener Daten};
+    \item die \hyperref[itm:04-5]{Pseudonymisierung} und Verschlüsselung \hyperref[itm:04-1]{personenbezogener Daten};%
     \label{itm:32-1a}
 
     \item die Fähigkeit, die \hyperref[itm:05-1f]{Vertraulichkeit}, \hyperref[itm:05-1f]{Integrität}, Verfügbarkeit und
      Belastbarkeit der Systeme und Dienste im Zusammenhang mit der \hyperref[itm:04-2]{Verarbeitung} auf Dauer
-     sicherzustellen;
+     sicherzustellen;%
     \label{itm:32-1b}
 
     \item die Fähigkeit, die Verfügbarkeit der \hyperref[itm:04-1]{personenbezogenen Daten} und den Zugang zu ihnen bei
-     einem physischen oder technischen Zwischenfall rasch wiederherzustellen;
+     einem physischen oder technischen Zwischenfall rasch wiederherzustellen;%
     \label{itm:32-1c}
 
     \item ein Verfahren zur regelmäßigen Überprüfung, Bewertung und Evaluierung der Wirksamkeit der technischen und
-     organisatorischen Maßnahmen zur Gewährleistung der Sicherheit der \hyperref[itm:04-2]{Verarbeitung}.
+     organisatorischen Maßnahmen zur Gewährleistung der Sicherheit der \hyperref[itm:04-2]{Verarbeitung}.%
     \label{itm:32-1d}
 
   \end{enumerate}
@@ -38,12 +38,12 @@
    der
    \hyperref[itm:04-2]{Verarbeitung} verbunden sind, insbesondere durch -- ob unbeabsichtigt oder unrechtmäßig --
     Vernichtung, Verlust, Veränderung oder unbefugte Offenlegung von beziehungsweise unbefugten Zugang zu \hyperref
-    [itm:04-1]{personenbezogenen Daten}, die übermittelt, gespeichert oder auf andere Weise verarbeitet wurden.
+    [itm:04-1]{personenbezogenen Daten}, die übermittelt, gespeichert oder auf andere Weise verarbeitet wurden.%
   \label{itm:32-2}
 
   \item Die Einhaltung genehmigter Verhaltensregeln gemäß \hyperref[ch:40]{Artikel 40} oder eines genehmigten
    Zertifizierungsverfahrens gemäß \hyperref[ch:42]{Artikel 42} kann als Faktor herangezogen werden, um die Erfüllung
-   der in \hyperref[itm:32-1]{Absatz 1} des vorliegenden Artikels genannten Anforderungen nachzuweisen.
+   der in \hyperref[itm:32-1]{Absatz 1} des vorliegenden Artikels genannten Anforderungen nachzuweisen.%
   \label{itm:32-3}
 
   \item Der \hyperref[itm:04-7]{Verantwortliche} und der \hyperref[itm:04-8]{Auftragsverarbeiter} unternehmen Schritte,
@@ -51,7 +51,7 @@
    {personenbezogenen Daten} haben, diese nur auf Anweisung des
    \hyperref[itm:04-7]{Verantwortlichen} verarbeiten, es sei denn, sie sind nach dem Recht der Union oder der
     Mitgliedstaaten zur
-   \hyperref[itm:04-2]{Verarbeitung} verpflichtet.
+   \hyperref[itm:04-2]{Verarbeitung} verpflichtet.%
   \label{itm:32-4}
 
 \end{enumerate}
