--- a/artikel/34.tex
+++ b/artikel/34.tex
@@ -8,18 +8,18 @@
 
   \item Hat die \hyperref[itm:04-12]{Verletzung des Schutzes personenbezogener Daten} voraussichtlich ein hohes Risiko
    für die persönlichen Rechte und Freiheiten natürlicher Personen zur Folge, so benachrichtigt der \hyperref[itm:04-7]
-   {Verantwortliche} die \hyperref[itm:04-1]{betroffene Person} unverzüglich von der Verletzung.
+   {Verantwortliche} die \hyperref[itm:04-1]{betroffene Person} unverzüglich von der Verletzung.%
   \label{itm:34-1}
 
   \item Die in \hyperref[itm:34-1]{Absatz 1} genannte Benachrichtigung der \hyperref[itm:04-1]{betroffenen Person}
    beschreibt in klarer und einfacher Sprache die Art der \hyperref[itm:04-12]{Verletzung des Schutzes
    personenbezogener Daten} und enthält zumindest die in
    \hyperref[itm:33-3]{Artikel 33 Absatz 3} Buchstaben \hyperref[itm:33-3b]{b}, \hyperref[itm:33-3c]{c} und \hyperref
-    [itm:33-3d]{d} genannten Informationen und Maßnahmen.
+    [itm:33-3d]{d} genannten Informationen und Maßnahmen.%
   \label{itm:34-2}
 
   \item Die Benachrichtigung der \hyperref[itm:04-1]{betroffenen Person} gemäß \hyperref[itm:34-1]{Absatz 1} ist nicht
-   erforderlich, wenn eine der folgenden Bedingungen erfüllt ist:
+   erforderlich, wenn eine der folgenden Bedingungen erfüllt ist:%
   \label{itm:34-3}
 
   \begin{enumerate}
@@ -28,17 +28,17 @@
      getroffen hat und diese Vorkehrungen wurden auf die von der Verletzung betroffenen \hyperref[itm:04-1]
      {personenbezogenen Daten} angewandt, insbesondere solche, durch die die \hyperref[itm:04-1]
      {personenbezogenen Daten} für alle Personen, die nicht zum Zugang zu den \hyperref[itm:04-1]
-     {personenbezogenen Daten} befugt sind, unzugänglich gemacht werden, etwa durch Verschlüsselung;
+     {personenbezogenen Daten} befugt sind, unzugänglich gemacht werden, etwa durch Verschlüsselung;%
     \label{itm:34-3a}
 
     \item der \hyperref[itm:04-7]{Verantwortliche} hat durch nachfolgende Maßnahmen sichergestellt hat, dass das hohe
      Risiko für die Rechte und Freiheiten der \hyperref[itm:04-1]{betroffenen Personen} gemäß \hyperref[itm:34-1]
-     {Absatz 1} aller Wahrscheinlichkeit nach nicht mehr besteht;
+     {Absatz 1} aller Wahrscheinlichkeit nach nicht mehr besteht;%
     \label{itm:34-3b}
 
     \item die Benachrichtigung wäre mit einem unverhältnismäßigen Aufwand verbunden. In diesem Fall hat stattdessen eine
      öffentliche Bekanntmachung oder eine ähnliche Maßnahme zu erfolgen, durch die die \hyperref[itm:04-1]
-     {betroffenen Personen} vergleichbar wirksam informiert werden.
+     {betroffenen Personen} vergleichbar wirksam informiert werden.%
     \label{itm:34-3c}
 
   \end{enumerate}
@@ -48,7 +48,7 @@
    [itm:04-21]{Aufsichtsbehörde} unter Berücksichtigung der Wahrscheinlichkeit, mit der die
    \hyperref[itm:04-12]{Verletzung des Schutzes personenbezogener Daten} zu einem hohen Risiko führt, von dem \hyperref
     [itm:04-7]{Verantwortlichen} verlangen, dies nachzuholen, oder sie kann mit einem Beschluss feststellen, dass
-    bestimmte der in \hyperref[itm:34-3]{Absatz 3} genannten Voraussetzungen erfüllt sind.
+    bestimmte der in \hyperref[itm:34-3]{Absatz 3} genannten Voraussetzungen erfüllt sind.%
   \label{itm:34-4}
 
 \end{enumerate}
