--- a/artikel/36.tex
+++ b/artikel/36.tex
@@ -9,7 +9,7 @@
   \item Der \hyperref[itm:04-7]{Verantwortliche} konsultiert vor der \hyperref[itm:04-2]{Verarbeitung} die \hyperref
    [itm:04-21]{Aufsichtsbehörde}, wenn aus einer Datenschutz-Folgenabschätzung gemäß \hyperref[ch:35]{Artikel 35}
    hervorgeht, dass die \hyperref[itm:04-2]{Verarbeitung} ein hohes Risiko zur Folge hätte, sofern der \hyperref
-   [itm:04-7]{Verantwortliche} keine Maßnahmen zur Eindämmung des Risikos trifft.
+   [itm:04-7]{Verantwortliche} keine Maßnahmen zur Eindämmung des Risikos trifft.%
   \label{itm:36-1}
 
   \item Falls die \hyperref[itm:04-21]{Aufsichtsbehörde} der Auffassung ist, dass die geplante \hyperref[itm:04-2]
@@ -24,11 +24,11 @@
    \hyperref[itm:04-8]{Auftragsverarbeiter} über eine solche Fristverlängerung innerhalb eines Monats nach Eingang des
     Antrags auf Konsultation zusammen mit den Gründen für die Verzögerung. Diese Fristen können ausgesetzt werden, bis
     die
-   \hyperref[itm:04-21]{Aufsichtsbehörde} die für die Zwecke der Konsultation angeforderten Informationen erhalten hat.
+   \hyperref[itm:04-21]{Aufsichtsbehörde} die für die Zwecke der Konsultation angeforderten Informationen erhalten hat.%
   \label{itm:36-2}
 
   \item Der \hyperref[itm:04-7]{Verantwortliche} stellt der \hyperref[itm:04-21]{Aufsichtsbehörde} bei einer
-   Konsultation gemäß \hyperref[itm:36-1]{Absatz 1} folgende Informationen zur Verfügung:
+   Konsultation gemäß \hyperref[itm:36-1]{Absatz 1} folgende Informationen zur Verfügung:%
   \label{itm:36-3}
 
   \begin{enumerate}
@@ -36,37 +36,37 @@
     \item gegebenenfalls Angaben zu den jeweiligen Zuständigkeiten des \hyperref[itm:04-7]{Verantwortlichen}, der
      gemeinsam \hyperref[itm:04-7]{Verantwortlichen} und der an der \hyperref[itm:04-2]
      {Verarbeitung} beteiligten \hyperref[itm:04-8]{Auftragsverarbeiter}, insbesondere bei einer \hyperref[itm:04-2]
-     {Verarbeitung} innerhalb einer Gruppe von \hyperref[itm:04-18]{Unternehmen};
+     {Verarbeitung} innerhalb einer Gruppe von \hyperref[itm:04-18]{Unternehmen};%
     \label{itm:36-3a}
 
-    \item die Zwecke und die Mittel der beabsichtigten \hyperref[itm:04-2]{Verarbeitung};
+    \item die Zwecke und die Mittel der beabsichtigten \hyperref[itm:04-2]{Verarbeitung};%
     \label{itm:36-3b}
 
     \item die zum Schutz der Rechte und Freiheiten der \hyperref[itm:04-1]{betroffenen Personen} gemäß dieser Verordnung
-     vorgesehenen Maßnahmen und Garantien;
+     vorgesehenen Maßnahmen und Garantien;%
     \label{itm:36-3c}
 
-    \item gegebenenfalls die Kontaktdaten des Datenschutzbeauftragten;
+    \item gegebenenfalls die Kontaktdaten des Datenschutzbeauftragten;%
     \label{itm:36-3d}
 
-    \item die Datenschutz-Folgenabschätzung gemäß \hyperref[ch:35]{Artikel 35} und
+    \item die Datenschutz-Folgenabschätzung gemäß \hyperref[ch:35]{Artikel 35} und%
     \label{itm:36-3e}
 
-    \item alle sonstigen von der \hyperref[itm:04-21]{Aufsichtsbehörde} angeforderten Informationen.
+    \item alle sonstigen von der \hyperref[itm:04-21]{Aufsichtsbehörde} angeforderten Informationen.%
     \label{itm:36-3f}
 
   \end{enumerate}
 
   \item Die Mitgliedstaaten konsultieren die \hyperref[itm:04-21]{Aufsichtsbehörde} bei der Ausarbeitung eines
    Vorschlags für von einem nationalen Parlament zu erlassende Gesetzgebungsmaßnahmen oder von auf solchen
-   Gesetzgebungsmaßnahmen basierenden Regelungsmaßnahmen, die die \hyperref[itm:04-2]{Verarbeitung} betreffen.
+   Gesetzgebungsmaßnahmen basierenden Regelungsmaßnahmen, die die \hyperref[itm:04-2]{Verarbeitung} betreffen.%
   \label{itm:36-4}
 
   \item Ungeachtet des \hyperref[itm:36-1]{Absatzes 1} können \hyperref[itm:04-7]{Verantwortliche} durch das Recht der
    Mitgliedstaaten verpflichtet werden, bei der \hyperref[itm:04-2]{Verarbeitung} zur Erfüllung einer im öffentlichen
    Interesse liegenden Aufgabe, einschließlich der \hyperref[itm:04-2]{Verarbeitung} zu Zwecken der sozialen Sicherheit
    und der öffentlichen Gesundheit, die
-   \hyperref[itm:04-21]{Aufsichtsbehörde} zu konsultieren und deren vorherige Genehmigung einzuholen.
+   \hyperref[itm:04-21]{Aufsichtsbehörde} zu konsultieren und deren vorherige Genehmigung einzuholen.%
   \label{itm:36-5}
    
 \end{enumerate}
