--- a/artikel/42.tex
+++ b/artikel/42.tex
@@ -12,7 +12,7 @@
    von
    \hyperref[itm:04-7]{Verantwortlichen} oder \hyperref[itm:04-8]{Auftragsverarbeitern} eingehalten wird. Den besonderen
     Bedürfnissen von Kleinstunternehmen sowie kleinen und mittleren \hyperref[itm:04-18]{Unternehmen} wird Rechnung
-    getragen.
+    getragen.%
   \label{itm:42-1}
 
   \item Zusätzlich zur Einhaltung durch die unter diese Verordnung fallenden \hyperref[itm:04-7]
@@ -26,10 +26,10 @@
     {Verantwortlichen} oder \hyperref[itm:04-8]{Auftragsverarbeiter} gehen mittels vertraglicher oder sonstiger
     rechtlich bindender Instrumente die verbindliche und durchsetzbare Verpflichtung ein, diese geeigneten Garantien
     anzuwenden, auch im Hinblick auf die Rechte der
-   \hyperref[itm:04-1]{betroffenen Personen}.
+   \hyperref[itm:04-1]{betroffenen Personen}.%
   \label{itm:42-2}
 
-  \item Die Zertifizierung muss freiwillig und über ein transparentes Verfahren zugänglich sein.
+  \item Die Zertifizierung muss freiwillig und über ein transparentes Verfahren zugänglich sein.%
   \label{itm:42-3}
 
   \item Eine Zertifizierung gemäß diesem Artikel mindert nicht die Verantwortung des \hyperref[itm:04-7]
@@ -37,21 +37,21 @@
    \hyperref[itm:04-8]{Auftragsverarbeiters} für die Einhaltung dieser Verordnung und berührt nicht die Aufgaben und
     Befugnisse der
    \hyperref[itm:04-21]{Aufsichtsbehörden}, die gemäß Artikel \hyperref[ch:55]{55} oder \hyperref[ch:56]{56} zuständig
-    sind.
+    sind.%
   \label{itm:42-4}
 
   \item Eine Zertifizierung nach diesem Artikel wird durch die Zertifizierungsstellen nach \hyperref[ch:43]{Artikel 43}
    oder durch die zuständige \hyperref[itm:04-21]{Aufsichtsbehörde} anhand der von dieser zuständigen \hyperref
    [itm:04-21]{Aufsichtsbehörde} gemäß \hyperref[itm:58-3]{Artikel 58 Absatz 3} oder -- gemäß \hyperref[ch:63]
    {Artikel 63} -- durch den Ausschuss genehmigten Kriterien erteilt. Werden die Kriterien vom Ausschuss genehmigt,
-   kann dies zu einer gemeinsamen Zertifizierung, dem Europäischen Datenschutzsiegel, führen.
+   kann dies zu einer gemeinsamen Zertifizierung, dem Europäischen Datenschutzsiegel, führen.%
   \label{itm:42-5}
 
   \item Der \hyperref[itm:04-7]{Verantwortliche} oder der \hyperref[itm:04-8]{Auftragsverarbeiter}, der die von ihm
    durchgeführte \hyperref[itm:04-2]{Verarbeitung} dem Zertifizierungsverfahren unterwirft, stellt der
    Zertifizierungsstelle nach \hyperref[ch:43]{Artikel 43} oder gegebenenfalls der zuständigen \hyperref[itm:04-21]
    {Aufsichtsbehörde} alle für die Durchführung des Zertifizierungsverfahrens erforderlichen Informationen zur
-   Verfügung und gewährt ihr den in diesem Zusammenhang erforderlichen Zugang zu seinen Verarbeitungstätigkeiten.
+   Verfügung und gewährt ihr den in diesem Zusammenhang erforderlichen Zugang zu seinen Verarbeitungstätigkeiten.%
   \label{itm:42-6}
 
   \item Die Zertifizierung wird einem \hyperref[itm:04-7]{Verantwortlichen} oder einem \hyperref[itm:04-8]
@@ -59,11 +59,11 @@
    werden, sofern die einschlägigen Kriterien weiterhin erfüllt werden. Die Zertifizierung wird gegebenenfalls
    durch die Zertifizierungsstellen nach \hyperref[ch:43]{Artikel 43} oder durch die zuständige \hyperref[itm:04-21]
    {Aufsichtsbehörde} widerrufen, wenn die Kriterien für die Zertifizierung nicht oder nicht mehr erfüllt
-   werden.
+   werden.%
   \label{itm:42-7}
 
   \item Der Ausschuss nimmt alle Zertifizierungsverfahren und Datenschutzsiegel und -prüfzeichen in ein Register auf und
-   veröffentlicht sie in geeigneter Weise.
+   veröffentlicht sie in geeigneter Weise.%
   \label{itm:42-8}
 
 \end{enumerate}
