--- a/artikel/43.tex
+++ b/artikel/43.tex
@@ -11,50 +11,50 @@
    geeignete Fachwissen hinsichtlich des Datenschutzes verfügen, nach Unterrichtung der \hyperref[itm:04-21]
    {Aufsichtsbehörde} -- damit diese erforderlichenfalls von ihren Befugnissen gemäß \hyperref[itm:58-2h]{Artikel 58
    Absatz 2 Buchstabe h} Gebrauch machen kann -- die Zertifizierung. Die Mitgliedstaaten stellen sicher, dass diese
-   Zertifizierungsstellen von einer oder beiden der folgenden Stellen akkreditiert werden:
+   Zertifizierungsstellen von einer oder beiden der folgenden Stellen akkreditiert werden:%
   \label{itm:43-1}
 
   \begin{enumerate}
   
     \item der gemäß Artikel \hyperref[ch:55]{55} oder \hyperref[ch:56]{56} zuständigen \hyperref[itm:04-21]
-     {Aufsichtsbehörde};
+     {Aufsichtsbehörde};%
     \label{itm:43-1a}
 
     \item der nationalen Akkreditierungsstelle, die gemäß der Verordnung (EG) Nr. 765/2008 des Europäischen Parlaments
      und des Rate im Einklang mit EN-ISO/IEC 17065/2012 und mit den zusätzlichen von der gemäß Artikel \hyperref[ch:55]
      {55} oder \hyperref[ch:56]{56} zuständigen \hyperref[itm:04-21]{Aufsichtsbehörde} festgelegten Anforderungen
-     benannt wurde.\todo{Verordnungen nachschlagen}
+     benannt wurde.\todo{Verordnungen nachschlagen}%
     \label{itm:43-1b}
 
   \end{enumerate}
 
   \item Zertifizierungsstellen nach \hyperref[itm:43-1]{Absatz 1} dürfen nur dann gemäß dem genannten Absatz
-   akkreditiert werden, wenn sie
+   akkreditiert werden, wenn sie%
   \label{itm:43-2}
 
   \begin{enumerate}
   
     \item ihre Unabhängigkeit und ihr Fachwissen hinsichtlich des Gegenstands der Zertifizierung zur Zufriedenheit der
-     zuständigen \hyperref[itm:04-21]{Aufsichtsbehörde} nachgewiesen haben;
+     zuständigen \hyperref[itm:04-21]{Aufsichtsbehörde} nachgewiesen haben;%
     \label{itm:43-2a}
 
     \item sich verpflichtet haben, die Kriterien nach \hyperref[itm:42-5]{Artikel 42 Absatz 5}, die von der gemäß
      Artikel \hyperref[ch:55]{55} oder \hyperref[ch:56]{56} zuständigen \hyperref[itm:04-21]{Aufsichtsbehörde} oder --
-     gemäß \hyperref[ch:63]{Artikel 63} -- von dem Ausschuss genehmigt wurden, einzuhalten;
+     gemäß \hyperref[ch:63]{Artikel 63} -- von dem Ausschuss genehmigt wurden, einzuhalten;%
     \label{itm:43-2b}
 
     \item Verfahren für die Erteilung, die regelmäßige Überprüfung und den Widerruf der Datenschutzzertifizierung sowie
-     der Datenschutzsiegel und -prüfzeichen festgelegt haben;
+     der Datenschutzsiegel und -prüfzeichen festgelegt haben;%
     \label{itm:43-2c}
 
     \item Verfahren und Strukturen festgelegt haben, mit denen sie Beschwerden über Verletzungen der Zertifizierung oder
      die Art und Weise, in der die Zertifizierung von dem \hyperref[itm:04-7]{Verantwortlichen} oder dem \hyperref
      [itm:04-8]{Auftragsverarbeiter} umgesetzt wird oder wurde, nachgehen und diese Verfahren und Strukturen
-     für \hyperref[itm:04-1]{betroffene Personen} und die Öffentlichkeit transparent machen, und
+     für \hyperref[itm:04-1]{betroffene Personen} und die Öffentlichkeit transparent machen, und%
     \label{itm:43-2d}
 
     \item zur Zufriedenheit der zuständigen \hyperref[itm:04-21]{Aufsichtsbehörde} nachgewiesen haben, dass ihre
-     Aufgaben und Pflichten nicht zu einem Interessenkonflikt führen.
+     Aufgaben und Pflichten nicht zu einem Interessenkonflikt führen.%
     \label{itm:43-2e}
 
   \end{enumerate}
@@ -65,7 +65,7 @@
    Ausschuss genehmigt wurden. Im Fall einer Akkreditierung nach \hyperref[itm:43-1b]{Absatz 1 Buchstabe b des
    vorliegenden Artikels} ergänzen diese Anforderungen diejenigen, die in der Verordnung (EG) Nr. 765/2008\todo
    {Verordnung nachschlagen} und in den technischen Vorschriften, in denen die Methoden und Verfahren der
-   Zertifizierungsstellen beschrieben werden, vorgesehen sind.
+   Zertifizierungsstellen beschrieben werden, vorgesehen sind.%
   \label{itm:43-3}
 
   \item Die Zertifizierungsstellen nach \hyperref[itm:43-1]{Absatz 1} sind unbeschadet der Verantwortung, die der
@@ -73,35 +73,35 @@
     Verordnung hat, für die angemessene Bewertung, die der Zertifizierung oder dem Widerruf einer Zertifizierung
     zugrunde liegt, verantwortlich. Die Akkreditierung wird für eine Höchstdauer von fünf Jahren erteilt und kann unter
     denselben Bedingungen verlängert werden, sofern die Zertifizierungsstelle die Anforderungen dieses Artikels
-    erfüllt.
+    erfüllt.%
   \label{itm:43-4}
 
   \item Die Zertifizierungsstellen nach \hyperref[itm:43-1]{Absatz 1} teilen den zuständigen \hyperref[itm:04-21]
-   {Aufsichtsbehörden} die Gründe für die Erteilung oder den Widerruf der beantragten Zertifizierung mit.
+   {Aufsichtsbehörden} die Gründe für die Erteilung oder den Widerruf der beantragten Zertifizierung mit.%
   \label{itm:43-5}
 
   \item Die Anforderungen nach \hyperref[itm:43-3]{Absatz 3 des vorliegenden Artikels} und die Kriterien nach A\hyperref
    [itm:42-5]{rtikel 42 Absatz 5} werden von der \hyperref[itm:04-21]{Aufsichtsbehörde} in leicht zugänglicher Form
    veröffentlicht. Die
-   \hyperref[itm:04-21]{Aufsichtsbehörden} übermitteln diese Anforderungen und Kriterien auch dem Ausschuss. 
+   \hyperref[itm:04-21]{Aufsichtsbehörden} übermitteln diese Anforderungen und Kriterien auch dem Ausschuss. %
   \label{itm:43-6}
 
   \item Unbeschadet des \hyperref[part:8]{Kapitels VIII} widerruft die zuständige \hyperref[itm:04-21]
    {Aufsichtsbehörde} oder die nationale Akkreditierungsstelle die Akkreditierung einer Zertifizierungsstelle
    nach \hyperref[itm:43-1]{Absatz 1}, wenn die Voraussetzungen für die Akkreditierung nicht oder nicht mehr erfüllt
-   sind oder wenn eine Zertifizierungsstelle Maßnahmen ergreift, die nicht mit dieser Verordnung vereinbar sind.
+   sind oder wenn eine Zertifizierungsstelle Maßnahmen ergreift, die nicht mit dieser Verordnung vereinbar sind.%
   \label{itm:43-7}
 
   \item Der Kommission wird die Befugnis übertragen, gemäß \hyperref[ch:92]{Artikel 92} delegierte Rechtsakte zu
    erlassen, um die Anforderungen festzulegen, die für die in \hyperref[itm:42-1]{Artikel 42 Absatz 1} genannten
-   datenschutzspezifischen Zertifizierungsverfahren zu berücksichtigen sind.
+   datenschutzspezifischen Zertifizierungsverfahren zu berücksichtigen sind.%
   \label{itm:43-8}
 
   \item Die Kommission kann Durchführungsrechtsakte erlassen, mit denen technische Standards für
    Zertifizierungsverfahren und Datenschutzsiegel und -prüfzeichen sowie Mechanismen zur Förderung und Anerkennung
    dieser Zertifizierungsverfahren und Datenschutzsiegel und -prüfzeichen festgelegt werden. Diese
    Durchführungsrechtsakte werden gemäß dem in \hyperref[itm:93-2]{Artikel 93 Absatz 2} genannten Prüfverfahren
-   erlassen.
+   erlassen.%
   \label{itm:43-9}
 
 \end{enumerate}
