--- a/artikel/45.tex
+++ b/artikel/45.tex
@@ -10,11 +10,11 @@
    {internationale Organisation} darf vorgenommen werden, wenn die Kommission beschlossen hat, dass das betreffende
    Drittland, ein Gebiet oder ein oder mehrere spezifische Sektoren in diesem Drittland oder die betreffende \hyperref
    [itm:04-29]{internationale Organisation} ein angemessenes Schutzniveau bietet. Eine solche Datenübermittlung bedarf
-   keiner besonderen Genehmigung.
+   keiner besonderen Genehmigung.%
   \label{itm:45-1}
 
   \item Bei der Prüfung der Angemessenheit des gebotenen Schutzniveaus berücksichtigt die Kommission insbesondere das
-   Folgende:
+   Folgende:%
   \label{itm:45-2}
 
   \begin{enumerate}
@@ -28,7 +28,7 @@
      eine andere \hyperref[itm:04-29]{internationale Organisation}, die Rechtsprechung sowie wirksame und durchsetzbare
      Rechte der \hyperref[itm:04-1]{betroffenen Person} und wirksame verwaltungsrechtliche und gerichtliche
      Rechtsbehelfe für \hyperref[itm:04-1]{betroffene Personen}, deren \hyperref[itm:04-1]{personenbezogene Daten}
-     übermittelt werden,
+     übermittelt werden,%
     \label{itm:45-2a}
 
     \item die Existenz und die wirksame Funktionsweise einer oder mehrerer unabhängiger \hyperref[itm:04-21]
@@ -36,13 +36,13 @@
      {internationale Organisation} untersteht und die für die Einhaltung und Durchsetzung der Datenschutzvorschriften,
      einschließlich angemessener Durchsetzungsbefugnisse, für die Unterstützung und Beratung der \hyperref[itm:04-1]
      {betroffenen Personen} bei der Ausübung ihrer Rechte und für die Zusammenarbeit mit den \hyperref[itm:04-21]
-     {Aufsichtsbehörden} der Mitgliedstaaten zuständig sind, und
+     {Aufsichtsbehörden} der Mitgliedstaaten zuständig sind, und%
     \label{itm:45-2b}
 
     \item die von dem betreffenden Drittland bzw. der betreffenden internationalen Organisation eingegangenen
      internationalen Verpflichtungen oder andere Verpflichtungen, die sich aus rechtsverbindlichen Übereinkünften oder
      Instrumenten sowie aus der Teilnahme des Drittlands oder der internationalen Organisation an multilateralen oder
-     regionalen Systemen insbesondere in Bezug auf den Schutz \hyperref[itm:04-1]{personenbezogener Daten} ergeben.
+     regionalen Systemen insbesondere in Bezug auf den Schutz \hyperref[itm:04-1]{personenbezogener Daten} ergeben.%
     \label{itm:45-2c}
 
   \end{enumerate}
@@ -57,13 +57,13 @@
    \hyperref[itm:45-2b]{Absatz 2 Buchstabe b des vorliegenden Artikels} genannte \hyperref[itm:04-21]
     {Aufsichtsbehörde} bzw. genannten
    \hyperref[itm:04-21]{Aufsichtsbehörden} angegeben. Der Durchführungsrechtsakt wird gemäß dem in \hyperref[itm:93-2]
-    {Artikel 93 Absatz 2} genannten Prüfverfahren erlassen.
+    {Artikel 93 Absatz 2} genannten Prüfverfahren erlassen.%
   \label{itm:45-3}
 
   \item Die Kommission überwacht fortlaufend die Entwicklungen in Drittländern und bei internationalen Organisationen,
    die die Wirkungsweise der nach \hyperref[itm:45-3]{Absatz 3 des vorliegenden Artikels} erlassenen Beschlüsse und der
    nach Artikel 25 Absatz 6 der Richtlinie 95/46/EG\todo{nachschlagen} erlassenen Feststellungen beeinträchtigen
-   könnten.
+   könnten.%
   \label{itm:45-4}
 
   \item Die Kommission widerruft, ändert oder setzt die in \hyperref[itm:45-3]{Absatz 3 des vorliegenden Artikels}
@@ -73,7 +73,7 @@
    mehrere spezifischer Sektor in einem Drittland oder eine \hyperref[itm:04-29]{internationale Organisation} kein
    angemessenes Schutzniveau im Sinne des \hyperref[itm:45-2]{Absatzes 2 des vorliegenden Artikels} mehr gewährleistet.
    Diese Durchführungsrechtsakte werden gemäß dem Prüfverfahren nach \hyperref[itm:93-2]{Artikel 93 Absatz 2}
-   erlassen. 
+   erlassen. %
   \label{itm:45-5}
 
    In hinreichend begründeten Fällen äußerster Dringlichkeit erlässt die Kommission gemäß dem in \hyperref[itm:93-3]
@@ -81,26 +81,26 @@
 
   \item Die Kommission nimmt Beratungen mit dem betreffenden Drittland bzw. der betreffenden internationalen
    Organisation auf, um Abhilfe für die Situation zu schaffen, die zu dem gemäß \hyperref[itm:45-5]{Absatz 5}
-   erlassenen Beschluss geführt hat.
+   erlassenen Beschluss geführt hat.%
   \label{itm:45-6}
 
   \item Übermittlungen \hyperref[itm:04-1]{personenbezogener Daten} an das betreffende Drittland, das Gebiet oder einen
    oder mehrere spezifische Sektoren in diesem Drittland oder an die betreffende \hyperref[itm:04-29]
    {internationale Organisation} gemäß den Artikeln
    \hyperref[ch:46]{46} bis \hyperref[ch:49]{49} werden durch einen Beschluss nach \hyperref[itm:45-5]{Absatz 5 des
-    vorliegenden Artikels} nicht berührt.
+    vorliegenden Artikels} nicht berührt.%
   \label{itm:45-7}
 
   \item Die Kommission veröffentlicht im \emph{Amtsblatt der Europäischen Union} und auf ihrer Website eine Liste aller
    Drittländer beziehungsweise Gebiete und spezifischen Sektoren in einem Drittland und aller internationalen
    Organisationen, für die sie durch Beschluss festgestellt hat, dass sie ein angemessenes Schutzniveau gewährleisten
-   bzw. nicht mehr gewährleisten.   
+   bzw. nicht mehr gewährleisten.   %
   \label{itm:45-8}
 
   \item Von der Kommission auf der Grundlage von Artikel 25 Absatz 6 der Richtlinie 95/46/EG\todo
    {nachschlagen} erlassene Feststellungen bleiben so lange in Kraft, bis sie durch einen nach dem Prüfverfahren gemäß
    den Absätzen \hyperref[itm:45-3]{3} oder \hyperref[itm:45-5]{5} des vorliegenden Artikels erlassenen Beschluss der
-   Kommission geändert, ersetzt oder aufgehoben werden.
+   Kommission geändert, ersetzt oder aufgehoben werden.%
   \label{itm:45-9}
 
 \end{enumerate}
