--- a/artikel/46.tex
+++ b/artikel/46.tex
@@ -12,46 +12,46 @@
     eine \hyperref[itm:04-29]{internationale Organisation} nur übermitteln, sofern der \hyperref[itm:04-7]
     {Verantwortliche} oder der \hyperref[itm:04-8]{Auftragsverarbeiter} geeignete Garantien vorgesehen hat und sofern
     den
-   \hyperref[itm:04-1]{betroffenen Personen} durchsetzbare Rechte und wirksame Rechtsbehelfe zur Verfügung stehen.
+   \hyperref[itm:04-1]{betroffenen Personen} durchsetzbare Rechte und wirksame Rechtsbehelfe zur Verfügung stehen.%
   \label{itm:46-1}
 
   \item Die in \hyperref[itm:46-1]{Absatz 1} genannten geeigneten Garantien können, ohne dass hierzu eine besondere
-   Genehmigung einer \hyperref[itm:04-21]{Aufsichtsbehörde} erforderlich wäre, bestehen in
+   Genehmigung einer \hyperref[itm:04-21]{Aufsichtsbehörde} erforderlich wäre, bestehen in%
   \label{itm:46-2}
 
   \begin{enumerate}
   
-    \item einem rechtlich bindenden und durchsetzbaren Dokument zwischen den Behörden oder öffentlichen Stellen,
+    \item einem rechtlich bindenden und durchsetzbaren Dokument zwischen den Behörden oder öffentlichen Stellen,%
     \label{itm:46-2a}
 
-    \item \hyperref[itm:04-20]{verbindlichen internen Datenschutzvorschriften} gemäß \hyperref[ch:47]{Artikel 47},
+    \item \hyperref[itm:04-20]{verbindlichen internen Datenschutzvorschriften} gemäß \hyperref[ch:47]{Artikel 47},%
     \label{itm:46-2b}
 
     \item Standarddatenschutzklauseln, die von der Kommission gemäß dem Prüfverfahren nach \hyperref[itm:93-2]
-     {Artikel 93 Absatz 2} erlassen werden,
+     {Artikel 93 Absatz 2} erlassen werden,%
     \label{itm:46-2c}
 
     \item von einer \hyperref[itm:04-21]{Aufsichtsbehörde} angenommenen Standarddatenschutzklauseln, die von der
-     Kommission gemäß dem Prüfverfahren nach \hyperref[itm:93-2]{Artikel 93 Absatz 2} genehmigt wurden,
+     Kommission gemäß dem Prüfverfahren nach \hyperref[itm:93-2]{Artikel 93 Absatz 2} genehmigt wurden,%
     \label{itm:46-2d}
 
     \item genehmigten Verhaltensregeln gemäß \hyperref[ch:40]{Artikel 40} zusammen mit rechtsverbindlichen und
      durchsetzbaren Verpflichtungen des \hyperref[itm:04-7]{Verantwortlichen} oder des \hyperref[itm:04-8]
      {Auftragsverarbeiters} in dem Drittland zur Anwendung der geeigneten Garantien, einschließlich in Bezug auf die
-     Rechte der \hyperref[itm:04-1]{betroffenen Personen}, oder
+     Rechte der \hyperref[itm:04-1]{betroffenen Personen}, oder%
     \label{itm:46-2e}
 
     \item einem genehmigten Zertifizierungsmechanismus gemäß \hyperref[ch:42]{Artikel 42} zusammen mit
      rechtsverbindlichen und durchsetzbaren Verpflichtungen des \hyperref[itm:04-7]{Verantwortlichen} oder
      des \hyperref[itm:04-8]{Auftragsverarbeiters} in dem Drittland zur Anwendung der geeigneten Garantien,
-     einschließlich in Bezug auf die Rechte der \hyperref[itm:04-1]{betroffenen Personen}.
+     einschließlich in Bezug auf die Rechte der \hyperref[itm:04-1]{betroffenen Personen}.%
     \label{itm:46-2f}
 
   \end{enumerate}
 
   \item Vorbehaltlich der Genehmigung durch die zuständige \hyperref[itm:04-21]{Aufsichtsbehörde} können die geeigneten
    Garantien gemäß
-   \hyperref[itm:46-1]{Absatz 1} auch insbesondere bestehen in
+   \hyperref[itm:46-1]{Absatz 1} auch insbesondere bestehen in%
   \label{itm:46-3}
 
   \begin{enumerate}
@@ -59,18 +59,18 @@
     \item Vertragsklauseln, die zwischen dem \hyperref[itm:04-7]{Verantwortlichen} oder dem \hyperref[itm:04-8]
      {Auftragsverarbeiter} und dem \hyperref[itm:04-7]{Verantwortlichen}, dem
      \hyperref[itm:04-8]{Auftragsverarbeiter} oder dem \hyperref[itm:04-9]{Empfänger} der \hyperref[itm:04-1]
-      {personenbezogenen Daten} im Drittland oder der internationalen Organisation vereinbart wurden, oder
+      {personenbezogenen Daten} im Drittland oder der internationalen Organisation vereinbart wurden, oder%
     \label{itm:46-3a}
 
     \item Bestimmungen, die in Verwaltungsvereinbarungen zwischen Behörden oder öffentlichen Stellen aufzunehmen sind
-     und durchsetzbare und wirksame Rechte für die \hyperref[itm:04-1]{betroffenen Personen} einschließen.
+     und durchsetzbare und wirksame Rechte für die \hyperref[itm:04-1]{betroffenen Personen} einschließen.%
     \label{itm:46-3b}
 
   \end{enumerate}
 
   \item Die \hyperref[itm:04-21]{Aufsichtsbehörde} wendet das Kohärenzverfahren nach \hyperref[ch:63]{Artikel 63} an,
    wenn ein Fall gemäß
-   \hyperref[itm:46-3]{Absatz 3 des vorliegenden Artikels} vorliegt.
+   \hyperref[itm:46-3]{Absatz 3 des vorliegenden Artikels} vorliegt.%
   \label{itm:46-4}
 
   \item Von einem Mitgliedstaat oder einer \hyperref[itm:04-21]{Aufsichtsbehörde} auf der Grundlage von Artikel 26
@@ -79,7 +79,7 @@
    \hyperref[itm:04-21]{Aufsichtsbehörde} geändert, ersetzt oder aufgehoben werden. Von der Kommission auf der Grundlage
     von Artikel 26 Absatz 4 der Richtlinie 95/46/EG erlassene Feststellungen bleiben so lange in Kraft, bis sie
     erforderlichenfalls mit einem nach \hyperref[itm:46-2]{Absatz 2 des vorliegenden Artikels} erlassenen Beschluss der
-    Kommission geändert, ersetzt oder aufgehoben werden.
+    Kommission geändert, ersetzt oder aufgehoben werden.%
   \label{itm:46-5}
 
 \end{enumerate}
