--- a/artikel/47.tex
+++ b/artikel/47.tex
@@ -8,7 +8,7 @@
 
   \item Die zuständige \hyperref[itm:04-21]{Aufsichtsbehörde} genehmigt gemäß dem Kohärenzverfahren nach \hyperref
    [ch:63]{Artikel 63}
-   \hyperref[itm:04-20]{verbindliche interne Datenschutzvorschriften}, sofern diese
+   \hyperref[itm:04-20]{verbindliche interne Datenschutzvorschriften}, sofern diese%
   \label{itm:47-1}
 
   \begin{enumerate}
@@ -16,36 +16,36 @@
     \item rechtlich bindend sind, für alle betreffenden Mitglieder der \hyperref[itm:04-19]{Unternehmensgruppe} oder
      einer Gruppe von
      \hyperref[itm:04-18]{Unternehmen}, die eine gemeinsame Wirtschaftstätigkeit ausüben, gelten und von diesen
-      Mitgliedern durchgesetzt werden, und dies auch für ihre Beschäftigten gilt,
+      Mitgliedern durchgesetzt werden, und dies auch für ihre Beschäftigten gilt,%
     \label{itm:47-1a}
 
     \item den \hyperref[itm:04-1]{betroffenen Personen} ausdrücklich durchsetzbare Rechte in Bezug auf die \hyperref
      [itm:04-2]{Verarbeitung} ihrer
-     \hyperref[itm:04-1]{personenbezogenen Daten} übertragen und
+     \hyperref[itm:04-1]{personenbezogenen Daten} übertragen und%
     \label{itm:47-1b}
 
-    \item die in \hyperref[itm:47-2]{Absatz 2} festgelegten Anforderungen erfüllen.
+    \item die in \hyperref[itm:47-2]{Absatz 2} festgelegten Anforderungen erfüllen.%
     \label{itm:47-1c}
 
   \end{enumerate}
 
   \item Die \hyperref[itm:04-20]{verbindlichen internen Datenschutzvorschriften} nach \hyperref[itm:47-1]{Absatz 1}
-   enthalten mindestens folgende Angaben:
+   enthalten mindestens folgende Angaben:%
   \label{itm:47-2}
 
   \begin{enumerate}
   
     \item Struktur und Kontaktdaten der \hyperref[itm:04-19]{Unternehmensgruppe} oder Gruppe von \hyperref[itm:04-18]
-     {Unternehmen}, die eine gemeinsame Wirtschaftstätigkeit ausüben, und jedes ihrer Mitglieder;
+     {Unternehmen}, die eine gemeinsame Wirtschaftstätigkeit ausüben, und jedes ihrer Mitglieder;%
     \label{itm:4722a}
 
     \item die betreffenden Datenübermittlungen oder Reihen von Datenübermittlungen einschließlich der betreffenden
      Arten
      \hyperref[itm:04-1]{personenbezogener Daten}, Art und Zweck der Datenverarbeitung, Art der \hyperref[itm:04-1]
-      {betroffenen Personen} und das betreffende Drittland beziehungsweise die betreffenden Drittländer;
+      {betroffenen Personen} und das betreffende Drittland beziehungsweise die betreffenden Drittländer;%
     \label{itm:47-2b}
 
-    \item interne und externe Rechtsverbindlichkeit der betreffenden internen Datenschutzvorschriften;
+    \item interne und externe Rechtsverbindlichkeit der betreffenden internen Datenschutzvorschriften;%
     \label{itm:47-2c}
 
     \item die Anwendung der allgemeinen Datenschutzgrundsätze, insbesondere \hyperref[itm:05-1b]
@@ -53,7 +53,7 @@
      durch Technikgestaltung und durch datenschutzfreundliche Voreinstellungen, Rechtsgrundlage für die \hyperref
      [itm:04-2]{Verarbeitung}, \hyperref[itm:04-2]{Verarbeitung} besonderer Kategorien von personenbezogenen Daten,
      Maßnahmen zur Sicherstellung der Datensicherheit und Anforderungen für die Weiterübermittlung an nicht an diese
-     internen Datenschutzvorschriften gebundene Stellen;
+     internen Datenschutzvorschriften gebundene Stellen;%
     \label{itm:47-2d}
 
     \item die Rechte der \hyperref[itm:04-1]{betroffenen Personen} in Bezug auf die \hyperref[itm:04-2]
@@ -64,7 +64,7 @@
       Rechts auf Beschwerde bei der zuständigen
      \hyperref[itm:04-21]{Aufsichtsbehörde} beziehungsweise auf Einlegung eines Rechtsbehelfs bei den zuständigen
       Gerichten der Mitgliedstaaten und im Falle einer Verletzung der \hyperref[itm:04-20]{verbindlichen internen
-      Datenschutzvorschriften} Wiedergutmachung und gegebenenfalls Schadenersatz zu erhalten;
+      Datenschutzvorschriften} Wiedergutmachung und gegebenenfalls Schadenersatz zu erhalten;%
     \label{itm:47-2e}
 
     \item die von dem in einem Mitgliedstaat niedergelassenen \hyperref[itm:04-7]{Verantwortlichen} oder \hyperref
@@ -74,24 +74,24 @@
       Datenschutzvorschriften}; der \hyperref[itm:04-7]{Verantwortliche} oder der
      \hyperref[itm:04-8]{Auftragsverarbeiter} ist nur dann teilweise oder vollständig von dieser Haftung befreit, wenn
       er nachweist, dass der Umstand, durch den der Schaden eingetreten ist, dem betreffenden Mitglied nicht zur Last
-      gelegt werden kann;
+      gelegt werden kann;%
     \label{itm:47-2f}
 
     \item die Art und Weise, wie die \hyperref[itm:04-1]{betroffenen Personen} über die Bestimmungen der
      Artikel \hyperref[ch:13]{13} und
      \hyperref[ch:14]{14} hinaus über die \hyperref[itm:04-20]{verbindlichen internen Datenschutzvorschriften} und
       insbesondere über die unter den Buchstaben \hyperref[itm:47-2d]{d}, \hyperref[itm:47-2e]{e} und \hyperref
-      [itm:47-2f]{f} dieses Absatzes genannten Aspekte informiert werden;
+      [itm:47-2f]{f} dieses Absatzes genannten Aspekte informiert werden;%
     \label{itm:47-2g}
 
     \item die Aufgaben jedes gemäß \hyperref[ch:37]{Artikel 37} benannten Datenschutzbeauftragten oder jeder anderen
      Person oder Einrichtung, die mit der Überwachung der Einhaltung der \hyperref[itm:04-20]{verbindlichen internen
      Datenschutzvorschriften} in der \hyperref[itm:04-19]{Unternehmensgruppe} oder Gruppe von \hyperref[itm:04-18]
      {Unternehmen}, die eine gemeinsame Wirtschaftstätigkeit ausüben, sowie mit der Überwachung der Schulungsmaßnahmen
-     und dem Umgang mit Beschwerden befasst ist;
+     und dem Umgang mit Beschwerden befasst ist;%
     \label{itm:47-2h}
 
-    \item die Beschwerdeverfahren;
+    \item die Beschwerdeverfahren;%
     \label{itm:47-2i}
 
     \item die innerhalb der \hyperref[itm:04-19]{Unternehmensgruppe} oder Gruppe von \hyperref[itm:04-18]
@@ -102,18 +102,18 @@
      [itm:47-2h]{Buchstabe h} genannten Person oder Einrichtung sowie dem Verwaltungsrat des herrschenden Unternehmens
      einer \hyperref[itm:04-19]{Unternehmensgruppe} oder der Gruppe von \hyperref[itm:04-18]{Unternehmen}, die eine
      gemeinsame Wirtschaftstätigkeit ausüben, mitgeteilt werden und sollten der zuständigen \hyperref[itm:04-21]
-     {Aufsichtsbehörde} auf Anfrage zur Verfügung gestellt werden;
+     {Aufsichtsbehörde} auf Anfrage zur Verfügung gestellt werden;%
     \label{itm:47-2j}
 
     \item die Verfahren für die Meldung und Erfassung von Änderungen der Vorschriften und ihre Meldung an die
-     \hyperref[itm:04-21]{Aufsichtsbehörde};
+     \hyperref[itm:04-21]{Aufsichtsbehörde};%
     \label{itm:47-2k}
 
     \item die Verfahren für die Zusammenarbeit mit der \hyperref[itm:04-21]{Aufsichtsbehörde}, die die Befolgung der
      Vorschriften durch sämtliche Mitglieder der \hyperref[itm:04-19]{Unternehmensgruppe} oder Gruppe von \hyperref
      [itm:04-18]{Unternehmen}, die eine gemeinsame Wirtschaftstätigkeit ausüben, gewährleisten, insbesondere durch
      Offenlegung der Ergebnisse von Überprüfungen der unter \hyperref[itm:47-2j]{Buchstabe j} genannten Maßnahmen
-     gegenüber der \hyperref[itm:04-21]{Aufsichtsbehörde};
+     gegenüber der \hyperref[itm:04-21]{Aufsichtsbehörde};%
     \label{itm:47-2l}
 
     \item die Meldeverfahren zur Unterrichtung der zuständigen \hyperref[itm:04-21]{Aufsichtsbehörde} über jegliche für
@@ -121,11 +121,11 @@
      \hyperref[itm:04-19]{Unternehmensgruppe} oder Gruppe von \hyperref[itm:04-18]{Unternehmen}, die eine gemeinsame
       Wirtschaftstätigkeit ausüben, in einem Drittland geltenden rechtlichen Bestimmungen, die sich nachteilig auf die
       Garantien auswirken könnten, die die
-     \hyperref[itm:04-20]{verbindlichen internen Datenschutzvorschriften} bieten, und
+     \hyperref[itm:04-20]{verbindlichen internen Datenschutzvorschriften} bieten, und%
     \label{itm:47-2m}
 
     \item geeignete Datenschutzschulungen für Personal mit ständigem oder regelmäßigem Zugang zu personenbezogenen
-     Daten.
+     Daten.%
     \label{itm:47-2n}
 
   \end{enumerate}
@@ -134,7 +134,7 @@
    {verbindliche interne Datenschutzvorschriften} im Sinne des vorliegenden Artikels zwischen \hyperref[itm:04-7]
    {Verantwortlichen}, \hyperref[itm:04-8]{Auftragsverarbeitern} und
    \hyperref[itm:04-21]{Aufsichtsbehörden} festlegen. Diese Durchführungsrechtsakte werden gemäß dem Prüfverfahren
-    nach \hyperref[itm:93-2]{Artikel 93 Absatz 2} erlassen.
+    nach \hyperref[itm:93-2]{Artikel 93 Absatz 2} erlassen.%
   \label{itm:47-3}
 
 \end{enumerate}
