--- a/artikel/50.tex
+++ b/artikel/50.tex
@@ -10,22 +10,22 @@ die \hyperref[itm:04-21]{Aufsichtsbehörden} geeignete Maßnahmen zur
 \begin{enumerate}[label=\alph*)]
   
   \item Entwicklung von Mechanismen der internationalen Zusammenarbeit, durch die die wirksame Durchsetzung von
-   Rechtsvorschriften zum Schutz \hyperref[itm:04-1]{personenbezogener Daten} erleichtert wird,
+   Rechtsvorschriften zum Schutz \hyperref[itm:04-1]{personenbezogener Daten} erleichtert wird,%
   \label{itm:50-a}
 
   \item gegenseitigen Leistung internationaler Amtshilfe bei der Durchsetzung von Rechtsvorschriften zum Schutz
    \hyperref[itm:04-1]{personenbezogener Daten}, unter anderem durch Meldungen, Beschwerdeverweisungen, Amtshilfe bei
     Untersuchungen und Informationsaustausch, sofern geeignete Garantien für den Schutz \hyperref[itm:04-1]
-    {personenbezogener Daten} und anderer Grundrechte und Grundfreiheiten bestehen,
+    {personenbezogener Daten} und anderer Grundrechte und Grundfreiheiten bestehen,%
   \label{itm:50-b}
 
   \item Einbindung maßgeblicher Interessenträger in Diskussionen und Tätigkeiten, die zum Ausbau der internationalen
    Zusammenarbeit bei der Durchsetzung von Rechtsvorschriften zum Schutz \hyperref[itm:04-1]{personenbezogener Daten}
-   dienen,
+   dienen,%
   \label{itm:50-c}
 
   \item Förderung des Austauschs und der Dokumentation von Rechtsvorschriften und Praktiken zum Schutz personenbezogener
-   Daten einschließlich Zuständigkeitskonflikten mit Drittländern.
+   Daten einschließlich Zuständigkeitskonflikten mit Drittländern.%
   \label{itm:50-d}
 
 \end{enumerate}
