--- a/artikel/53.tex
+++ b/artikel/53.tex
@@ -7,7 +7,7 @@
 \begin{enumerate}
 
   \item Die Mitgliedstaaten sehen vor, dass jedes Mitglied ihrer \hyperref[itm:04-21]{Aufsichtsbehörden} im Wege eines
-   transparenten Verfahrens ernannt wird, und zwar
+   transparenten Verfahrens ernannt wird, und zwar%
   \label{itm:53-1}
 
   \begin{itemize}
@@ -19,15 +19,15 @@
 
   \item Jedes Mitglied muss über die für die Erfüllung seiner Aufgaben und Ausübung seiner Befugnisse erforderliche
    Qualifikation, Erfahrung und Sachkunde insbesondere im Bereich des Schutzes \hyperref[itm:04-1]
-   {personenbezogener Daten} verfügen.
+   {personenbezogener Daten} verfügen.%
   \label{itm:53-2}
 
   \item Das Amt eines Mitglieds endet mit Ablauf der Amtszeit, mit seinem Rücktritt oder verpflichtender Versetzung in
-   den Ruhestand gemäß dem Recht des betroffenen Mitgliedstaats.
+   den Ruhestand gemäß dem Recht des betroffenen Mitgliedstaats.%
   \label{itm:53-3}
 
   \item Ein Mitglied wird seines Amtes nur enthoben, wenn es eine schwere Verfehlung begangen hat oder die
-   Voraussetzungen für die Wahrnehmung seiner Aufgaben nicht mehr erfüllt.
+   Voraussetzungen für die Wahrnehmung seiner Aufgaben nicht mehr erfüllt.%
   \label{itm:53-4}
 
 \end{enumerate}
