--- a/artikel/57.tex
+++ b/artikel/57.tex
@@ -12,26 +12,26 @@
 
   \begin{enumerate}
   
-    \item die Anwendung dieser Verordnung überwachen und durchsetzen;
+    \item die Anwendung dieser Verordnung überwachen und durchsetzen;%
     \label{itm:57-1a}
 
     \item die Öffentlichkeit für die Risiken, Vorschriften, Garantien und Rechte im Zusammenhang mit der \hyperref
      [itm:04-2]{Verarbeitung} sensibilisieren und sie darüber aufklären. Besondere Beachtung finden dabei spezifische
-     Maßnahmen für Kinder;
+     Maßnahmen für Kinder;%
     \label{itm:57-1b}
 
     \item im Einklang mit dem Recht des Mitgliedsstaats das nationale Parlament, die Regierung und andere Einrichtungen
      und Gremien über legislative und administrative Maßnahmen zum Schutz der Rechte und Freiheiten natürlicher
-     Personen in Bezug auf die \hyperref[itm:04-2]{Verarbeitung} beraten;
+     Personen in Bezug auf die \hyperref[itm:04-2]{Verarbeitung} beraten;%
     \label{itm:57-1c}
 
     \item die \hyperref[itm:04-7]{Verantwortlichen} und die \hyperref[itm:04-8]{Auftragsverarbeiter} für die ihnen aus
-     dieser Verordnung entstehenden Pflichten sensibilisieren;
+     dieser Verordnung entstehenden Pflichten sensibilisieren;%
     \label{itm:57-1d}
 
     \item auf Anfrage jeder \hyperref[itm:04-1]{betroffenen Person} Informationen über die Ausübung ihrer Rechte
      aufgrund dieser Verordnung zur Verfügung stellen und gegebenenfalls zu diesem Zweck mit den \hyperref[itm:04-21]
-     {Aufsichtsbehörden} in anderen Mitgliedstaaten zusammenarbeiten;
+     {Aufsichtsbehörden} in anderen Mitgliedstaaten zusammenarbeiten;%
     \label{itm:57-1e}
 
     \item sich mit Beschwerden einer \hyperref[itm:04-1]{betroffenen Person} oder Beschwerden einer Stelle, einer
@@ -39,88 +39,88 @@
      angemessenem Umfang untersuchen und den Beschwerdeführer innerhalb einer angemessenen Frist über den Fortgang und
      das Ergebnis der Untersuchung unterrichten, insbesondere, wenn eine weitere Untersuchung oder Koordinierung mit
      einer anderen
-     \hyperref[itm:04-21]{Aufsichtsbehörde} notwendig ist;
+     \hyperref[itm:04-21]{Aufsichtsbehörde} notwendig ist;%
     \label{itm:57-1f}
 
     \item mit anderen \hyperref[itm:04-21]{Aufsichtsbehörden} zusammenarbeiten, auch durch Informationsaustausch, und
-     ihnen Amtshilfe leisten, um die einheitliche Anwendung und Durchsetzung dieser Verordnung zu gewährleisten;
+     ihnen Amtshilfe leisten, um die einheitliche Anwendung und Durchsetzung dieser Verordnung zu gewährleisten;%
     \label{itm:57-1g}
 
     \item Untersuchungen über die Anwendung dieser Verordnung durchführen, auch auf der Grundlage von Informationen
-     einer anderen \hyperref[itm:04-21]{Aufsichtsbehörde} oder einer anderen Behörde;
+     einer anderen \hyperref[itm:04-21]{Aufsichtsbehörde} oder einer anderen Behörde;%
     \label{itm:57-1h}
 
     \item maßgebliche Entwicklungen verfolgen, soweit sie sich auf den Schutz \hyperref[itm:04-1]
      {personenbezogener Daten} auswirken, insbesondere die Entwicklung der Informations- und Kommunikationstechnologie
-     und der Geschäftspraktiken;
+     und der Geschäftspraktiken;%
     \label{itm:57-1i}
 
     \item Standardvertragsklauseln im Sinne des \hyperref[itm:28-8]{Artikels 28 Absatz 8} und des \hyperref[itm:46-2d]
-     {Artikels 46 Absatz 2 Buchstabe d} festlegen;
+     {Artikels 46 Absatz 2 Buchstabe d} festlegen;%
     \label{itm:57-1j}
 
     \item eine Liste der Verarbeitungsarten erstellen und führen, für die gemäß \hyperref[itm:35-4]{Artikel 35 Absatz 4}
-     eine Datenschutz-Folgenabschätzung durchzuführen ist;
+     eine Datenschutz-Folgenabschätzung durchzuführen ist;%
     \label{itm:57-1k}
 
     \item Beratung in Bezug auf die in \hyperref[itm:36-1]{Artikel 36 Absatz 2} genannten Verarbeitungsvorgänge
-     leisten;
+     leisten;%
     \label{itm:57-1l}
 
     \item die Ausarbeitung von Verhaltensregeln gemäß \hyperref[itm:40-1]{Artikel 40 Absatz 1} fördern und zu diesen
      Verhaltensregeln, die ausreichende Garantien im Sinne des \hyperref[itm:40-5]{Artikels 40 Absatz 5} bieten müssen,
-     Stellungnahmen abgeben und sie billigen;
+     Stellungnahmen abgeben und sie billigen;%
     \label{itm:57-1m}
 
     \item die Einführung von Datenschutzzertifizierungsmechanismen und von Datenschutzsiegeln und -prüfzeichen nach
      \hyperref[itm:42-1]{Artikel 42 Absatz 1} anregen und Zertifizierungskriterien nach \hyperref[itm:42-5]{Artikel 42
-      Absatz 5} billigen;
+      Absatz 5} billigen;%
     \label{itm:57-1n}
 
     \item gegebenenfalls die nach \hyperref[itm:42-7]{Artikel 42 Absatz 7} erteilten Zertifizierungen regelmäßig
-     überprüfen;
+     überprüfen;%
     \label{itm:57-1o}
 
     \item die Anforderungen für die Akkreditierung einer Stelle für die Überwachung der Einhaltung der Verhaltensregeln
      gemäß \hyperref[ch:41]{Artikel 41} und einer Zertifizierungsstelle gemäß \hyperref[ch:43]{Artikel 43} abfassen und
-     veröffentlichen;
+     veröffentlichen;%
     \label{itm:57-1p}
 
     \item die Akkreditierung einer Stelle für die Überwachung der Einhaltung der Verhaltensregeln gemäß \hyperref[ch:41]
-     {Artikel 41} und einer Zertifizierungsstelle gemäß \hyperref[ch:43]{Artikel 43} vornehmen;
+     {Artikel 41} und einer Zertifizierungsstelle gemäß \hyperref[ch:43]{Artikel 43} vornehmen;%
     \label{itm:57-1q}
 
-    \item Vertragsklauseln und Bestimmungen im Sinne des \hyperref[itm:46-3]{Artikels 46 Absatz 3} genehmigen;
+    \item Vertragsklauseln und Bestimmungen im Sinne des \hyperref[itm:46-3]{Artikels 46 Absatz 3} genehmigen;%
     \label{itm:57-1r}
 
-    \item verbindliche interne Vorschriften gemäß \hyperref[ch:47]{Artikel 47} genehmigen;
+    \item verbindliche interne Vorschriften gemäß \hyperref[ch:47]{Artikel 47} genehmigen;%
     \label{itm:57-1s}
 
-    \item Beiträge zur Tätigkeit des Ausschusses leisten;
+    \item Beiträge zur Tätigkeit des Ausschusses leisten;%
     \label{itm:57-1t}
 
     \item interne Verzeichnisse über Verstöße gegen diese Verordnung und gemäß \hyperref[itm:58-2]{Artikel 58 Absatz 2}
-     ergriffene Maßnahmen und
+     ergriffene Maßnahmen und%
     \label{itm:57-1u}
 
-    \item jede sonstige Aufgabe im Zusammenhang mit dem Schutz \hyperref[itm:04-1]{personenbezogener Daten} erfüllen.
+    \item jede sonstige Aufgabe im Zusammenhang mit dem Schutz \hyperref[itm:04-1]{personenbezogener Daten} erfüllen.%
     \label{itm:57-1v}
 
   \end{enumerate}
 
   \item Jede \hyperref[itm:04-21]{Aufsichtsbehörde} erleichtert das Einreichen von in \hyperref[itm:57-1f]{Absatz 1
    Buchstabe f} genannten Beschwerden durch Maßnahmen wie etwa die Bereitstellung eines Beschwerdeformulars, das auch
-   elektronisch ausgefüllt werden kann, ohne dass andere Kommunikationsmittel ausgeschlossen werden.
+   elektronisch ausgefüllt werden kann, ohne dass andere Kommunikationsmittel ausgeschlossen werden.%
   \label{itm:57-2}
 
   \item Die Erfüllung der Aufgaben jeder \hyperref[itm:04-21]{Aufsichtsbehörde} ist für die \hyperref[itm:04-1]
-   {betroffene Person} und gegebenenfalls für den Datenschutzbeauftragten unentgeltlich.
+   {betroffene Person} und gegebenenfalls für den Datenschutzbeauftragten unentgeltlich.%
   \label{itm:57-3}
 
   \item Bei offenkundig unbegründeten oder -- insbesondere im Fall von häufiger Wiederholung -- exzessiven Anfragen kann
    die \hyperref[itm:04-21]{Aufsichtsbehörde} eine angemessene Gebühr auf der Grundlage der Verwaltungskosten verlangen
    oder sich weigern, aufgrund der Anfrage tätig zu werden. In diesem Fall trägt die \hyperref[itm:04-21]
-   {Aufsichtsbehörde} die Beweislast für den offenkundig unbegründeten oder exzessiven Charakter der Anfrage.
+   {Aufsichtsbehörde} die Beweislast für den offenkundig unbegründeten oder exzessiven Charakter der Anfrage.%
   \label{itm:57-4}
 
 \end{enumerate}
