--- a/artikel/62.tex
+++ b/artikel/62.tex
@@ -8,7 +8,7 @@
 
   \item Die \hyperref[itm:04-21]{Aufsichtsbehörden} führen gegebenenfalls gemeinsame Maßnahmen einschließlich
    gemeinsamer Untersuchungen und gemeinsamer Durchsetzungsmaßnahmen durch, an denen Mitglieder oder Bedienstete
-   der \hyperref[itm:04-21]{Aufsichtsbehörden} anderer Mitgliedstaaten teilnehmen.
+   der \hyperref[itm:04-21]{Aufsichtsbehörden} anderer Mitgliedstaaten teilnehmen.%
   \label{itm:62-1}
 
   \item Verfügt der \hyperref[itm:04-7]{Verantwortliche} oder der \hyperref[itm:04-8]{Auftragsverarbeiter} über
@@ -18,7 +18,7 @@
    Maßnahmen teilzunehmen. Die gemäß \hyperref[itm:56-1]{Artikel 56 Absatz 1} oder \hyperref[itm:56-4]{Absatz 4}
    zuständige \hyperref[itm:04-21]{Aufsichtsbehörde} lädt die \hyperref[itm:04-21]{Aufsichtsbehörde} jedes dieser
    Mitgliedstaaten zur Teilnahme an den gemeinsamen Maßnahmen ein und antwortet unverzüglich auf das Ersuchen
-   einer \hyperref[itm:04-21]{Aufsichtsbehörde} um Teilnahme.
+   einer \hyperref[itm:04-21]{Aufsichtsbehörde} um Teilnahme.%
   \label{itm:62-2}
 
   \item Eine \hyperref[itm:04-21]{Aufsichtsbehörde} kann gemäß dem Recht des Mitgliedstaats und mit Genehmigung der
@@ -33,27 +33,27 @@
    \hyperref[itm:04-21]{Aufsichtsbehörde} auszuüben. Diese Untersuchungsbefugnisse können nur unter der Leitung und in
     Gegenwart der Mitglieder oder Bediensteten der einladenden \hyperref[itm:04-21]{Aufsichtsbehörde} ausgeübt werden.
     Die Mitglieder oder Bediensteten der unterstützenden \hyperref[itm:04-21]{Aufsichtsbehörde} unterliegen dem Recht
-    des Mitgliedstaats der einladenden \hyperref[itm:04-21]{Aufsichtsbehörde}.
+    des Mitgliedstaats der einladenden \hyperref[itm:04-21]{Aufsichtsbehörde}.%
   \label{itm:62-3}
 
   \item Sind gemäß \hyperref[itm:62-1]{Absatz 1} Bedienstete einer unterstützenden \hyperref[itm:04-21]
    {Aufsichtsbehörde} in einem anderen Mitgliedstaat im Einsatz, so übernimmt der Mitgliedstaat der
    einladenden \hyperref[itm:04-21]{Aufsichtsbehörde} nach Maßgabe des Rechts des Mitgliedstaats, in dessen
    Hoheitsgebiet der Einsatz erfolgt, die Verantwortung für ihr Handeln, einschließlich der Haftung für alle von ihnen
-   bei ihrem Einsatz verursachten Schäden.
+   bei ihrem Einsatz verursachten Schäden.%
   \label{itm:62-4}
 
   \item Der Mitgliedstaat, in dessen Hoheitsgebiet der Schaden verursacht wurde, ersetzt diesen Schaden so, wie er ihn
    ersetzen müsste, wenn seine eigenen Bediensteten ihn verursacht hätten. Der Mitgliedstaat der unterstützenden
    \hyperref[itm:04-21]{Aufsichtsbehörde}, deren Bedienstete im Hoheitsgebiet eines anderen Mitgliedstaats einer Person
     Schaden zugefügt haben, erstattet diesem anderen Mitgliedstaat den Gesamtbetrag des Schadenersatzes, den dieser an
-    die Berechtigten geleistet hat.
+    die Berechtigten geleistet hat.%
   \label{itm:62-5}
 
   \item Unbeschadet der Ausübung seiner Rechte gegenüber \hyperref[itm:04-10]{Dritten} und mit Ausnahme des \hyperref
    [itm:62-5]{Absatzes 5} verzichtet jeder Mitgliedstaat in dem Fall des \hyperref[itm:62-1]{Absatzes 1} darauf, den
    in \hyperref[itm:62-4]{Absatz 4} genannten Betrag des erlittenen Schadens anderen Mitgliedstaaten gegenüber geltend
-   zu machen.
+   zu machen.%
   \label{itm:62-6}
 
   \item Ist eine gemeinsame Maßnahme geplant und kommt eine \hyperref[itm:04-21]{Aufsichtsbehörde} binnen eines Monats
@@ -62,7 +62,7 @@
    gemäß \hyperref[ch:55]{Artikel 55} ergreifen. In diesem Fall wird von einem dringenden Handlungsbedarf
    gemäß \hyperref[itm:66-1]{Artikel 66 Absatz 1} ausgegangen, der eine im Dringlichkeitsverfahren angenommene
    Stellungnahme oder einen im Dringlichkeitsverfahren angenommenen verbindlichen Beschluss des Ausschusses
-   gemäß \hyperref[itm:66-2]{Artikel 66 Absatz 2} erforderlich macht.
+   gemäß \hyperref[itm:66-2]{Artikel 66 Absatz 2} erforderlich macht.%
   \label{itm:62-7}
 
 \end{enumerate}   
