--- a/artikel/64.tex
+++ b/artikel/64.tex
@@ -8,33 +8,33 @@
 
   \item Der Ausschuss gibt eine Stellungnahme ab, wenn die zuständige \hyperref[itm:04-21]
    {Aufsichtsbehörde} beabsichtigt, eine der nachstehenden Maßnahmen zu erlassen. Zu diesem Zweck übermittelt die
-   zuständige \hyperref[itm:04-21]{Aufsichtsbehörde} dem Ausschuss den Entwurf des Beschlusses, wenn dieser
+   zuständige \hyperref[itm:04-21]{Aufsichtsbehörde} dem Ausschuss den Entwurf des Beschlusses, wenn dieser%
   \label{itm:64-1}
 
   \begin{enumerate}
   
     \item der Annahme einer Liste der Verarbeitungsvorgänge dient, die der Anforderung einer
-     Datenschutz-Folgenabschätzung gemäß \hyperref[itm:35-4]{Artikel 35 Absatz 4} unterliegen,
+     Datenschutz-Folgenabschätzung gemäß \hyperref[itm:35-4]{Artikel 35 Absatz 4} unterliegen,%
     \label{itm:64-1a}
 
     \item eine Angelegenheit gemäß \hyperref[itm:40-7]{Artikel 40 Absatz 7} und damit die Frage betrifft, ob ein Entwurf
      von Verhaltensregeln oder eine Änderung oder Ergänzung von Verhaltensregeln mit dieser Verordnung in Einklang
-     steht,
+     steht,%
     \label{itm:64-1b}
 
     \item der Billigung der Anforderungen für die Akkreditierung einer Stelle nach \hyperref[itm:41-3]{Artikel 41 Absatz
      3}, einer Zertifizierungsstelle nach \hyperref[itm:43-3]{Artikel 43 Absatz 3} oder der Kriterien für die
-     Zertifizierung gemäß \hyperref[itm:42-5]{Artikel 42 Absatz 5} dient,
+     Zertifizierung gemäß \hyperref[itm:42-5]{Artikel 42 Absatz 5} dient,%
     \label{itm:64-1c}
 
     \item der Festlegung von Standard-Datenschutzklauseln gemäß \hyperref[itm:46-2d]{Artikel 46 Absatz 2 Buchstabe d}
-     und \hyperref[itm:28-8]{Artikel 28 Absatz 8} dient,
+     und \hyperref[itm:28-8]{Artikel 28 Absatz 8} dient,%
     \label{itm:64-1d}
 
-    \item der Genehmigung von Vertragsklauseln gemäß \hyperref[itm:46-3a]{Artikels 46 Absatz 3 Buchstabe a} dient, oder
+    \item der Genehmigung von Vertragsklauseln gemäß \hyperref[itm:46-3a]{Artikels 46 Absatz 3 Buchstabe a} dient, oder%
     \label{itm:64-1e}
 
-    \item der Annahme verbindlicher interner Vorschriften im Sinne von \hyperref[ch:47]{Artikel 47} dient.
+    \item der Annahme verbindlicher interner Vorschriften im Sinne von \hyperref[ch:47]{Artikel 47} dient.%
     \label{itm:64-1f}
 
   \end{enumerate}
@@ -43,7 +43,7 @@
    dass eine Angelegenheit mit allgemeiner Geltung oder mit Auswirkungen in mehr als einem Mitgliedstaat vom Ausschuss
    geprüft wird, um eine Stellungnahme zu erhalten, insbesondere wenn eine zuständige \hyperref[itm:04-21]
    {Aufsichtsbehörde} den Verpflichtungen zur Amtshilfe gemäß \hyperref[ch:61]{Artikel 61} oder zu gemeinsamen
-   Maßnahmen gemäß \hyperref[ch:62]{Artikel 62} nicht nachkommt.
+   Maßnahmen gemäß \hyperref[ch:62]{Artikel 62} nicht nachkommt.%
   \label{itm:64-2}
 
   \item In den in den Absätzen \hyperref[itm:64-1]{1} und \hyperref[itm:64-2]{2} genannten Fällen gibt der Ausschuss
@@ -53,47 +53,47 @@
    weitere sechs Wochen verlängert werden. Was den in \hyperref[itm:64-1]{Absatz 1} genannten Beschlussentwurf angeht,
    der gemäß \hyperref[itm:64-5]{Absatz 5} den Mitgliedern des Ausschusses übermittelt wird, so wird angenommen, dass
    ein Mitglied, das innerhalb einer vom Vorsitz angegebenen angemessenen Frist keine Einwände erhoben hat, dem
-   Beschlussentwurf zustimmt.
+   Beschlussentwurf zustimmt.%
   \label{itm:64-3}
 
   \item Die \hyperref[itm:04-21]{Aufsichtsbehörden} und die Kommission übermitteln unverzüglich dem Ausschuss auf
    elektronischem Wege unter Verwendung eines standardisierten Formats alle zweckdienlichen Informationen,
    einschließlich -- je nach Fall -- einer kurzen Darstellung des Sachverhalts, des Beschlussentwurfs, der Gründe,
    warum eine solche Maßnahme ergriffen werden muss, und der Standpunkte anderer \hyperref[itm:04-22]
-   {betroffener Aufsichtsbehörden}.
+   {betroffener Aufsichtsbehörden}.%
   \label{itm:64-4}
 
-  \item Der Vorsitz des Ausschusses unterrichtet unverzüglich auf elektronischem Wege
+  \item Der Vorsitz des Ausschusses unterrichtet unverzüglich auf elektronischem Wege%
   \label{itm:64-5}
 
   \begin{enumerate}
   
     \item unter Verwendung eines standardisierten Formats die Mitglieder des Ausschusses und die Kommission über alle
      zweckdienlichen Informationen, die ihm zugegangen sind. Soweit erforderlich stellt das Sekretariat des Ausschusses
-     Übersetzungen der zweckdienlichen Informationen zur Verfügung und
+     Übersetzungen der zweckdienlichen Informationen zur Verfügung und%
     \label{itm:64-5a}
 
     \item je nach Fall die in den Absätzen \hyperref[itm:64-1]{1} und \hyperref[itm:64-2]{2} genannte \hyperref
-     [itm:04-21]{Aufsichtsbehörde} und die Kommission über die Stellungnahme und veröffentlicht sie.
+     [itm:04-21]{Aufsichtsbehörde} und die Kommission über die Stellungnahme und veröffentlicht sie.%
     \label{itm:64-5b}
 
   \end{enumerate}
 
   \item Die in \hyperref[itm:64-1]{Absatz 1} genannte zuständige \hyperref[itm:04-21]{Aufsichtsbehörde} nimmt den in
    \hyperref[itm:64-1]{Absatz 1} genannten Beschlussentwurf nicht vor Ablauf der in \hyperref[itm:64-3]{Absatz 3}
-    genannten Frist an.
+    genannten Frist an.%
   \label{itm:64-6}
 
   \item Die in \hyperref[itm:64-1]{Absatz 1} genannte \hyperref[itm:04-21]{Aufsichtsbehörde} trägt der Stellungnahme des
    Ausschusses weitestgehend Rechnung und teilt dessen Vorsitz binnen zwei Wochen nach Eingang der Stellungnahme auf
    elektronischem Wege unter Verwendung eines standardisierten Formats mit, ob sie den Beschlussentwurf beibehalten
-   oder ändern wird; gegebenenfalls übermittelt sie den geänderten Beschlussentwurf.
+   oder ändern wird; gegebenenfalls übermittelt sie den geänderten Beschlussentwurf.%
   \label{itm:64-7}
 
   \item Teilt in \hyperref[itm:64-1]{Absatz 1} genannte die zuständige Aufsichtsbehörde dem Vorsitz des Ausschusses
    innerhalb der Frist nach \hyperref[itm:64-7]{Absatz 7} des vorliegenden Artikels unter Angabe der maßgeblichen
    Gründe mit, dass sie beabsichtigt, der Stellungnahme des Ausschusses insgesamt oder teilweise nicht zu folgen, so
-   gilt \hyperref[itm:65-2]{Artikel 65 Absatz 1}.
+   gilt \hyperref[itm:65-2]{Artikel 65 Absatz 1}.%
   \label{itm:64-8}
 
 \end{enumerate}
