--- a/artikel/66.tex
+++ b/artikel/66.tex
@@ -13,24 +13,24 @@
    Auffassung gelangt, dass dringender Handlungsbedarf besteht, um Rechte und Freiheiten von \hyperref[itm:04-1]
    {betroffenen Personen} zu schützen. Die \hyperref[itm:04-21]{Aufsichtsbehörde} setzt die anderen \hyperref
    [itm:04-22]{betroffenen Aufsichtsbehörden}, den Ausschuss und die Kommission unverzüglich von diesen Maßnahmen und
-   den Gründen für deren Erlass in Kenntnis.
+   den Gründen für deren Erlass in Kenntnis.%
   \label{itm:66-1}
 
   \item Hat eine \hyperref[itm:04-21]{Aufsichtsbehörde} eine Maßnahme nach \hyperref[itm:66-1]{Absatz 1} ergriffen und
    ist sie der Auffassung, dass dringend endgültige Maßnahmen erlassen werden müssen, kann sie unter Angabe von Gründen
-   im Dringlichkeitsverfahren um eine Stellungnahme oder einen verbindlichen Beschluss des Ausschusses ersuchen.
+   im Dringlichkeitsverfahren um eine Stellungnahme oder einen verbindlichen Beschluss des Ausschusses ersuchen.%
   \label{itm:66-2}
 
   \item Jede \hyperref[itm:04-21]{Aufsichtsbehörde} kann unter Angabe von Gründen, auch für den dringenden
    Handlungsbedarf, im Dringlichkeitsverfahren um eine Stellungnahme oder gegebenenfalls einen verbindlichen Beschluss
    des Ausschusses ersuchen, wenn eine zuständige \hyperref[itm:04-21]{Aufsichtsbehörde} trotz dringenden
    Handlungsbedarfs keine geeignete Maßnahme getroffen hat, um die Rechte und Freiheiten von \hyperref[itm:04-1]
-   {betroffenen Personen} zu schützen.
+   {betroffenen Personen} zu schützen.%
   \label{itm:66-3}
 
   \item Abweichend von \hyperref[itm:64-3]{Artikel 64 Absatz 3} und \hyperref[itm:65-2]{Artikel 65 Absatz 2} wird eine
    Stellungnahme oder ein verbindlicher Beschluss im Dringlichkeitsverfahren nach den Absätzen \hyperref[itm:66-2]
-   {2} und \hyperref[itm:66-3]{3} binnen zwei Wochen mit einfacher Mehrheit der Mitglieder des Ausschusses angenommen.
+   {2} und \hyperref[itm:66-3]{3} binnen zwei Wochen mit einfacher Mehrheit der Mitglieder des Ausschusses angenommen.%
   \label{itm:66-4}
 
 \end{enumerate}
