--- a/artikel/68.tex
+++ b/artikel/68.tex
@@ -7,29 +7,29 @@
 \begin{enumerate}
 
   \item Der Europäische Datenschutzausschuss (im Folgenden „Ausschuss“) wird als Einrichtung der Union mit eigener
-   Rechtspersönlichkeit eingerichtet.
+   Rechtspersönlichkeit eingerichtet.%
   \label{itm:68-1}
 
-  \item Der Ausschuss wird von seinem Vorsitz vertreten.
+  \item Der Ausschuss wird von seinem Vorsitz vertreten.%
   \label{itm:68-2}
 
   \item Der Ausschuss besteht aus dem Leiter einer \hyperref[itm:04-21]{Aufsichtsbehörde} jedes Mitgliedstaats und dem
-   Europäischen Datenschutzbeauftragten oder ihren jeweiligen \hyperref[itm:04-17]{Vertretern}.
+   Europäischen Datenschutzbeauftragten oder ihren jeweiligen \hyperref[itm:04-17]{Vertretern}.%
   \label{itm:68-3}
 
   \item Ist in einem Mitgliedstaat mehr als eine \hyperref[itm:04-21]{Aufsichtsbehörde} für die Überwachung der
    Anwendung der nach Maßgabe dieser Verordnung erlassenen Vorschriften zuständig, so wird im Einklang mit den
-   Rechtsvorschriften dieses Mitgliedstaats ein gemeinsamer \hyperref[itm:04-17]{Vertreter} benannt.
+   Rechtsvorschriften dieses Mitgliedstaats ein gemeinsamer \hyperref[itm:04-17]{Vertreter} benannt.%
   \label{itm:68-4}
 
   \item Die Kommission ist berechtigt, ohne Stimmrecht an den Tätigkeiten und Sitzungen des Ausschusses teilzunehmen.
    Die Kommission benennt einen \hyperref[itm:04-17]{Vertreter}. Der Vorsitz des Ausschusses unterrichtet die
-   Kommission über die Tätigkeiten des Ausschusses.
+   Kommission über die Tätigkeiten des Ausschusses.%
   \label{itm:68-5}
 
   \item In den in \hyperref[ch:65]{Artikel 65} genannten Fällen ist der Europäische Datenschutzbeauftragte nur bei
    Beschlüssen stimmberechtigt, die Grundsätze und Vorschriften betreffen, die für die Organe, Einrichtungen, Ämter und
-   Agenturen der Union gelten und inhaltlich den Grundsätzen und Vorschriften dieser Verordnung entsprechen.
+   Agenturen der Union gelten und inhaltlich den Grundsätzen und Vorschriften dieser Verordnung entsprechen.%
   \label{itm:68-6}
 
 \end{enumerate}
