--- a/artikel/69.tex
+++ b/artikel/69.tex
@@ -7,12 +7,12 @@
 \begin{enumerate}
 
   \item Der Ausschuss handelt bei der Erfüllung seiner Aufgaben oder in Ausübung seiner Befugnisse gemäß den Artikeln
-   \hyperref[ch:70]{70} und \hyperref[ch:71]{71} unabhängig.
+   \hyperref[ch:70]{70} und \hyperref[ch:71]{71} unabhängig.%
   \label{itm:69-1}
 
   \item Unbeschadet der Ersuchen der Kommission gemäß Artikel 70 Absätze \hyperref[itm:70-1]{1} und \hyperref[itm:70-2]
    {2} ersucht der Ausschuss bei der Erfüllung seiner Aufgaben oder in Ausübung seiner Befugnisse weder um Weisung noch
-   nimmt er Weisungen entgegen.
+   nimmt er Weisungen entgegen.%
   \label{itm:69-2}
 
 \end{enumerate}
