--- a/artikel/70.tex
+++ b/artikel/70.tex
@@ -7,38 +7,38 @@
 \begin{enumerate}
 
   \item Der Ausschuss stellt die einheitliche Anwendung dieser Verordnung sicher. Hierzu nimmt der Ausschuss von sich
-   aus oder gegebenenfalls auf Ersuchen der Kommission insbesondere folgende Tätigkeiten wahr:
+   aus oder gegebenenfalls auf Ersuchen der Kommission insbesondere folgende Tätigkeiten wahr:%
   \label{itm:70-1}
 
   \begin{enumerate}
   
     \item Überwachung und Sicherstellung der ordnungsgemäßen Anwendung dieser Verordnung in den in den Artikeln
      \hyperref[ch:64]{64} und \hyperref[ch:65]{65} genannten Fällen unbeschadet der Aufgaben der nationalen
-      \hyperref[itm:04-21]{Aufsichtsbehörden};
+      \hyperref[itm:04-21]{Aufsichtsbehörden};%
     \label{itm:70-1a}
 
     \item Beratung der Kommission in allen Fragen, die im Zusammenhang mit dem Schutz \hyperref[itm:04-1]
-     {personenbezogener Daten} in der Union stehen, einschließlich etwaiger Vorschläge zur Änderung dieser Verordnung;
+     {personenbezogener Daten} in der Union stehen, einschließlich etwaiger Vorschläge zur Änderung dieser Verordnung;%
     \label{itm:70-1b}
 
     \item Beratung der Kommission über das Format und die Verfahren für den Austausch von Informationen zwischen den
      \hyperref[itm:04-7]{Verantwortlichen}, den \hyperref[itm:04-8]{Auftragsverarbeitern} und den \hyperref[itm:04-21]
-      {Aufsichtsbehörden} in Bezug auf \hyperref[itm:04-20]{verbindliche interne Datenschutzvorschriften};
+      {Aufsichtsbehörden} in Bezug auf \hyperref[itm:04-20]{verbindliche interne Datenschutzvorschriften};%
     \label{itm:70-1c}
 
     \item Bereitstellung von Leitlinien, Empfehlungen und bewährten Verfahren zu Verfahren für die Löschung gemäß
      \hyperref[itm:17-2]{Artikel 17 Absatz 2} von Links zu \hyperref[itm:04-1]{personenbezogenen Daten} oder Kopien oder
-      Replikationen dieser Daten aus öffentlich zugänglichen Kommunikationsdiensten;
+      Replikationen dieser Daten aus öffentlich zugänglichen Kommunikationsdiensten;%
     \label{itm:70-1d}
 
     \item Prüfung -- von sich aus, auf Antrag eines seiner Mitglieder oder auf Ersuchen der Kommission -- von die
      Anwendung dieser Verordnung betreffenden Fragen und Bereitstellung von Leitlinien, Empfehlungen und bewährten
-     Verfahren zwecks Sicherstellung einer einheitlichen Anwendung dieser Verordnung;
+     Verfahren zwecks Sicherstellung einer einheitlichen Anwendung dieser Verordnung;%
     \label{itm:70-1e}
 
     \item Bereitstellung von Leitlinien, Empfehlungen und bewährten Verfahren gemäß \hyperref[itm:70-1e]{Buchstabe e des
      vorliegenden Absatzes} zur näheren Bestimmung der Kriterien und Bedingungen für die auf \hyperref[itm:04-4]
-     {Profiling} beruhenden Entscheidungen gemäß \hyperref[itm:22-2]{Artikel 22 Absatz 2};
+     {Profiling} beruhenden Entscheidungen gemäß \hyperref[itm:22-2]{Artikel 22 Absatz 2};%
     \label{itm:70-1f}
 
     \item Bereitstellung von Leitlinien, Empfehlungen und bewährten Verfahren gemäß \hyperref[itm:70-1e]{Buchstabe e des
@@ -48,13 +48,13 @@
      \hyperref[itm:33-2]{2}, und zu den spezifischen Umständen, unter denen der \hyperref[itm:04-7]
       {Verantwortliche} oder der
      \hyperref[itm:04-8]{Auftragsverarbeiter} die \hyperref[itm:04-12]{Verletzung des Schutzes personenbezogener Daten}
-      zu melden hat;
+      zu melden hat;%
     \label{itm:70-1g}
 
     \item Bereitstellung von Leitlinien, Empfehlungen und bewährten Verfahren gemäß \hyperref[itm:70-1e]{Buchstabe e des
      vorliegenden Absatzes} zu den Umständen, unter denen eine \hyperref[itm:04-12]{Verletzung des Schutzes
      personenbezogener Daten} voraussichtlich ein hohes Risiko für die Rechte und Freiheiten natürlicher Personen im
-     Sinne des \hyperref[itm:34-1]{Artikels 34 Absatz 1} zur Folge hat;
+     Sinne des \hyperref[itm:34-1]{Artikels 34 Absatz 1} zur Folge hat;%
     \label{itm:70-1h}
 
     \item Bereitstellung von Leitlinien, Empfehlungen und bewährten Verfahren gemäß \hyperref[itm:70-1e]{Buchstabe e des
@@ -62,49 +62,49 @@
      Anforderungen für die Übermittlungen \hyperref[itm:04-1]{personenbezogener Daten}, die auf \hyperref[itm:04-20]
      {verbindlichen internen Datenschutzvorschriften} von \hyperref[itm:04-7]{Verantwortlichen} oder \hyperref
      [itm:04-8]{Auftragsverarbeitern} beruhen, und der dort aufgeführten weiteren erforderlichen Anforderungen zum
-     Schutz \hyperref[itm:04-1]{personenbezogener Daten} der \hyperref[itm:04-1]{betroffenen Personen};
+     Schutz \hyperref[itm:04-1]{personenbezogener Daten} der \hyperref[itm:04-1]{betroffenen Personen};%
     \label{itm:70-1i}
 
     \item Bereitstellung von Leitlinien, Empfehlungen und bewährten Verfahren gemäß \hyperref[itm:70-1e]{Buchstabe e des
      vorliegenden Absatzes} zur näheren Bestimmung der Kriterien und Bedingungen für die Übermittlungen
-     \hyperref[itm:04-1]{personenbezogener Daten} gemäß \hyperref[itm:49-1-1]{Artikel 49 Absatz 1};
+     \hyperref[itm:04-1]{personenbezogener Daten} gemäß \hyperref[itm:49-1-1]{Artikel 49 Absatz 1};%
     \label{itm:70-1j}
 
     \item Ausarbeitung von Leitlinien für die \hyperref[itm:04-21]{Aufsichtsbehörden} in Bezug auf die Anwendung von
      Maßnahmen nach \hyperref[ch:58]{Artikel 58} Absätze \hyperref[itm:58-1]{1}, \hyperref[itm:58-2]{2} und \hyperref
-     [itm:58-3]{3} und die Festsetzung von Geldbußen gemäß \hyperref[ch:83]{Artikel 83};
+     [itm:58-3]{3} und die Festsetzung von Geldbußen gemäß \hyperref[ch:83]{Artikel 83};%
     \label{itm:70-1k}
 
-    \item Überprüfung der praktischen Anwendung der Leitlinien, Empfehlungen und bewährten Verfahren;
+    \item Überprüfung der praktischen Anwendung der Leitlinien, Empfehlungen und bewährten Verfahren;%
     \label{itm:70-1l}
 
     \item Bereitstellung von Leitlinien, Empfehlungen und bewährten Verfahren gemäß \hyperref[itm:70-1e]{Buchstabe e des
      vorliegenden Absatzes} zur Festlegung gemeinsamer Verfahren für die von natürlichen Personen vorgenommene Meldung
-     von Verstößen gegen diese Verordnung gemäß \hyperref[itm:54-2]{Artikel 54 Absatz 2};
+     von Verstößen gegen diese Verordnung gemäß \hyperref[itm:54-2]{Artikel 54 Absatz 2};%
     \label{itm:70-1m}
 
     \item Förderung der Ausarbeitung von Verhaltensregeln und der Einrichtung von datenschutzspezifischen
      Zertifizierungsverfahren sowie Datenschutzsiegeln und -prüfzeichen gemäß den Artikeln \hyperref[ch:40]{40} und
-     \hyperref[ch:42]{42};
+     \hyperref[ch:42]{42};%
     \label{itm:70-1n}
 
     \item Genehmigung von Zertifizierungsstellen und deren regelmäßige Überprüfung gemäß \hyperref[itm:42-5]{Artikel 42
      Absatz 5} und Führung eines öffentlichen Registers der Zertifizierungsverfahren sowie von Datenschutzsiegeln und
      -prüfzeichen gemäß \hyperref[itm:42-8]{Artikel 42 Absatz 8} und der in Drittländern niedergelassenen
       niedergelassenen zertifizierten \hyperref[itm:04-7]{Verantwortlichen} oder \hyperref[itm:04-8]
-      {Auftragsverarbeiter} gemäß \hyperref[itm:42-7]{Artikel 42 Absatz 7};
+      {Auftragsverarbeiter} gemäß \hyperref[itm:42-7]{Artikel 42 Absatz 7};%
     \label{itm:70-1o}
 
     \item Genehmigung der in \hyperref[itm:43-3]{Artikel 43 Absatz 3} genannten Anforderungen im Hinblick auf die
-     Akkreditierung von Zertifizierungsstellen gemäß \hyperref[ch:43]{Artikel 43};
+     Akkreditierung von Zertifizierungsstellen gemäß \hyperref[ch:43]{Artikel 43};%
     \label{itm:70-1p}
 
     \item Abgabe einer Stellungnahme für die Kommission zu den Zertifizierungsanforderungen gemäß \hyperref[itm:43-8]
-     {Artikel 43 Absatz 8};
+     {Artikel 43 Absatz 8};%
     \label{itm:70-1q}
 
     \item Abgabe einer Stellungnahme für die Kommission zu den Bildsymbolen gemäß \hyperref[itm:12-7]{Artikel 12 Absatz
-     7};
+     7};%
     \label{itm:70-1r}
 
     \item Abgabe einer Stellungnahme für die Kommission zur Beurteilung der Angemessenheit des in einem Drittland oder
@@ -112,49 +112,49 @@
      Drittland, das Gebiet, ein oder mehrere spezifische Sektoren in diesem Drittland oder eine \hyperref[itm:04-29]
      {internationale Organisation} kein angemessenes Schutzniveau mehr gewährleistet. Zu diesem Zweck gibt die
      Kommission dem Ausschuss alle erforderlichen Unterlagen, darunter den Schriftwechsel mit der Regierung des
-     Drittlands, dem Gebiet oder spezifischen Sektor oder der internationalen Organisation;
+     Drittlands, dem Gebiet oder spezifischen Sektor oder der internationalen Organisation;%
     \label{itm:70-1s}
 
     \item Abgabe von Stellungnahmen im Kohärenzverfahren gemäß \hyperref[itm:64-1]{Artikel 64 Absatz 1} zu
      Beschlussentwürfen von \hyperref[itm:04-21]{Aufsichtsbehörden}, zu Angelegenheiten, die nach \hyperref[itm:64-2]
      {Artikel 64 Absatz 2} vorgelegt wurden und um Erlass verbindlicher Beschlüsse gemäß \hyperref[ch:65]{Artikel 65},
-     einschließlich der in \hyperref[ch:66]{Artikel 66} genannten Fälle;
+     einschließlich der in \hyperref[ch:66]{Artikel 66} genannten Fälle;%
     \label{itm:70-1t}
 
     \item Förderung der Zusammenarbeit und eines wirksamen bilateralen und multilateralen Austauschs von Informationen
-     und bewährten Verfahren zwischen den \hyperref[itm:04-21]{Aufsichtsbehörden};
+     und bewährten Verfahren zwischen den \hyperref[itm:04-21]{Aufsichtsbehörden};%
     \label{itm:70-1u}
 
     \item Förderung von Schulungsprogrammen und Erleichterung des Personalaustausches zwischen \hyperref[itm:04-21]
      {Aufsichtsbehörden} sowie gegebenenfalls mit \hyperref[itm:04-21]{Aufsichtsbehörden} von Drittländern oder mit
-     internationalen Organisationen;
+     internationalen Organisationen;%
     \label{itm:70-1v}
 
     \item Förderung des Austausches von Fachwissen und von Dokumentationen über Datenschutzvorschriften und -praxis mit
-     Datenschutz\hyperref[itm:04-21]{aufsichtsbehörden} in aller Welt;
+     Datenschutz\hyperref[itm:04-21]{aufsichtsbehörden} in aller Welt;%
     \label{itm:70-1w}
 
     \item Abgabe von Stellungnahmen zu den auf Unionsebene erarbeiteten Verhaltensregeln gemäß \hyperref[itm:40-9]
-     {Artikel 40 Absatz 9} und
+     {Artikel 40 Absatz 9} und%
     \label{itm:70-1x}
 
     \item Führung eines öffentlich zugänglichen elektronischen Registers der Beschlüsse der \hyperref[itm:04-21]
-     {Aufsichtsbehörden} und Gerichte in Bezug auf Fragen, die im Rahmen des Kohärenzverfahrens behandelt wurden.
+     {Aufsichtsbehörden} und Gerichte in Bezug auf Fragen, die im Rahmen des Kohärenzverfahrens behandelt wurden.%
     \label{itm:70-1y}
 
   \end{enumerate}
 
   \item Die Kommission kann, wenn sie den Ausschuss um Rat ersucht, unter Berücksichtigung der Dringlichkeit des
-   Sachverhalts eine Frist angeben.
+   Sachverhalts eine Frist angeben.%
   \label{itm:70-2}
 
   \item Der Ausschuss leitet seine Stellungnahmen, Leitlinien, Empfehlungen und bewährten Verfahren an die Kommission
-   und an den in \hyperref[ch:93]{Artikel 93} genannten Ausschuss weiter und veröffentlicht sie.
+   und an den in \hyperref[ch:93]{Artikel 93} genannten Ausschuss weiter und veröffentlicht sie.%
   \label{itm:70-3}
 
   \item Der Ausschuss konsultiert gegebenenfalls interessierte Kreise und gibt ihnen Gelegenheit, innerhalb einer
    angemessenen Frist Stellung zu nehmen. Unbeschadet des \hyperref[ch:76]{Artikels 76} macht der Ausschuss die
-   Ergebnisse der Konsultation der Öffentlichkeit zugänglich.
+   Ergebnisse der Konsultation der Öffentlichkeit zugänglich.%
   \label{itm:70-4}
 
 \end{enumerate}
