--- a/artikel/72.tex
+++ b/artikel/72.tex
@@ -7,11 +7,11 @@
 \begin{enumerate}
 
   \item Sofern in dieser Verordnung nichts anderes bestimmt ist, fasst der Ausschuss seine Beschlüsse mit einfacher
-   Mehrheit seiner Mitglieder.
+   Mehrheit seiner Mitglieder.%
   \label{itm:72-1}
 
   \item Der Ausschuss gibt sich mit einer Mehrheit von zwei Dritteln seiner Mitglieder eine Geschäftsordnung und legt
-   seine Arbeitsweise fest.
+   seine Arbeitsweise fest.%
   \label{itm:72-2}
 
 \end{enumerate}
