--- a/artikel/73.tex
+++ b/artikel/73.tex
@@ -7,11 +7,11 @@
 \begin{enumerate}
 
   \item Der Ausschuss wählt aus dem Kreis seiner Mitglieder mit einfacher Mehrheit einen Vorsitzenden und zwei
-   stellvertretende Vorsitzende.
+   stellvertretende Vorsitzende.%
   \label{itm:73-1}
 
   \item Die Amtszeit des Vorsitzenden und seiner beiden Stellvertreter beträgt fünf Jahre; ihre einmalige Wiederwahl ist
-   zulässig.
+   zulässig.%
   \label{itm:73-2}
 
 \end{enumerate}
