--- a/artikel/74.tex
+++ b/artikel/74.tex
@@ -6,26 +6,26 @@
 
 \begin{enumerate}
 
-  \item Der Vorsitz hat folgende Aufgaben:
+  \item Der Vorsitz hat folgende Aufgaben:%
   \label{itm:74-1}
 
   \begin{enumerate}
   
-    \item Einberufung der Sitzungen des Ausschusses und Erstellung der Tagesordnungen,
+    \item Einberufung der Sitzungen des Ausschusses und Erstellung der Tagesordnungen,%
     \label{itm:74-1a}
 
     \item Übermittlung der Beschlüsse des Ausschusses nach \hyperref[ch:65]{Artikel 65} an die federführende
-     \hyperref[itm:04-21]{Aufsichtsbehörde} und die \hyperref[itm:04-22]{betroffenen Aufsichtsbehörden},
+     \hyperref[itm:04-21]{Aufsichtsbehörde} und die \hyperref[itm:04-22]{betroffenen Aufsichtsbehörden},%
     \label{itm:74-1b}
 
     \item Sicherstellung einer rechtzeitigen Ausführung der Aufgaben des Ausschusses, insbesondere der Aufgaben im
-     Zusammenhang mit dem Kohärenzverfahren nach \hyperref[ch:63]{Artikel 63}.
+     Zusammenhang mit dem Kohärenzverfahren nach \hyperref[ch:63]{Artikel 63}.%
     \label{itm:74-1c}
 
   \end{enumerate}
 
   \item Der Ausschuss legt die Aufteilung der Aufgaben zwischen dem Vorsitzenden und dessen Stellvertretern in seiner
-   Geschäftsordnung fest.
+   Geschäftsordnung fest.%
   \label{itm:74-2}
 
 \end{enumerate}
