--- a/artikel/75.tex
+++ b/artikel/75.tex
@@ -7,52 +7,52 @@
 \begin{enumerate}
 
   \item Der Ausschuss wird von einem Sekretariat unterstützt, das von dem Europäischen Datenschutzbeauftragten
-   bereitgestellt wird.
+   bereitgestellt wird.%
   \label{itm:75-1}
 
-  \item Das Sekretariat führt seine Aufgaben ausschließlich auf Anweisung des Vorsitzes des Ausschusses aus.
+  \item Das Sekretariat führt seine Aufgaben ausschließlich auf Anweisung des Vorsitzes des Ausschusses aus.%
   \label{itm:75-2}
 
   \item Das Personal des Europäischen Datenschutzbeauftragten, das an der Wahrnehmung der dem Ausschuss gemäß dieser
    Verordnung übertragenen Aufgaben beteiligt ist, unterliegt anderen Berichtspflichten als das Personal, das an der
-   Wahrnehmung der dem Europäischen Datenschutzbeauftragten übertragenen Aufgaben beteiligt ist.
+   Wahrnehmung der dem Europäischen Datenschutzbeauftragten übertragenen Aufgaben beteiligt ist.%
   \label{itm:75-3}
 
   \item Soweit angebracht, erstellen und veröffentlichen der Ausschuss und der Europäische Datenschutzbeauftragte eine
    Vereinbarung zur Anwendung des vorliegenden Artikels, in der die Bedingungen ihrer Zusammenarbeit festgelegt sind
    und die für das Personal des Europäischen Datenschutzbeauftragten gilt, das an der Wahrnehmung der dem Ausschuss
-   gemäß dieser Verordnung übertragenen Aufgaben beteiligt ist.
+   gemäß dieser Verordnung übertragenen Aufgaben beteiligt ist.%
   \label{itm:75-4}
 
-  \item Das Sekretariat leistet dem Ausschuss analytische, administrative und logistische Unterstützung.
+  \item Das Sekretariat leistet dem Ausschuss analytische, administrative und logistische Unterstützung.%
   \label{itm:75-5}
 
-  \item Das Sekretariat ist insbesondere verantwortlich für
+  \item Das Sekretariat ist insbesondere verantwortlich für%
   \label{itm:75-6}
 
   \begin{enumerate}
   
-    \item das Tagesgeschäft des Ausschusses,
+    \item das Tagesgeschäft des Ausschusses,%
     \label{itm:75-6a}
 
-    \item die Kommunikation zwischen den Mitgliedern des Ausschusses, seinem Vorsitz und der Kommission,
+    \item die Kommunikation zwischen den Mitgliedern des Ausschusses, seinem Vorsitz und der Kommission,%
     \label{itm:75-6b}
 
-    \item die Kommunikation mit anderen Organen und mit der Öffentlichkeit,
+    \item die Kommunikation mit anderen Organen und mit der Öffentlichkeit,%
     \label{itm:75-6c}
 
-    \item den Rückgriff auf elektronische Mittel für die interne und die externe Kommunikation,
+    \item den Rückgriff auf elektronische Mittel für die interne und die externe Kommunikation,%
     \label{itm:75-6d}
 
-    \item die Übersetzung sachdienlicher Informationen,
+    \item die Übersetzung sachdienlicher Informationen,%
     \label{itm:75-6e}
 
-    \item die Vor- und Nachbereitung der Sitzungen des Ausschusses,
+    \item die Vor- und Nachbereitung der Sitzungen des Ausschusses,%
     \label{itm:75-6f}
 
     \item die Vorbereitung, Abfassung und Veröffentlichung von Stellungnahmen, von Beschlüssen über die Beilegung von
      Streitigkeiten zwischen \hyperref[itm:04-21]{Aufsichtsbehörden} und von sonstigen vom Ausschuss angenommenen
-     Dokumenten.
+     Dokumenten.%
     \label{itm:75-6g}
 
   \end{enumerate}
