--- a/artikel/79.tex
+++ b/artikel/79.tex
@@ -11,7 +11,7 @@
    {Aufsichtsbehörde} gemäß \hyperref[ch:77]{Artikel 77} das Recht auf einen wirksamen gerichtlichen Rechtsbehelf, wenn
    sie der Ansicht ist, dass die ihr aufgrund dieser Verordnung zustehenden Rechte infolge einer nicht im Einklang mit
    dieser Verordnung stehenden \hyperref[itm:04-2]{Verarbeitung} ihrer
-   \hyperref[itm:04-1]{personenbezogenen Daten} verletzt wurden.
+   \hyperref[itm:04-1]{personenbezogenen Daten} verletzt wurden.%
   \label{itm:79-1}
 
   \item Für Klagen gegen einen \hyperref[itm:04-7]{Verantwortlichen} oder gegen einen \hyperref[itm:04-8]
@@ -20,7 +20,7 @@
    Klagen auch bei den Gerichten des Mitgliedstaats erhoben werden, in dem die \hyperref[itm:04-1]{betroffene Person}
    ihren gewöhnlichen Aufenthaltsort hat, es sei denn, es handelt sich bei dem \hyperref[itm:04-7]
    {Verantwortlichen} oder dem \hyperref[itm:04-8]{Auftragsverarbeiter} um eine Behörde eines Mitgliedstaats, die in
-   Ausübung ihrer hoheitlichen Befugnisse tätig geworden ist.
+   Ausübung ihrer hoheitlichen Befugnisse tätig geworden ist.%
   \label{itm:79-2}
 
 \end{enumerate}
