--- a/artikel/80.tex
+++ b/artikel/80.tex
@@ -13,7 +13,7 @@
    ist, zu beauftragen, in ihrem Namen eine Beschwerde einzureichen, in ihrem Namen die in den Artikeln \hyperref
    [ch:77]{77}, \hyperref[ch:78]{78} und \hyperref[ch:79]{79} genannten Rechte wahrzunehmen und das Recht auf
    Schadensersatz gemäß \hyperref[ch:82]{Artikel 82} in Anspruch zu nehmen, sofern dieses im Recht der Mitgliedstaaten
-   vorgesehen ist.
+   vorgesehen ist.%
   \label{itm:80-1}
 
   \item Die Mitgliedstaaten können vorsehen, dass jede der in \hyperref[itm:80-1]{Absatz 1 des vorliegenden Artikels}
@@ -22,7 +22,7 @@
    zuständigen \hyperref[itm:04-21]{Aufsichtsbehörde} eine Beschwerde einzulegen und die in den Artikeln \hyperref
    [ch:78]{78} und \hyperref[ch:79]{79} aufgeführten Rechte in Anspruch zu nehmen, wenn ihres Erachtens die Rechte
    einer \hyperref[itm:04-1]{betroffenen Person} gemäß dieser Verordnung infolge einer
-   \hyperref[itm:04-2]{Verarbeitung} verletzt worden sind.
+   \hyperref[itm:04-2]{Verarbeitung} verletzt worden sind.%
   \label{itm:80-2}
 
 \end{enumerate}
