--- a/artikel/82.tex
+++ b/artikel/82.tex
@@ -8,7 +8,7 @@
 
   \item Jede Person, der wegen eines Verstoßes gegen diese Verordnung ein materieller oder immaterieller Schaden
    entstanden ist, hat Anspruch auf Schadenersatz gegen den \hyperref[itm:04-7]{Verantwortlichen} oder gegen
-   den \hyperref[itm:04-8]{Auftragsverarbeiter}.
+   den \hyperref[itm:04-8]{Auftragsverarbeiter}.%
   \label{itm:82-1}
 
   \item Jeder an einer \hyperref[itm:04-2]{Verarbeitung} beteiligte \hyperref[itm:04-7]{Verantwortliche} haftet für den
@@ -17,12 +17,12 @@
    \hyperref[itm:04-2]{Verarbeitung} verursachten Schaden nur dann, wenn er seinen speziell den \hyperref[itm:04-8]
     {Auftragsverarbeitern} auferlegten Pflichten aus dieser Verordnung nicht nachgekommen ist oder unter Nichtbeachtung
     der rechtmäßig erteilten Anweisungen des für die Daten\hyperref[itm:04-2]{verarbeitung} \hyperref[itm:04-7]
-    {Verantwortlichen} oder gegen diese Anweisungen gehandelt hat.
+    {Verantwortlichen} oder gegen diese Anweisungen gehandelt hat.%
   \label{itm:82-2}
 
   \item Der \hyperref[itm:04-7]{Verantwortliche} oder der \hyperref[itm:04-8]{Auftragsverarbeiter} wird von der Haftung
    gemäß \hyperref[itm:82-2]{Absatz 2} befreit, wenn er nachweist, dass er in keinerlei Hinsicht für den Umstand, durch
-   den der Schaden eingetreten ist, verantwortlich ist.
+   den der Schaden eingetreten ist, verantwortlich ist.%
   \label{itm:82-3}
 
   \item Ist mehr als ein \hyperref[itm:04-7]{Verantwortlicher} oder mehr als ein \hyperref[itm:04-8]
@@ -32,7 +32,7 @@
    {Verarbeitung} verursachten Schaden verantwortlich, so haftet jeder
    \hyperref[itm:04-7]{Verantwortliche} oder jeder \hyperref[itm:04-8]{Auftragsverarbeiter} für den gesamten Schaden,
     damit ein wirksamer Schadensersatz für die
-   \hyperref[itm:04-1]{betroffene Person} sichergestellt ist.
+   \hyperref[itm:04-1]{betroffene Person} sichergestellt ist.%
   \label{itm:82-4}
 
   \item Hat ein \hyperref[itm:04-7]{Verantwortlicher} oder \hyperref[itm:04-8]{Auftragsverarbeiter} gemäß \hyperref
@@ -41,11 +41,11 @@
    derselben \hyperref[itm:04-2]{Verarbeitung} beteiligten für die Datenverarbeitung \hyperref[itm:04-7]
    {Verantwortlichen} oder
    \hyperref[itm:04-8]{Auftragsverarbeitern} den Teil des Schadenersatzes zurückzufordern, der unter den in \hyperref
-    [itm:82-2]{Absatz 2} festgelegten Bedingungen ihrem Anteil an der Verantwortung für den Schaden entspricht.
+    [itm:82-2]{Absatz 2} festgelegten Bedingungen ihrem Anteil an der Verantwortung für den Schaden entspricht.%
   \label{itm:82-5}
 
   \item Mit Gerichtsverfahren zur Inanspruchnahme des Rechts auf Schadenersatz sind die Gerichte zu befassen, die nach
-   den in \hyperref[itm:79-2]{Artikel 79 Absatz 2} genannten Rechtsvorschriften des Mitgliedstaats zuständig sind.
+   den in \hyperref[itm:79-2]{Artikel 79 Absatz 2} genannten Rechtsvorschriften des Mitgliedstaats zuständig sind.%
   \label{itm:82-6}
 
 \end{enumerate}
