--- a/artikel/83.tex
+++ b/artikel/83.tex
@@ -8,74 +8,74 @@
 
   \item Jede \hyperref[itm:04-21]{Aufsichtsbehörde} stellt sicher, dass die Verhängung von Geldbußen gemäß diesem
    Artikel für Verstöße gegen diese Verordnung gemäß den Absätzen \hyperref[itm:83-4]{4}, \hyperref[itm:83-5]{5} und
-   \hyperref[itm:83-6]{6} in jedem Einzelfall wirksam, verhältnismäßig und abschreckend ist.
+   \hyperref[itm:83-6]{6} in jedem Einzelfall wirksam, verhältnismäßig und abschreckend ist.%
   \label{itm:83-1}
 
   \item Geldbußen werden je nach den Umständen des Einzelfalls zusätzlich zu oder anstelle von Maßnahmen nach \hyperref
    [itm:58-2]{Artikel 58 Absatz 2} Buchstaben \hyperref[itm:58-2a]{a} bis \hyperref[itm:58-2h]{h} und \hyperref
    [itm:58-2j]{j} verhängt. Bei der Entscheidung über die Verhängung einer Geldbuße und über deren Betrag wird in jedem
-   Einzelfall Folgendes gebührend berücksichtigt:
+   Einzelfall Folgendes gebührend berücksichtigt:%
   \label{itm:83-2}
 
   \begin{enumerate}
   
     \item Art, Schwere und Dauer des Verstoßes unter Berücksichtigung der Art, des Umfangs oder des Zwecks der
      betreffenden \hyperref[itm:04-2]{Verarbeitung} sowie der Zahl der von der \hyperref[itm:04-2]
-     {Verarbeitung} \hyperref[itm:04-1]{betroffenen Personen} und des Ausmaßes des von ihnen erlittenen Schadens;
+     {Verarbeitung} \hyperref[itm:04-1]{betroffenen Personen} und des Ausmaßes des von ihnen erlittenen Schadens;%
     \label{itm:83-2a}
 
-    \item Vorsätzlichkeit oder Fahrlässigkeit des Verstoßes;
+    \item Vorsätzlichkeit oder Fahrlässigkeit des Verstoßes;%
     \label{itm:83-2b}
 
     \item jegliche von dem \hyperref[itm:04-7]{Verantwortlichen} oder dem \hyperref[itm:04-8]
      {Auftragsverarbeiter} getroffenen Maßnahmen zur Minderung des den
-     \hyperref[itm:04-1]{betroffenen Personen} entstandenen Schadens;
+     \hyperref[itm:04-1]{betroffenen Personen} entstandenen Schadens;%
     \label{itm:83-2c}
 
     \item Grad der Verantwortung des \hyperref[itm:04-7]{Verantwortlichen} oder des \hyperref[itm:04-8]
      {Auftragsverarbeiters} unter Berücksichtigung der von ihnen gemäß den Artikeln \hyperref[ch:25]{25} und \hyperref
-     [ch:32]{32} getroffenen technischen und organisatorischen Maßnahmen;
+     [ch:32]{32} getroffenen technischen und organisatorischen Maßnahmen;%
     \label{itm:83-2d}
 
     \item etwaige einschlägige frühere Verstöße des \hyperref[itm:04-7]{Verantwortlichen} oder des \hyperref[itm:04-8]
-     {Auftragsverarbeiters};
+     {Auftragsverarbeiters};%
     \label{itm:83-2e}
 
     \item Umfang der Zusammenarbeit mit der \hyperref[itm:04-21]{Aufsichtsbehörde}, um dem Verstoß abzuhelfen und seine
-     möglichen nachteiligen Auswirkungen zu mindern;
+     möglichen nachteiligen Auswirkungen zu mindern;%
     \label{itm:83-2f}
 
-    \item Kategorien \hyperref[itm:04-1]{personenbezogener Daten}, die von dem Verstoß betroffen sind;
+    \item Kategorien \hyperref[itm:04-1]{personenbezogener Daten}, die von dem Verstoß betroffen sind;%
     \label{itm:83-2g}
 
     \item Art und Weise, wie der Verstoß der \hyperref[itm:04-21]{Aufsichtsbehörde} bekannt wurde, insbesondere ob und
      gegebenenfalls in welchem Umfang der \hyperref[itm:04-7]{Verantwortliche} oder der \hyperref[itm:04-8]
-     {Auftragsverarbeiter} den Verstoß mitgeteilt hat;
+     {Auftragsverarbeiter} den Verstoß mitgeteilt hat;%
     \label{itm:83-2h}
 
     \item Einhaltung der nach \hyperref[itm:58-2]{Artikel 58 Absatz 2} früher gegen den für den betreffenden
      \hyperref[itm:04-7]{Verantwortlichen} oder \hyperref[itm:04-8]{Auftragsverarbeiter} in Bezug auf denselben
-      Gegenstand angeordneten Maßnahmen, wenn solche Maßnahmen angeordnet wurden;
+      Gegenstand angeordneten Maßnahmen, wenn solche Maßnahmen angeordnet wurden;%
     \label{itm:83-2i}
 
     \item Einhaltung von genehmigten Verhaltensregeln nach \hyperref[ch:40]{Artikel 40} oder genehmigten
-     Zertifizierungsverfahren nach \hyperref[ch:42]{Artikel 42} und
+     Zertifizierungsverfahren nach \hyperref[ch:42]{Artikel 42} und%
     \label{itm:83-2j}
 
     \item jegliche anderen erschwerenden oder mildernden Umstände im jeweiligen Fall, wie unmittelbar oder mittelbar
-     durch den Verstoß erlangte finanzielle Vorteile oder vermiedene Verluste.
+     durch den Verstoß erlangte finanzielle Vorteile oder vermiedene Verluste.%
     \label{itm:83-2k}
 
   \end{enumerate}
 
   \item Verstößt ein \hyperref[itm:04-7]{Verantwortlicher} oder ein \hyperref[itm:04-8]{Auftragsverarbeiter} bei
    gleichen oder miteinander verbundenen Verarbeitungsvorgängen vorsätzlich oder fahrlässig gegen mehrere Bestimmungen
-   dieser Verordnung, so übersteigt der Gesamtbetrag der Geldbuße nicht den Betrag für den schwerwiegendsten Verstoß.
+   dieser Verordnung, so übersteigt der Gesamtbetrag der Geldbuße nicht den Betrag für den schwerwiegendsten Verstoß.%
   \label{itm:83-3}
 
   \item Bei Verstößen gegen die folgenden Bestimmungen werden im Einklang mit \hyperref[itm:83-2]{Absatz 2} Geldbußen
    von bis zu 10~000~000~EUR oder im Fall eines Unternehmens von bis zu 2~\% seines gesamten weltweit erzielten
-   Jahresumsatzes des vorangegangenen Geschäftsjahrs verhängt, je nachdem, welcher der Beträge höher ist:
+   Jahresumsatzes des vorangegangenen Geschäftsjahrs verhängt, je nachdem, welcher der Beträge höher ist:%
   \label{itm:83-4}
 
   \begin{enumerate}
@@ -83,45 +83,45 @@
     \item die Pflichten der \hyperref[itm:04-7]{Verantwortlichen} und der \hyperref[itm:04-8]{Auftragsverarbeiter} gemäß
      den Artikeln \hyperref[ch:8]{8},
      \hyperref[ch:11]{11}, \hyperref[ch:25]{25} bis \hyperref[ch:39]{39}, \hyperref[ch:42]{42} und \hyperref[ch:43]
-      {43};
+      {43};%
     \label{itm:83-4a}
 
-    \item die Pflichten der Zertifizierungsstelle gemäß den Artikeln \hyperref[ch:42]{42} und \hyperref[ch:43]{43};
+    \item die Pflichten der Zertifizierungsstelle gemäß den Artikeln \hyperref[ch:42]{42} und \hyperref[ch:43]{43};%
     \label{itm:83-4b}
 
-    \item die Pflichten der Überwachungsstelle gemäß \hyperref[itm:41-4]{Artikel 41 Absatz 4}.
+    \item die Pflichten der Überwachungsstelle gemäß \hyperref[itm:41-4]{Artikel 41 Absatz 4}.%
     \label{itm:83-4c}
 
   \end{enumerate}
 
   \item Bei Verstößen gegen die folgenden Bestimmungen werden im Einklang mit \hyperref[itm:83-2]{Absatz 2} Geldbußen
    von bis zu 20~000~000~EUR oder im Fall eines Unternehmens von bis zu 4~\% seines gesamten weltweit erzielten
-   Jahresumsatzes des vorangegangenen Geschäftsjahrs verhängt, je nachdem, welcher der Beträge höher ist:
+   Jahresumsatzes des vorangegangenen Geschäftsjahrs verhängt, je nachdem, welcher der Beträge höher ist:%
   \label{itm:83-5}
 
   \begin{enumerate}
   
     \item die Grundsätze für die \hyperref[itm:04-2]{Verarbeitung}, einschließlich der Bedingungen für die \hyperref
      [itm:04-11]{Einwilligung}, gemäß den Artikeln
-     \hyperref[ch:5]{5}, \hyperref[ch:6]{6}, \hyperref[ch:7]{7} und \hyperref[ch:9]{9};
+     \hyperref[ch:5]{5}, \hyperref[ch:6]{6}, \hyperref[ch:7]{7} und \hyperref[ch:9]{9};%
     \label{itm:83-5a}
 
     \item die Rechte der \hyperref[itm:04-1]{betroffenen Person} gemäß den Artikeln \hyperref[ch:12]{12} bis \hyperref
-     [ch:22]{22};
+     [ch:22]{22};%
     \label{itm:83-5b}
 
     \item die Übermittlung \hyperref[itm:04-1]{personenbezogener Daten} an einen \hyperref[itm:04-9]{Empfänger} in einem
      Drittland oder an eine \hyperref[itm:04-29]{internationale Organisation} gemäß den Artikeln \hyperref[ch:44]
-     {44} bis \hyperref[ch:49]{49};
+     {44} bis \hyperref[ch:49]{49};%
     \label{itm:83-5c}
 
     \item alle Pflichten gemäß den Rechtsvorschriften der Mitgliedstaaten, die im Rahmen des \hyperref[part:9]
-     {Kapitels IX} erlassen wurden;
+     {Kapitels IX} erlassen wurden;%
     \label{itm:83-5d}
 
     \item Nichtbefolgung einer Anweisung oder einer vorübergehenden oder endgültigen Beschränkung oder Aussetzung der
      Datenübermittlung durch die \hyperref[itm:04-21]{Aufsichtsbehörde} gemäß \hyperref[itm:58-2]{Artikel 58 Absatz 2}
-     oder Nichtgewährung des Zugangs unter Verstoß gegen \hyperref[itm:58-1]{Artikel 58 Absatz 1}.
+     oder Nichtgewährung des Zugangs unter Verstoß gegen \hyperref[itm:58-1]{Artikel 58 Absatz 1}.%
     \label{itm:83-5e}
 
   \end{enumerate}
@@ -129,18 +129,18 @@
   \item Bei Nichtbefolgung einer Anweisung der \hyperref[itm:04-21]{Aufsichtsbehörde} gemäß \hyperref[itm:58-2]
    {Artikel 58 Absatz 2} werden im Einklang mit \hyperref[itm:83-2]{Absatz 2 des vorliegenden Artikels} Geldbußen von
    bis zu 20~000~000~EUR oder im Fall eines Unternehmens von bis zu 4~\% seines gesamten weltweit erzielten
-   Jahresumsatzes des vorangegangenen Geschäftsjahrs verhängt, je nachdem, welcher der Beträge höher ist.
+   Jahresumsatzes des vorangegangenen Geschäftsjahrs verhängt, je nachdem, welcher der Beträge höher ist.%
   \label{itm:83-6}
 
   \item Unbeschadet der Abhilfebefugnisse der \hyperref[itm:04-21]{Aufsichtsbehörden} gemäß \hyperref[itm:58-2]
    {Artikel 58 Absatz 2} kann jeder Mitgliedstaat Vorschriften dafür festlegen, ob und in welchem Umfang gegen Behörden
    und öffentliche Stellen, die in dem betreffenden Mitgliedstaat niedergelassen sind, Geldbußen verhängt werden
-   können.
+   können.%
   \label{itm:83-7}
 
   \item Die Ausübung der eigenen Befugnisse durch eine \hyperref[itm:04-21]{Aufsichtsbehörde} gemäß diesem Artikel muss
    angemessenen Verfahrensgarantien gemäß dem Unionsrecht und dem Recht der Mitgliedstaaten, einschließlich wirksamer
-   gerichtlicher Rechtsbehelfe und ordnungsgemäßer Verfahren, unterliegen.
+   gerichtlicher Rechtsbehelfe und ordnungsgemäßer Verfahren, unterliegen.%
   \label{itm:83-8}
 
   \item Sieht die Rechtsordnung eines Mitgliedstaats keine Geldbußen vor, kann dieser Artikel so angewandt werden, dass
