--- a/artikel/88.tex
+++ b/artikel/88.tex
@@ -14,7 +14,7 @@
    Arbeit, der Gleichheit und Diversität am Arbeitsplatz, der Gesundheit und Sicherheit am Arbeitsplatz, des Schutzes
    des Eigentums der Arbeitgeber oder der Kunden sowie für Zwecke der Inanspruchnahme der mit der Beschäftigung
    zusammenhängenden individuellen oder kollektiven Rechte und Leistungen und für Zwecke der Beendigung des
-   Beschäftigungsverhältnisses vorsehen.
+   Beschäftigungsverhältnisses vorsehen.%
   \label{itm:88-1}
 
   \item Diese Vorschriften umfassen geeignete und besondere Maßnahmen zur Wahrung der menschlichen Würde, der
@@ -22,11 +22,11 @@
    auf die \hyperref[itm:05-1a]{Transparenz} der \hyperref[itm:04-2]{Verarbeitung}, die Übermittlung \hyperref
    [itm:04-1]{personenbezogener Daten} innerhalb einer \hyperref[itm:04-19]{Unternehmensgruppe} oder einer Gruppe von
    \hyperref[itm:04-18]{Unternehmen}, die eine gemeinsame Wirtschaftstätigkeit ausüben, und die Überwachungssysteme am
-    Arbeitsplatz.
+    Arbeitsplatz.%
   \label{itm:88-2}
 
   \item Jeder Mitgliedstaat teilt der Kommission bis zum 25. Mai 2018 die Rechtsvorschriften, die er aufgrund von
-   \hyperref[itm:88-1]{Absatz 1} erlässt, sowie unverzüglich alle späteren Änderungen dieser Vorschriften mit.
+   \hyperref[itm:88-1]{Absatz 1} erlässt, sowie unverzüglich alle späteren Änderungen dieser Vorschriften mit.%
   \label{itm:88-3}
 
 \end{enumerate}
