--- a/artikel/90.tex
+++ b/artikel/90.tex
@@ -16,12 +16,12 @@
     in Bezug auf
    \hyperref[itm:04-1]{personenbezogene Daten}, die der \hyperref[itm:04-7]{Verantwortliche} oder der \hyperref
     [itm:04-8]{Auftragsverarbeiter} bei einer Tätigkeit erlangt oder erhoben hat, die einer solchen
-    Geheimhaltungspflicht unterliegt.
+    Geheimhaltungspflicht unterliegt.%
   \label{itm:90-1}
 
   \item Jeder Mitgliedstaat teilt der Kommission bis zum 25. Mai 2018 die Vorschriften mit, die er aufgrund von
    \hyperref[itm:90-1]{Absatz 1} erlässt, und setzt sie unverzüglich von allen weiteren Änderungen dieser Vorschriften
-    in Kenntnis.
+    in Kenntnis.%
   \label{itm:90-2}
 
 \end{enumerate}
