--- a/artikel/97.tex
+++ b/artikel/97.tex
@@ -7,11 +7,11 @@
 \begin{enumerate}
 
   \item Bis zum 25. Mai 2020 und danach alle vier Jahre legt die Kommission dem Europäischen Parlament und dem Rat einen
-   Bericht über die Bewertung und Überprüfung dieser Verordnung vor. Die Berichte werden öffentlich gemacht.
+   Bericht über die Bewertung und Überprüfung dieser Verordnung vor. Die Berichte werden öffentlich gemacht.%
   \label{itm:97-1}
 
   \item Im Rahmen der Bewertungen und Überprüfungen nach \hyperref[itm:97-1]{Absatz 1} prüft die Kommission insbesondere
-   die Anwendung und die Wirkungsweise
+   die Anwendung und die Wirkungsweise%
   \label{itm:97-2}
 
   \begin{enumerate}
@@ -22,26 +22,26 @@
       {Artikel 45 Absatz 3} der vorliegenden Verordnung erlassenen Beschlüsse sowie die gemäß Artikel 25 Absatz 6 der
       Richtlinie 95/46/EG
      \todo{Recherche}
-     erlassenen Feststellungen,
+     erlassenen Feststellungen,%
     \label{itm:97-2a}
 
-    \item des \hyperref[part:7]{Kapitels VII} über Zusammenarbeit und Kohärenz.
+    \item des \hyperref[part:7]{Kapitels VII} über Zusammenarbeit und Kohärenz.%
     \label{itm:97-2b}
 
   \end{enumerate}
 
   \item Für den in \hyperref[itm:97-1]{Absatz 1} genannten Zweck kann die Kommission Informationen von den
-   Mitgliedstaaten und den \hyperref[itm:04-21]{Aufsichtsbehörden} anfordern.
+   Mitgliedstaaten und den \hyperref[itm:04-21]{Aufsichtsbehörden} anfordern.%
   \label{itm:97-3}
 
   \item Bei den in den Absätzen \hyperref[itm:97-1]{1} und \hyperref[itm:97-2]{2} genannten Bewertungen und
    Überprüfungen berücksichtigt die Kommission die Standpunkte und Feststellungen des Europäischen Parlaments, des
-   Rates und anderer einschlägiger Stellen oder Quellen.
+   Rates und anderer einschlägiger Stellen oder Quellen.%
   \label{itm:97-4}
 
   \item Die Kommission legt erforderlichenfalls geeignete Vorschläge zur Änderung dieser Verordnung vor und
    berücksichtigt dabei insbesondere die Entwicklungen in der Informationstechnologie und die Fortschritte in der
-   Informationsgesellschaft.
+   Informationsgesellschaft.%
   \label{itm:97-5}
 
 \end{enumerate}
