--- a/artikel/99.tex
+++ b/artikel/99.tex
@@ -7,10 +7,10 @@
 \begin{enumerate}
 
   \item Diese Verordnung tritt am zwanzigsten Tag nach ihrer Veröffentlichung im Amtsblatt der Europäischen Union in
-   Kraft.
+   Kraft.%
   \label{itm:99-1}
 
-  \item Sie gilt ab dem 25. Mai 2018.
+  \item Sie gilt ab dem 25. Mai 2018.%
   \label{itm:99-2}
 
 \end{enumerate}
