--- a/artikel/01.tex
+++ b/artikel/01.tex
@@ -7,16 +7,16 @@
 \begin{enumerate}
 
   \item Diese Verordnung enthält Vorschriften zum Schutz natürlicher Personen bei der \hyperref[itm:04-2]
-   {Verarbeitung} \hyperref[itm:04-1]{personenbezogener Daten} und zum freien Verkehr solcher Daten.
+   {Verarbeitung} \hyperref[itm:04-1]{personenbezogener Daten} und zum freien Verkehr solcher Daten.%
   \label{itm:01-1}
 
   \item Diese Verordnung schützt die Grundrechte und Grundfreiheiten natürlicher Personen und insbesondere deren Recht
-   auf Schutz \hyperref[itm:04-1]{personenbezogener Daten}.
+   auf Schutz \hyperref[itm:04-1]{personenbezogener Daten}.%
   \label{itm:01-2}
 
   \item Der freie Verkehr \hyperref[itm:04-1]{personenbezogener Daten} in der Union darf aus Gründen des Schutzes
    natürlicher Personen bei der \hyperref[itm:04-2]{Verarbeitung} \hyperref[itm:04-1]{personenbezogener Daten} weder
-   eingeschränkt noch verboten werden.
+   eingeschränkt noch verboten werden.%
   \label{itm:01-3}
 
 \end{enumerate}
