--- a/artikel/07.tex
+++ b/artikel/07.tex
@@ -8,14 +8,14 @@
 
   \item Beruht die \hyperref[itm:04-2]{Verarbeitung} auf einer \hyperref[itm:04-11]{Einwilligung}, muss der \hyperref
    [itm:04-7]{Verantwortliche} nachweisen können, dass die \hyperref[itm:04-1]{betroffene Person} in die \hyperref
-   [itm:04-2]{Verarbeitung} ihrer \hyperref[itm:04-1]{personenbezogenen Daten} eingewilligt hat.
+   [itm:04-2]{Verarbeitung} ihrer \hyperref[itm:04-1]{personenbezogenen Daten} eingewilligt hat.%
   \label{itm:07-1}
 
   \item Erfolgt die \hyperref[itm:04-11]{Einwilligung} der \hyperref[itm:04-1]{betroffenen Person} durch eine
    schriftliche Erklärung, die noch andere Sachverhalte betrifft, so muss das Ersuchen um \hyperref[itm:04-11]
    {Einwilligung} in verständlicher und leicht zugänglicher Form in einer klaren und einfachen Sprache so erfolgen,
    dass es von den anderen Sachverhalten klar zu unterscheiden ist. Teile der Erklärung sind dann nicht verbindlich,
-   wenn sie einen Verstoß gegen diese Verordnung darstellen.
+   wenn sie einen Verstoß gegen diese Verordnung darstellen.%
   \label{itm:07-2}
 
   \item Die \hyperref[itm:04-1]{betroffene Person} hat das Recht, ihre \hyperref[itm:04-11]{Einwilligung} jederzeit zu
@@ -24,14 +24,14 @@
     [itm:04-11]{Einwilligung} bis zum Widerruf erfolgten \hyperref[itm:04-2]{Verarbeitung} nicht berührt. Die \hyperref
     [itm:04-1]{betroffene Person} wird vor Abgabe der \hyperref[itm:04-11]{Einwilligung} hiervon in Kenntnis gesetzt.
     Der Widerruf der
-   \hyperref[itm:04-11]{Einwilligung} muss so einfach wie die Erteilung der \hyperref[itm:04-11]{Einwilligung} sein.
+   \hyperref[itm:04-11]{Einwilligung} muss so einfach wie die Erteilung der \hyperref[itm:04-11]{Einwilligung} sein.%
   \label{itm:07-3}
 
   \item Bei der Beurteilung, ob die \hyperref[itm:04-11]{Einwilligung} freiwillig erteilt wurde, muss dem Umstand in
    größtmöglichem Umfang Rechnung getragen werden, ob unter anderem die Erfüllung eines Vertrags, einschließlich der
    Erbringung einer Dienstleistung, von der \hyperref[itm:04-11]{Einwilligung} zu einer \hyperref[itm:04-2]
    {Verarbeitung} von \hyperref[itm:04-1]{personenbezogenen Daten} abhängig ist, die für die Erfüllung des Vertrags
-   nicht erforderlich sind.
+   nicht erforderlich sind.%
   \label{itm:07-4}
 
 \end{enumerate}
