--- a/artikel/11.tex
+++ b/artikel/11.tex
@@ -10,7 +10,7 @@
    {personenbezogene Daten} verarbeitet, die Identifizierung der
    \hyperref[itm:04-1]{betroffenen Person} durch den \hyperref[itm:04-7]{Verantwortlichen} nicht oder nicht mehr
     erforderlich, so ist dieser nicht verpflichtet, zur bloßen Einhaltung dieser Verordnung zusätzliche Informationen
-    aufzubewahren, einzuholen oder zu verarbeiten, um die \hyperref[itm:04-1]{betroffene Person} zu identifizieren.
+    aufzubewahren, einzuholen oder zu verarbeiten, um die \hyperref[itm:04-1]{betroffene Person} zu identifizieren.%
   \label{itm:11-1}
 
   \item Kann der \hyperref[itm:04-7]{Verantwortliche} in Fällen gemäß \hyperref[itm:11-1]{Absatz 1} des vorliegenden
@@ -18,7 +18,7 @@
    unterrichtet er die \hyperref[itm:04-1]{betroffene Person} hierüber, sofern möglich. In diesen Fällen finden die
    Artikel \hyperref[ch:15]{15} bis \hyperref[ch:20]{20} keine Anwendung, es sei denn, die \hyperref[itm:04-1]
    {betroffene Person} stellt zur Ausübung ihrer in diesen Artikeln niedergelegten Rechte zusätzliche Informationen
-   bereit, die ihre Identifizierung ermöglichen.
+   bereit, die ihre Identifizierung ermöglichen.%
   \label{itm:11-2}
 
 \end{enumerate}
