--- a/artikel/12.tex
+++ b/artikel/12.tex
@@ -14,7 +14,7 @@
     übermitteln; dies gilt insbesondere für Informationen, die sich speziell an Kinder richten. Die Übermittlung der
     Informationen erfolgt schriftlich oder in anderer Form, gegebenenfalls auch elektronisch. Falls von der \hyperref
     [itm:04-1]{betroffenen Person} verlangt, kann die Information mündlich erteilt werden, sofern die Identität
-    der \hyperref[itm:04-1]{betroffenen Person} in anderer Form nachgewiesen wurde.
+    der \hyperref[itm:04-1]{betroffenen Person} in anderer Form nachgewiesen wurde.%
   \label{itm:12-1}
 
   \item Der \hyperref[itm:04-7]{Verantwortliche} erleichtert der \hyperref[itm:04-1]{betroffenen Person} die Ausübung
@@ -22,7 +22,7 @@
    {Artikel 11 Absatz 2} genannten Fällen darf sich der \hyperref[itm:04-7]{Verantwortliche} nur dann weigern, aufgrund
    des Antrags der \hyperref[itm:04-1]{betroffenen Person} auf Wahrnehmung ihrer Rechte gemäß den Artikeln \hyperref
    [ch:15]{15} bis \hyperref[ch:22]{22} tätig zu werden, wenn er glaubhaft macht, dass er nicht in der Lage ist,
-   die \hyperref[itm:04-1]{betroffene Person} zu identifizieren.
+   die \hyperref[itm:04-1]{betroffene Person} zu identifizieren.%
   \label{itm:12-2}
 
   \item Der \hyperref[itm:04-7]{Verantwortliche} stellt der \hyperref[itm:04-1]{betroffenen Person} Informationen über
@@ -33,30 +33,30 @@
    \hyperref[itm:04-1]{betroffene Person} innerhalb eines Monats nach Eingang des Antrags über eine Fristverlängerung,
     zusammen mit den Gründen für die Verzögerung. Stellt die \hyperref[itm:04-1]{betroffene Person} den Antrag
     elektronisch, so ist sie nach Möglichkeit auf elektronischem Weg zu unterrichten, sofern sie nichts anderes
-    angibt.
+    angibt.%
   \label{itm:12-3}
 
   \item Wird der \hyperref[itm:04-7]{Verantwortliche} auf den Antrag der \hyperref[itm:04-1]{betroffenen Person} hin
    nicht tätig, so unterrichtet er die
    \hyperref[itm:04-1]{betroffene Person} ohne Verzögerung, spätestens aber innerhalb eines Monats nach Eingang des
     Antrags über die Gründe hierfür und über die Möglichkeit, bei einer \hyperref[itm:04-21]
-    {Aufsichtsbehörde} Beschwerde einzulegen oder einen gerichtlichen Rechtsbehelf einzulegen.
+    {Aufsichtsbehörde} Beschwerde einzulegen oder einen gerichtlichen Rechtsbehelf einzulegen.%
   \label{itm:12-4}
 
   \item Informationen gemäß den Artikeln \hyperref[ch:13]{13} und \hyperref[ch:14]{14} sowie alle Mitteilungen und
    Maßnahmen gemäß den Artikeln \hyperref[ch:15]{15} bis \hyperref[ch:22]{22} und \hyperref[ch:34]{Artikel 34} werden
    unentgeltlich zur Verfügung gestellt. Bei offenkundig unbegründeten oder -- insbesondere im Fall von häufiger
    Wiederholung -- exzessiven Anträgen einer \hyperref[itm:04-1]{betroffenen Person} kann der \hyperref[itm:04-7]
-   {Verantwortliche} entweder
+   {Verantwortliche} entweder%
   \label{itm:12-5}
 
   \begin{enumerate}
   
     \item ein angemessenes Entgelt verlangen, bei dem die Verwaltungskosten für die Unterrichtung oder die Mitteilung
-     oder die Durchführung der beantragten Maßnahme berücksichtigt werden, oder
+     oder die Durchführung der beantragten Maßnahme berücksichtigt werden, oder%
     \label{itm:12-5a}
 
-    \item sich weigern, aufgrund des Antrags tätig zu werden.
+    \item sich weigern, aufgrund des Antrags tätig zu werden.%
     \label{itm:12-5b}
 
   \end{enumerate}
@@ -67,19 +67,19 @@
   \item Hat der \hyperref[itm:04-7]{Verantwortliche} begründete Zweifel an der Identität der natürlichen Person, die den
    Antrag gemäß den Artikeln \hyperref[ch:15]{15} bis \hyperref[ch:21]{21} stellt, so kann er unbeschadet des \hyperref
    [ch:11]{Artikels 11} zusätzliche Informationen anfordern, die zur Bestätigung der Identität der \hyperref[itm:04-1]
-   {betroffenen Person} erforderlich sind.
+   {betroffenen Person} erforderlich sind.%
   \label{itm:12-6}
 
   \item Die Informationen, die den \hyperref[itm:04-1]{betroffenen Personen} gemäß den Artikeln \hyperref[ch:13]
    {13} und \hyperref[ch:14]{14} bereitzustellen sind, können in Kombination mit standardisierten Bildsymbolen
    bereitgestellt werden, um in leicht wahrnehmbarer, verständlicher und klar nachvollziehbarer Form einen
    aussagekräftigen Überblick über die beabsichtigte \hyperref[itm:04-2]{Verarbeitung} zu vermitteln. Werden die
-   Bildsymbole in elektronischer Form dargestellt, müssen sie maschinenlesbar sein.
+   Bildsymbole in elektronischer Form dargestellt, müssen sie maschinenlesbar sein.%
   \label{itm:12-7}
 
   \item Der Kommission wird die Befugnis übertragen, gemäß \hyperref[ch:92]{Artikel 92} delegierte Rechtsakte zur
    Bestimmung der Informationen, die durch Bildsymbole darzustellen sind, und der Verfahren für die Bereitstellung
-   standardisierter Bildsymbole zu erlassen.
+   standardisierter Bildsymbole zu erlassen.%
   \label{itm:12-8}
 
 \end{enumerate}
