--- a/artikel/35.tex
+++ b/artikel/35.tex
@@ -11,15 +11,15 @@
    Risiko für die Rechte und Freiheiten natürlicher Personen zur Folge, so führt der \hyperref[itm:04-7]
    {Verantwortliche} vorab eine Abschätzung der Folgen der vorgesehenen Verarbeitungsvorgänge für den Schutz \hyperref
    [itm:04-1]{personenbezogener Daten} durch. Für die Untersuchung mehrerer ähnlicher Verarbeitungsvorgänge mit ähnlich
-   hohen Risiken kann eine einzige Abschätzung vorgenommen werden.
+   hohen Risiken kann eine einzige Abschätzung vorgenommen werden.%
   \label{itm:35-1}
 
   \item Der \hyperref[itm:04-7]{Verantwortliche} holt bei der Durchführung einer Datenschutz-Folgenabschätzung den Rat
-   des Datenschutzbeauftragten, sofern ein solcher benannt wurde, ein.
+   des Datenschutzbeauftragten, sofern ein solcher benannt wurde, ein.%
   \label{itm:35-2}
 
   \item Eine Datenschutz-Folgenabschätzung gemäß \hyperref[itm:35-1]{Absatz 1} ist insbesondere in folgenden Fällen
-   erforderlich:
+   erforderlich:%
   \label{itm:35-3}
 
   \begin{enumerate}
@@ -27,16 +27,16 @@
     \item systematische und umfassende Bewertung persönlicher Aspekte natürlicher Personen, die sich auf automatisierte
      \hyperref[itm:04-2]{Verarbeitung} einschließlich \hyperref[itm:04-4]{Profiling} gründet und die ihrerseits als
       Grundlage für Entscheidungen dient, die Rechtswirkung gegenüber natürlichen Personen entfalten oder diese in
-      ähnlich erheblicher Weise beeinträchtigen;
+      ähnlich erheblicher Weise beeinträchtigen;%
     \label{itm:35-3a}
 
     \item umfangreiche \hyperref[itm:04-2]{Verarbeitung} besonderer Kategorien von \hyperref[itm:04-1]
      {personenbezogenen Daten} gemäß \hyperref[itm:09-1]{Artikel 9 Absatz 1} oder von \hyperref[itm:04-1]
      {personenbezogenen Daten} über strafrechtliche Verurteilungen und Straftaten gemäß \hyperref[ch:10]{Artikel 10}
-     oder
+     oder%
     \label{itm:35-3b}
 
-    \item systematische umfangreiche Überwachung öffentlich zugänglicher Bereiche.
+    \item systematische umfangreiche Überwachung öffentlich zugänglicher Bereiche.%
     \label{itm:35-3c}
 
   \end{enumerate}
@@ -44,12 +44,12 @@
   \item Die \hyperref[itm:04-21]{Aufsichtsbehörde} erstellt eine Liste der Verarbeitungsvorgänge, für die
    gemäß \hyperref[itm:35-1]{Absatz 1} eine Datenschutz-Folgenabschätzung durchzuführen ist, und veröffentlicht diese.
    Die \hyperref[itm:04-21]{Aufsichtsbehörde} übermittelt diese Listen dem in \hyperref[ch:68]{Artikel 68} genannten
-   Ausschuss.
+   Ausschuss.%
   \label{itm:35-4}
 
   \item Die \hyperref[itm:04-21]{Aufsichtsbehörde} kann des Weiteren eine Liste der Arten von Verarbeitungsvorgängen
    erstellen und veröffentlichen, für die keine Datenschutz-Folgenabschätzung erforderlich ist. Die \hyperref
-   [itm:04-21]{Aufsichtsbehörde} übermittelt diese Listen dem Ausschuss.
+   [itm:04-21]{Aufsichtsbehörde} übermittelt diese Listen dem Ausschuss.%
   \label{itm:35-5}
 
   \item Vor Festlegung der in den Absätzen \hyperref[itm:35-4]{4} und \hyperref[itm:35-5]{5} genannten Listen wendet die
@@ -57,30 +57,30 @@
    solche Listen Verarbeitungstätigkeiten umfassen, die mit dem Angebot von Waren oder Dienstleistungen für \hyperref
    [itm:04-1]{betroffene Personen} oder der Beobachtung des Verhaltens dieser Personen in mehreren Mitgliedstaaten im
    Zusammenhang stehen oder die den freien Verkehr \hyperref[itm:04-1]{personenbezogener Daten} innerhalb der Union
-   erheblich beeinträchtigen könnten.
+   erheblich beeinträchtigen könnten.%
   \label{itm:35-6}
 
-  \item Die Folgenabschätzung enthält zumindest Folgendes:
+  \item Die Folgenabschätzung enthält zumindest Folgendes:%
   \label{itm:35-7}
 
   \begin{enumerate}
   
     \item eine systematische Beschreibung der geplanten Verarbeitungsvorgänge und der Zwecke der \hyperref[itm:04-2]
      {Verarbeitung}, gegebenenfalls einschließlich der von dem \hyperref[itm:04-7]{Verantwortlichen} verfolgten
-     berechtigten Interessen;
+     berechtigten Interessen;%
     \label{itm:35-7a}
 
-    \item eine Bewertung der Notwendigkeit und Verhältnismäßigkeit der Verarbeitungsvorgänge in Bezug auf den Zweck;
+    \item eine Bewertung der Notwendigkeit und Verhältnismäßigkeit der Verarbeitungsvorgänge in Bezug auf den Zweck;%
     \label{itm:35-7b}
 
     \item eine Bewertung der Risiken für die Rechte und Freiheiten der \hyperref[itm:04-1]{betroffenen Personen}
-     gemäß \hyperref[itm:35-1]{Absatz 1} und
+     gemäß \hyperref[itm:35-1]{Absatz 1} und%
     \label{itm:35-7c}
 
     \item die zur Bewältigung der Risiken geplanten Abhilfemaßnahmen, einschließlich Garantien, Sicherheitsvorkehrungen
      und Verfahren, durch die der Schutz \hyperref[itm:04-1]{personenbezogener Daten} sichergestellt und der Nachweis
      dafür erbracht wird, dass diese Verordnung eingehalten wird, wobei den Rechten und berechtigten Interessen
-     der \hyperref[itm:04-1]{betroffenen Personen} und sonstiger Betroffener Rechnung getragen wird.
+     der \hyperref[itm:04-1]{betroffenen Personen} und sonstiger Betroffener Rechnung getragen wird.%
     \label{itm:35-7d}
 
   \end{enumerate}
@@ -88,13 +88,13 @@
   \item Die Einhaltung genehmigter Verhaltensregeln gemäß \hyperref[ch:40]{Artikel 40} durch die zuständigen
    \hyperref[itm:04-7]{Verantwortlichen} oder die zuständigen \hyperref[itm:04-8]{Auftragsverarbeiter} ist bei der
     Beurteilung der Auswirkungen der von diesen durchgeführten Verarbeitungsvorgänge, insbesondere für die Zwecke einer
-    Datenschutz-Folgenabschätzung, gebührend zu berücksichtigen.
+    Datenschutz-Folgenabschätzung, gebührend zu berücksichtigen.%
   \label{itm:35-8}
 
   \item Der \hyperref[itm:04-7]{Verantwortliche} holt gegebenenfalls den Standpunkt der \hyperref[itm:04-1]
    {betroffenen Personen} oder ihrer \hyperref[itm:04-17]{Vertreter} zu der beabsichtigten \hyperref[itm:04-2]
    {Verarbeitung} unbeschadet des Schutzes gewerblicher oder öffentlicher Interessen oder der Sicherheit der
-   Verarbeitungsvorgänge ein.
+   Verarbeitungsvorgänge ein.%
   \label{itm:35-9}
 
   \item Falls die \hyperref[itm:04-2]{Verarbeitung} gemäß \hyperref[itm:06-1]{Artikel 6 Absatz 1} Buchstabe \hyperref
@@ -105,12 +105,12 @@
     Folgenabschätzung im Zusammenhang mit dem Erlass dieser Rechtsgrundlage eine Datenschutz-Folgenabschätzung
     erfolgte, gelten die Absätze \hyperref[itm:35-1]{1} bis \hyperref[itm:35-7]{7} nur, wenn es nach dem Ermessen der
     Mitgliedstaaten erforderlich ist, vor den betreffenden Verarbeitungstätigkeiten eine solche Folgenabschätzung
-    durchzuführen.
+    durchzuführen.%
   \label{itm:35-10}
 
   \item Erforderlichenfalls führt der \hyperref[itm:04-7]{Verantwortliche} eine Überprüfung durch, um zu bewerten, ob
    die \hyperref[itm:04-2]{Verarbeitung} gemäß der Datenschutz-Folgenabschätzung durchgeführt wird; dies gilt
-   zumindest, wenn hinsichtlich des mit den Verarbeitungsvorgängen verbundenen Risikos Änderungen eingetreten sind.
+   zumindest, wenn hinsichtlich des mit den Verarbeitungsvorgängen verbundenen Risikos Änderungen eingetreten sind.%
   \label{itm:35-11}
 
 \end{enumerate}
