--- a/artikel/37.tex
+++ b/artikel/37.tex
@@ -7,36 +7,36 @@
 \begin{enumerate}
 
   \item Der \hyperref[itm:04-7]{Verantwortliche} und der \hyperref[itm:04-8]{Auftragsverarbeiter} benennen auf jeden
-   Fall einen Datenschutzbeauftragten, wenn
+   Fall einen Datenschutzbeauftragten, wenn%
   \label{itm:37-1}
 
   \begin{enumerate}
   
     \item die \hyperref[itm:04-2]{Verarbeitung} von einer Behörde oder öffentlichen Stelle durchgeführt wird, mit
-     Ausnahme von Gerichten, soweit sie im Rahmen ihrer justiziellen Tätigkeit handeln,
+     Ausnahme von Gerichten, soweit sie im Rahmen ihrer justiziellen Tätigkeit handeln,%
     \label{itm:37-1a}
 
     \item die Kerntätigkeit des \hyperref[itm:04-7]{Verantwortlichen} oder des \hyperref[itm:04-8]
      {Auftragsverarbeiters} in der Durchführung von Verarbeitungsvorgängen besteht, welche aufgrund ihrer Art, ihres
      Umfangs und/oder ihrer Zwecke eine umfangreiche regelmäßige und systematische Überwachung von \hyperref[itm:04-1]
-     {betroffenen Personen} erforderlich machen, oder
+     {betroffenen Personen} erforderlich machen, oder%
     \label{itm:37-1b}
 
     \item die Kerntätigkeit des \hyperref[itm:04-7]{Verantwortlichen} oder des \hyperref[itm:04-8]
      {Auftragsverarbeiters} in der umfangreichen \hyperref[itm:04-2]{Verarbeitung} besonderer Kategorien von Daten
      gemäß \hyperref[ch:9]{Artikel 9} oder von \hyperref[itm:04-1]{personenbezogenen Daten} über strafrechtliche
-     Verurteilungen und Straftaten gemäß \hyperref[ch:10]{Artikel 10} besteht.
+     Verurteilungen und Straftaten gemäß \hyperref[ch:10]{Artikel 10} besteht.%
     \label{itm:37-1c}
 
   \end{enumerate}
 
   \item Eine \hyperref[itm:04-19]{Unternehmensgruppe} darf einen gemeinsamen Datenschutzbeauftragten ernennen, sofern
-   von jeder Niederlassung aus der Datenschutzbeauftragte leicht erreicht werden kann.
+   von jeder Niederlassung aus der Datenschutzbeauftragte leicht erreicht werden kann.%
   \label{itm:37-2}
 
   \item Falls es sich bei dem \hyperref[itm:04-7]{Verantwortlichen} oder dem \hyperref[itm:04-8]{Auftragsverarbeiter} um
    eine Behörde oder öffentliche Stelle handelt, kann für mehrere solcher Behörden oder Stellen unter Berücksichtigung
-   ihrer Organisationsstruktur und ihrer Größe ein gemeinsamer Datenschutzbeauftragter benannt werden.
+   ihrer Organisationsstruktur und ihrer Größe ein gemeinsamer Datenschutzbeauftragter benannt werden.%
   \label{itm:37-3}
 
   \item In anderen als den in \hyperref[itm:37-1]{Absatz 1} genannten Fällen können der \hyperref[itm:04-7]
@@ -46,20 +46,20 @@
    \hyperref[itm:04-8]{Auftragsverarbeitern} vertreten, einen Datenschutzbeauftragten benennen; falls dies nach dem
     Recht der Union oder der Mitgliedstaaten vorgeschrieben ist, müssen sie einen solchen benennen. Der
     Datenschutzbeauftragte kann für derartige Verbände und andere Vereinigungen, die \hyperref[itm:04-7]
-    {Verantwortliche} oder \hyperref[itm:04-8]{Auftragsverarbeiter} vertreten, handeln.
+    {Verantwortliche} oder \hyperref[itm:04-8]{Auftragsverarbeiter} vertreten, handeln.%
   \label{itm:37-4}
 
   \item Der Datenschutzbeauftragte wird auf der Grundlage seiner beruflichen Qualifikation und insbesondere des
    Fachwissens benannt, das er auf dem Gebiet des Datenschutzrechts und der Datenschutzpraxis besitzt, sowie auf der
-   Grundlage seiner Fähigkeit zur Erfüllung der in \hyperref[ch:39]{Artikel 39} genannten Aufgaben.
+   Grundlage seiner Fähigkeit zur Erfüllung der in \hyperref[ch:39]{Artikel 39} genannten Aufgaben.%
   \label{itm:37-5}
 
   \item Der Datenschutzbeauftragte kann Beschäftigter des \hyperref[itm:04-7]{Verantwortlichen} oder des \hyperref
-   [itm:04-8]{Auftragsverarbeiters} sein oder seine Aufgaben auf der Grundlage eines Dienstleistungsvertrags erfüllen.
+   [itm:04-8]{Auftragsverarbeiters} sein oder seine Aufgaben auf der Grundlage eines Dienstleistungsvertrags erfüllen.%
   \label{itm:37-6}
 
   \item Der \hyperref[itm:04-7]{Verantwortliche} oder der \hyperref[itm:04-8]{Auftragsverarbeiter} veröffentlicht die
-   Kontaktdaten des Datenschutzbeauftragten und teilt diese Daten der \hyperref[itm:04-21]{Aufsichtsbehörde} mit.
+   Kontaktdaten des Datenschutzbeauftragten und teilt diese Daten der \hyperref[itm:04-21]{Aufsichtsbehörde} mit.%
   \label{itm:37-7}
 
 \end{enumerate}
