--- a/artikel/38.tex
+++ b/artikel/38.tex
@@ -8,14 +8,14 @@
 
   \item Der \hyperref[itm:04-7]{Verantwortliche} und der \hyperref[itm:04-8]{Auftragsverarbeiter} stellen sicher, dass
    der Datenschutzbeauftragte ordnungsgemäß und frühzeitig in alle mit dem Schutz \hyperref[itm:04-1]
-   {personenbezogener Daten} zusammenhängenden Fragen eingebunden wird.
+   {personenbezogener Daten} zusammenhängenden Fragen eingebunden wird.%
   \label{itm:38-1}
 
   \item Der \hyperref[itm:04-7]{Verantwortliche} und der \hyperref[itm:04-8]{Auftragsverarbeiter} unterstützen den
    Datenschutzbeauftragten bei der Erfüllung seiner Aufgaben gemäß \hyperref[ch:39]{Artikel 39}, indem sie die für die
    Erfüllung dieser Aufgaben erforderlichen Ressourcen und den Zugang zu \hyperref[itm:04-1]{personenbezogenen Daten}
    und Verarbeitungsvorgängen sowie die zur Erhaltung seines Fachwissens erforderlichen Ressourcen zur Verfügung
-   stellen.
+   stellen.%
   \label{itm:38-2}
 
   \item Der \hyperref[itm:04-7]{Verantwortliche} und der \hyperref[itm:04-8]{Auftragsverarbeiter} stellen sicher, dass
@@ -23,22 +23,22 @@
    Aufgaben erhält. Der Datenschutzbeauftragte darf von dem \hyperref[itm:04-7]{Verantwortlichen} oder dem \hyperref
    [itm:04-8]{Auftragsverarbeiter} wegen der Erfüllung seiner Aufgaben nicht abberufen oder benachteiligt werden. Der
    Datenschutzbeauftragte berichtet unmittelbar der höchsten Managementebene des \hyperref[itm:04-7]
-   {Verantwortlichen} oder des \hyperref[itm:04-8]{Auftragsverarbeiters}.
+   {Verantwortlichen} oder des \hyperref[itm:04-8]{Auftragsverarbeiters}.%
   \label{itm:38-3}
 
   \item \hyperref[itm:04-1]{Betroffene Personen} können den Datenschutzbeauftragten zu allen mit der \hyperref[itm:04-2]
    {Verarbeitung} ihrer personenbezogenen Daten und mit der Wahrnehmung ihrer Rechte gemäß dieser Verordnung im
-   Zusammenhang stehenden Fragen zu Rate ziehen.
+   Zusammenhang stehenden Fragen zu Rate ziehen.%
   \label{itm:38-4}
 
   \item Der Datenschutzbeauftragte ist nach dem Recht der Union oder der Mitgliedstaaten bei der Erfüllung seiner
-   Aufgaben an die Wahrung der Geheimhaltung oder der Vertraulichkeit gebunden.
+   Aufgaben an die Wahrung der Geheimhaltung oder der Vertraulichkeit gebunden.%
   \label{itm:38-5}
 
   \item Der Datenschutzbeauftragte kann andere Aufgaben und Pflichten wahrnehmen. Der \hyperref[itm:04-7]
    {Verantwortliche} oder der
    \hyperref[itm:04-8]{Auftragsverarbeiter} stellt sicher, dass derartige Aufgaben und Pflichten nicht zu einem
-    Interessenkonflikt führen.
+    Interessenkonflikt führen.%
   \label{itm:38-6}
 
 \end{enumerate}
