--- a/artikel/49.tex
+++ b/artikel/49.tex
@@ -10,43 +10,43 @@
    Garantien nach \hyperref[ch:46]{Artikel 46}, einschließlich \hyperref[itm:04-20]{verbindlicher interner
    Datenschutzvorschriften}, bestehen, ist eine Übermittlung oder eine Reihe von Übermittlungen \hyperref[itm:04-1]
    {personenbezogener Daten} an ein Drittland oder an eine \hyperref[itm:04-29]{internationale Organisation} nur unter
-   einer der folgenden Bedingungen zulässig:
+   einer der folgenden Bedingungen zulässig:%
   \label{itm:49-1-1}
 
   \begin{enumerate}
   
     \item die \hyperref[itm:04-1]{betroffene Person} hat in die vorgeschlagene Datenübermittlung ausdrücklich
      eingewilligt, nachdem sie über die für sie bestehenden möglichen Risiken derartiger Datenübermittlungen ohne
-     Vorliegen eines Angemessenheitsbeschlusses und ohne geeignete Garantien unterrichtet wurde,
+     Vorliegen eines Angemessenheitsbeschlusses und ohne geeignete Garantien unterrichtet wurde,%
     \label{itm:49-1-1a}
 
     \item die Übermittlung ist für die Erfüllung eines Vertrags zwischen der \hyperref[itm:04-1]{betroffenen Person} und
      dem \hyperref[itm:04-7]{Verantwortlichen} oder zur Durchführung von vorvertraglichen Maßnahmen auf Antrag
-     der \hyperref[itm:04-1]{betroffenen Person} erforderlich,
+     der \hyperref[itm:04-1]{betroffenen Person} erforderlich,%
     \label{itm:49-1-1b}
 
     \item die Übermittlung ist zum Abschluss oder zur Erfüllung eines im Interesse der \hyperref[itm:04-1]
      {betroffenen Person} von dem
      \hyperref[itm:04-7]{Verantwortlichen} mit einer anderen natürlichen oder juristischen Person geschlossenen Vertrags
-      erforderlich,
+      erforderlich,%
     \label{itm:49-1-1c}
 
-    \item die Übermittlung ist aus wichtigen Gründen des öffentlichen Interesses notwendig,
+    \item die Übermittlung ist aus wichtigen Gründen des öffentlichen Interesses notwendig,%
     \label{itm:49-1-1d}
 
-    \item die Übermittlung ist zur Geltendmachung, Ausübung oder Verteidigung von Rechtsansprüchen erforderlich,
+    \item die Übermittlung ist zur Geltendmachung, Ausübung oder Verteidigung von Rechtsansprüchen erforderlich,%
     \label{itm:49-1-1e}
 
     \item die Übermittlung ist zum Schutz lebenswichtiger Interessen der \hyperref[itm:04-1]{betroffenen Person} oder
      anderer Personen erforderlich, sofern die \hyperref[itm:04-1]{betroffene Person} aus physischen oder rechtlichen
      Gründen außerstande ist, ihre
-     \hyperref[itm:04-11]{Einwilligung} zu geben,
+     \hyperref[itm:04-11]{Einwilligung} zu geben,%
     \label{itm:49-1-1f}
 
     \item die Übermittlung erfolgt aus einem Register, das gemäß dem Recht der Union oder der Mitgliedstaaten zur
      Information der Öffentlichkeit bestimmt ist und entweder der gesamten Öffentlichkeit oder allen Personen, die ein
      berechtigtes Interesse nachweisen können, zur Einsichtnahme offensteht, aber nur soweit die im Recht der Union
-     oder der Mitgliedstaaten festgelegten Voraussetzungen für die Einsichtnahme im Einzelfall gegeben sind.
+     oder der Mitgliedstaaten festgelegten Voraussetzungen für die Einsichtnahme im Einzelfall gegeben sind.%
     \label{itm:49-1-1g}
 
   \end{enumerate}
@@ -64,35 +64,35 @@
    {Verantwortliche} setzt die \hyperref[itm:04-21]{Aufsichtsbehörde} von der Übermittlung in Kenntnis. Der \hyperref
    [itm:04-7]{Verantwortliche} unterrichtet die \hyperref[itm:04-1]{betroffene Person} über die Übermittlung und seine
    zwingenden berechtigten Interessen; dies erfolgt zusätzlich zu den der \hyperref[itm:04-1]{betroffenen Person} nach
-   den Artikeln \hyperref[ch:13]{13} und \hyperref[ch:14]{14} mitgeteilten Informationen.
+   den Artikeln \hyperref[ch:13]{13} und \hyperref[ch:14]{14} mitgeteilten Informationen.%
   \label{itm:49-1-2}
 
   \item Datenübermittlungen gemäß \hyperref[itm:49-1-1g]{Absatz 1 Unterabsatz 1 Buchstabe g} dürfen nicht die Gesamtheit
    oder ganze Kategorien der im Register enthaltenen \hyperref[itm:04-1]{personenbezogenen Daten} umfassen. Wenn das
    Register der Einsichtnahme durch Personen mit berechtigtem Interesse dient, darf die Übermittlung nur auf Anfrage
-   dieser Personen oder nur dann erfolgen, wenn diese Personen die Adressaten der Übermittlung sind.
+   dieser Personen oder nur dann erfolgen, wenn diese Personen die Adressaten der Übermittlung sind.%
   \label{itm:49-2}
 
   \item Absatz 1 Unterabsatz 1 Buchstaben \hyperref[itm:49-1-1a]{a}, \hyperref[itm:49-1-1b]{b} und \hyperref
    [itm:49-1-1c]{c} und sowie \hyperref[itm:49-1-2]{Absatz 1 Unterabsatz 2} gelten nicht für Tätigkeiten, die Behörden
-   in Ausübung ihrer hoheitlichen Befugnisse durchführen.
+   in Ausübung ihrer hoheitlichen Befugnisse durchführen.%
   \label{itm:49-3}
 
   \item Das öffentliche Interesse im Sinne des \hyperref[itm:49-1-1d]{Absatzes 1 Unterabsatz 1 Buchstabe d} muss im
    Unionsrecht oder im Recht des Mitgliedstaats, dem der \hyperref[itm:04-7]{Verantwortliche} unterliegt, anerkannt
-   sein.
+   sein.%
   \label{itm:49-4}
 
   \item Liegt kein Angemessenheitsbeschluss vor, so können im Unionsrecht oder im Recht der Mitgliedstaaten aus
    wichtigen Gründen des öffentlichen Interesses ausdrücklich Beschränkungen der Übermittlung bestimmter Kategorien
    von
    \hyperref[itm:04-1]{personenbezogenen Daten} an Drittländer oder \hyperref[itm:04-29]{internationale Organisationen}
-    vorgesehen werden. Die Mitgliedstaaten teilen der Kommission derartige Bestimmungen mit.
+    vorgesehen werden. Die Mitgliedstaaten teilen der Kommission derartige Bestimmungen mit.%
   \label{itm:49-5}
 
   \item Der \hyperref[itm:04-7]{Verantwortliche} oder der \hyperref[itm:04-8]{Auftragsverarbeiter} erfasst die von ihm
    vorgenommene Beurteilung sowie die angemessenen Garantien im Sinne des \hyperref[itm:49-1-2]{Absatzes 1 Unterabsatz
-   2 des vorliegenden Artikels} in der Dokumentation gemäß \hyperref[ch:30]{Artikel 30}.
+   2 des vorliegenden Artikels} in der Dokumentation gemäß \hyperref[ch:30]{Artikel 30}.%
   \label{itm:49-6}
 
 \end{enumerate}
