--- a/artikel/51.tex
+++ b/artikel/51.tex
@@ -9,23 +9,23 @@
   \item Jeder Mitgliedstaat sieht vor, dass eine oder mehrere unabhängige Behörden für die Überwachung der Anwendung
    dieser Verordnung zuständig sind, damit die Grundrechte und Grundfreiheiten natürlicher Personen bei der
    \hyperref[itm:04-2]{Verarbeitung} geschützt werden und der freie Verkehr \hyperref[itm:04-1]{personenbezogener Daten}
-    in der Union erleichtert wird(im Folgenden „\hyperref[itm:04-21]{Aufsichtsbehörde}“).
+    in der Union erleichtert wird(im Folgenden „\hyperref[itm:04-21]{Aufsichtsbehörde}“).%
   \label{itm:51-1}
 
   \item Jede \hyperref[itm:04-21]{Aufsichtsbehörde} leistet einen Beitrag zur einheitlichen Anwendung dieser Verordnung
    in der gesamten Union. Zu diesem Zweck arbeiten die \hyperref[itm:04-21]{Aufsichtsbehörden} untereinander sowie mit
-   der Kommission gemäß \hyperref[part:7]{Kapitel VII} zusammen.
+   der Kommission gemäß \hyperref[part:7]{Kapitel VII} zusammen.%
   \label{itm:51-2}
 
   \item Gibt es in einem Mitgliedstaat mehr als eine \hyperref[itm:04-21]{Aufsichtsbehörde}, so bestimmt dieser
    Mitgliedstaat die
    \hyperref[itm:04-21]{Aufsichtsbehörde}, die diese Behörden im Ausschuss vertritt, und führt ein Verfahren ein, mit
     dem sichergestellt wird, dass die anderen Behörden die Regeln für das Kohärenzverfahren nach \hyperref[ch:63]
-    {Artikel 63} einhalten.
+    {Artikel 63} einhalten.%
   \label{itm:51-3}
 
   \item Jeder Mitgliedstaat teilt der Kommission bis spätestens 25. Mai 2018 die Rechtsvorschriften, die er aufgrund
-   dieses Kapitels erlässt, sowie unverzüglich alle folgenden Änderungen dieser Vorschriften mit.
+   dieses Kapitels erlässt, sowie unverzüglich alle folgenden Änderungen dieser Vorschriften mit.%
   \label{itm:51-4}
 
 \end{enumerate}
