--- a/artikel/55.tex
+++ b/artikel/55.tex
@@ -7,17 +7,17 @@
 \begin{enumerate}
 
   \item Jede \hyperref[itm:04-21]{Aufsichtsbehörde} ist für die Erfüllung der Aufgaben und die Ausübung der Befugnisse,
-   die ihr mit dieser Verordnung übertragen wurden, im Hoheitsgebiet ihres eigenen Mitgliedstaats zuständig.
+   die ihr mit dieser Verordnung übertragen wurden, im Hoheitsgebiet ihres eigenen Mitgliedstaats zuständig.%
   \label{itm:55-1}
 
   \item Erfolgt die \hyperref[itm:04-2]{Verarbeitung} durch Behörden oder private Stellen auf der Grundlage
    von \hyperref[itm:06-1]{Artikel 6 Absatz 1} Buchstabe \hyperref[itm:06-1c]{c} oder \hyperref[itm:06-1e]{e}, so ist
    die \hyperref[itm:04-21]{Aufsichtsbehörde} des betroffenen Mitgliedstaats zuständig. In diesem Fall findet \hyperref
-   [ch:56]{Artikel 56} keine Anwendung.
+   [ch:56]{Artikel 56} keine Anwendung.%
   \label{itm:55-2}
 
   \item Die \hyperref[itm:04-21]{Aufsichtsbehörden} sind nicht zuständig für die Aufsicht über die von Gerichten im
-   Rahmen ihrer justiziellen Tätigkeit vorgenommenen \hyperref[itm:04-2]{Verarbeitungen}.
+   Rahmen ihrer justiziellen Tätigkeit vorgenommenen \hyperref[itm:04-2]{Verarbeitungen}.%
   \label{itm:55-3}
 
 \end{enumerate}
