--- a/artikel/60.tex
+++ b/artikel/60.tex
@@ -9,7 +9,7 @@
   \item Die federführende \hyperref[itm:04-21]{Aufsichtsbehörde} arbeitet mit den anderen \hyperref[itm:04-22]
    {betroffenen Aufsichtsbehörden} im Einklang mit diesem Artikel zusammen und bemüht sich dabei, einen Konsens zu
    erzielen. Die federführende \hyperref[itm:04-21]{Aufsichtsbehörde} und die
-   \hyperref[itm:04-22]{betroffenen Aufsichtsbehörden} tauschen untereinander alle zweckdienlichen Informationen aus.
+   \hyperref[itm:04-22]{betroffenen Aufsichtsbehörden} tauschen untereinander alle zweckdienlichen Informationen aus.%
   \label{itm:60-1}
 
   \item Die federführende \hyperref[itm:04-21]{Aufsichtsbehörde} kann jederzeit andere \hyperref[itm:04-22]
@@ -17,13 +17,13 @@
   \hyperref[ch:61]{Artikel 61} ersuchen und gemeinsame Maßnahmen gemäß \hyperref[ch:62]{Artikel 62} durchführen,
    insbesondere zur Durchführung von Untersuchungen oder zur Überwachung der Umsetzung einer Maßnahme in Bezug auf
    einen \hyperref[itm:04-7]{Verantwortlichen} oder einen \hyperref[itm:04-8]{Auftragsverarbeiter}, der in einem
-   anderen Mitgliedstaat niedergelassen ist.
+   anderen Mitgliedstaat niedergelassen ist.%
   \label{itm:60-2}
 
   \item Die federführende \hyperref[itm:04-21]{Aufsichtsbehörde} übermittelt den anderen \hyperref[itm:04-22]
    {betroffenen Aufsichtsbehörden} unverzüglich die zweckdienlichen Informationen zu der Angelegenheit. Sie legt den
    anderen \hyperref[itm:04-22]{betroffenen Aufsichtsbehörden} unverzüglich einen Beschlussentwurf zur Stellungnahme
-   vor und trägt deren Standpunkten gebührend Rechnung.
+   vor und trägt deren Standpunkten gebührend Rechnung.%
   \label{itm:60-3}
 
   \item Legt eine der anderen \hyperref[itm:04-22]{betroffenen Aufsichtsbehörden} innerhalb von vier Wochen, nachdem sie
@@ -31,20 +31,20 @@
    einen \hyperref[itm:04-27]{maßgeblichen und begründeten Einspruch} ein und schließt sich die federführende \hyperref
    [itm:04-21]{Aufsichtsbehörde} dem \hyperref[itm:04-27]{maßgeblichen und begründeten Einspruch} nicht an oder ist der
    Ansicht, dass der Einspruch nicht maßgeblich oder nicht begründet ist, so leitet die federführende \hyperref
-   [itm:04-21]{Aufsichtsbehörde} das Kohärenzverfahren gemäß \hyperref[ch:63]{Artikel 63} für die Angelegenheit ein.
+   [itm:04-21]{Aufsichtsbehörde} das Kohärenzverfahren gemäß \hyperref[ch:63]{Artikel 63} für die Angelegenheit ein.%
   \label{itm:60-4}
 
   \item Beabsichtigt die federführende \hyperref[itm:04-21]{Aufsichtsbehörde}, sich dem \hyperref[itm:04-27]
    {maßgeblichen und begründeten Einspruch} anzuschließen, so legt sie den anderen \hyperref[itm:04-22]
    {betroffenen Aufsichtsbehörden} einen überarbeiteten Beschlussentwurf zur Stellungnahme vor. Der überarbeitete
-   Beschlussentwurf wird innerhalb von zwei Wochen dem Verfahren nach \hyperref[itm:60-4]{Absatz 4} unterzogen.
+   Beschlussentwurf wird innerhalb von zwei Wochen dem Verfahren nach \hyperref[itm:60-4]{Absatz 4} unterzogen.%
   \label{itm:60-5}
 
   \item Legt keine der anderen \hyperref[itm:04-22]{betroffenen Aufsichtsbehörden} Einspruch gegen den Beschlussentwurf
    ein, der von der federführenden \hyperref[itm:04-21]{Aufsichtsbehörde} innerhalb der in den Absätzen \hyperref
    [itm:60-4]{4} und \hyperref[itm:60-5]{5} festgelegten Frist vorgelegt wurde, so gelten die federführende \hyperref
    [itm:04-21]{Aufsichtsbehörde} und die \hyperref[itm:04-22]{betroffenen Aufsichtsbehörden} als mit dem
-   Beschlussentwurf einverstanden und sind an ihn gebunden.
+   Beschlussentwurf einverstanden und sind an ihn gebunden.%
   \label{itm:60-6}
 
   \item Die federführende \hyperref[itm:04-21]{Aufsichtsbehörde} erlässt den Beschluss und teilt ihn der \hyperref
@@ -53,12 +53,12 @@
    \hyperref[itm:04-22]{betroffenen Aufsichtsbehörden} und den Ausschuss von dem betreffenden Beschluss einschließlich
     einer Zusammenfassung der maßgeblichen Fakten und Gründe in Kenntnis. Die \hyperref[itm:04-21]
     {Aufsichtsbehörde}, bei der eine Beschwerde eingereicht worden ist, unterrichtet den Beschwerdeführer über den
-    Beschluss.
+    Beschluss.%
   \label{itm:60-7}
 
   \item Wird eine Beschwerde abgelehnt oder abgewiesen, so erlässt die \hyperref[itm:04-21]{Aufsichtsbehörde}, bei der
    die Beschwerde eingereicht wurde, abweichend von \hyperref[itm:60-7]{Absatz 7} den Beschluss, teilt ihn dem
-   Beschwerdeführer mit und setzt den \hyperref[itm:04-7]{Verantwortlichen} in Kenntnis.
+   Beschwerdeführer mit und setzt den \hyperref[itm:04-7]{Verantwortlichen} in Kenntnis.%
   \label{itm:60-8}
 
   \item Sind sich die federführende \hyperref[itm:04-21]{Aufsichtsbehörde} und die betreffenden \hyperref[itm:04-21]
@@ -71,7 +71,7 @@
     Beschwerdeführer hiervon in Kenntnis, während die für den Beschwerdeführer zuständige \hyperref[itm:04-21]
     {Aufsichtsbehörde} den Beschluss für den Teil erlässt, der die Ablehnung oder Abweisung dieser Beschwerde betrifft,
     und ihn diesem Beschwerdeführer mitteilt und den \hyperref[itm:04-7]{Verantwortlichen} oder den \hyperref[itm:04-8]
-    {Auftragsverarbeiter} hiervon in Kenntnis setzt.
+    {Auftragsverarbeiter} hiervon in Kenntnis setzt.%
   \label{itm:60-9}
 
   \item Nach der Unterrichtung über den Beschluss der federführenden \hyperref[itm:04-21]{Aufsichtsbehörde} gemäß den
@@ -81,18 +81,18 @@
    {Verantwortliche} oder der \hyperref[itm:04-8]{Auftragsverarbeiter} teilt der federführenden \hyperref[itm:04-21]
    {Aufsichtsbehörde} die Maßnahmen mit, die zur Einhaltung des Beschlusses ergriffen wurden; diese wiederum
    unterrichtet die anderen
-   \hyperref[itm:04-22]{betroffenen Aufsichtsbehörden}.
+   \hyperref[itm:04-22]{betroffenen Aufsichtsbehörden}.%
   \label{itm:60-10}
 
   \item Hat -- in Ausnahmefällen -- eine \hyperref[itm:04-22]{betroffene Aufsichtsbehörde} Grund zu der Annahme, dass
    zum Schutz der Interessen \hyperref[itm:04-1]{betroffener Personen} dringender Handlungsbedarf besteht, so kommt das
    Dringlichkeitsverfahren nach
-   \hyperref[ch:66]{Artikel 66} zur Anwendung.
+   \hyperref[ch:66]{Artikel 66} zur Anwendung.%
   \label{itm:60-11}
 
   \item Die federführende \hyperref[itm:04-21]{Aufsichtsbehörde} und die anderen \hyperref[itm:04-22]
    {betroffenen Aufsichtsbehörden} übermitteln einander die nach diesem Artikel geforderten Informationen auf
-   elektronischem Wege unter Verwendung eines standardisierten Formats.
+   elektronischem Wege unter Verwendung eines standardisierten Formats.%
   \label{itm:60-12}
 
 \end{enumerate}
