--- a/artikel/61.tex
+++ b/artikel/61.tex
@@ -10,31 +10,31 @@
    Amtshilfe, um diese Verordnung einheitlich durchzuführen und anzuwenden, und treffen Vorkehrungen für eine wirksame
    Zusammenarbeit. Die Amtshilfe bezieht sich insbesondere auf Auskunftsersuchen und aufsichtsbezogene Maßnahmen,
    beispielsweise Ersuchen um vorherige Genehmigungen und eine vorherige Konsultation, um Vornahme von Nachprüfungen
-   und Untersuchungen.
+   und Untersuchungen.%
   \label{itm:61-1}
 
   \item Jede \hyperref[itm:04-21]{Aufsichtsbehörde} ergreift alle geeigneten Maßnahmen, um einem Ersuchen einer
    anderen \hyperref[itm:04-21]{Aufsichtsbehörde} unverzüglich und spätestens innerhalb eines Monats nach Eingang des
    Ersuchens nachzukommen. Dazu kann insbesondere auch die Übermittlung maßgeblicher Informationen über die
-   Durchführung einer Untersuchung gehören.
+   Durchführung einer Untersuchung gehören.%
   \label{itm:61-2}
 
   \item Amtshilfeersuchen enthalten alle erforderlichen Informationen, einschließlich Zweck und Begründung des
    Ersuchens. Die übermittelten Informationen werden ausschließlich für den Zweck verwendet, für den sie angefordert
-   wurden.
+   wurden.%
   \label{itm:61-3}
 
-  \item Die ersuchte \hyperref[itm:04-21]{Aufsichtsbehörde} lehnt das Ersuchen nur ab, wenn
+  \item Die ersuchte \hyperref[itm:04-21]{Aufsichtsbehörde} lehnt das Ersuchen nur ab, wenn%
   \label{itm:61-4}
 
   \begin{enumerate}
   
     \item sie für den Gegenstand des Ersuchens oder für die Maßnahmen, die sie durchführen soll, nicht zuständig ist
-     oder
+     oder%
     \label{itm:61-4a}
 
     \item ein Eingehen auf das Ersuchen gegen diese Verordnung verstoßen würde oder gegen das Unionsrecht oder das Recht
-     der Mitgliedstaaten, dem die \hyperref[itm:04-21]{Aufsichtsbehörde}, bei der das Ersuchen eingeht, unterliegt.
+     der Mitgliedstaaten, dem die \hyperref[itm:04-21]{Aufsichtsbehörde}, bei der das Ersuchen eingeht, unterliegt.%
     \label{itm:61-4b}
 
   \end{enumerate}
@@ -42,18 +42,18 @@
   \item Die ersuchte \hyperref[itm:04-21]{Aufsichtsbehörde} informiert die ersuchende \hyperref[itm:04-21]
    {Aufsichtsbehörde} über die Ergebnisse oder gegebenenfalls über den Fortgang der Maßnahmen, die getroffen wurden, um
    dem Ersuchen nachzukommen. Die ersuchte \hyperref[itm:04-21]{Aufsichtsbehörde} erläutert gemäß \hyperref[itm:61-4]
-   {Absatz 4} die Gründe für die Ablehnung des Ersuchens.
+   {Absatz 4} die Gründe für die Ablehnung des Ersuchens.%
   \label{itm:61-5}
 
   \item Die ersuchten \hyperref[itm:04-21]{Aufsichtsbehörden} übermitteln die Informationen, um die von einer
    anderen \hyperref[itm:04-21]{Aufsichtsbehörde} ersucht wurde, in der Regel auf elektronischem Wege unter Verwendung
-   eines standardisierten Formats.
+   eines standardisierten Formats.%
   \label{itm:61-6}
 
   \item Ersuchte \hyperref[itm:04-21]{Aufsichtsbehörden} verlangen für Maßnahmen, die sie aufgrund eines
    Amtshilfeersuchens getroffen haben, keine Gebühren. Die \hyperref[itm:04-21]{Aufsichtsbehörden} können untereinander
    Regeln vereinbaren, um einander in Ausnahmefällen besondere aufgrund der Amtshilfe entstandene Ausgaben zu
-   erstatten.
+   erstatten.%
   \label{itm:61-7}
 
   \item Erteilt eine ersuchte \hyperref[itm:04-21]{Aufsichtsbehörde} nicht binnen eines Monats nach Eingang des
@@ -62,7 +62,7 @@
     ersuchende \hyperref[itm:04-21]{Aufsichtsbehörde} eine einstweilige Maßnahme im Hoheitsgebiet ihres Mitgliedstaats
     gemäß \hyperref[itm:55-1]{Artikel 55 Absatz 1} ergreifen. In diesem Fall wird von einem dringenden Handlungsbedarf
     gemäß \hyperref[itm:66-1]{Artikel 66 Absatz 1} ausgegangen, der einen im Dringlichkeitsverfahren angenommenen
-    verbindlichen Beschluss des Ausschuss gemäß \hyperref[itm:66-2]{Artikel 66 Absatz 2} erforderlich macht.
+    verbindlichen Beschluss des Ausschuss gemäß \hyperref[itm:66-2]{Artikel 66 Absatz 2} erforderlich macht.%
   \label{itm:61-8}
 
   \item Die Kommission kann im Wege von Durchführungsrechtsakten Form und Verfahren der Amtshilfe nach diesem Artikel
@@ -70,7 +70,7 @@
    {Aufsichtsbehörden} sowie zwischen den
    \hyperref[itm:04-21]{Aufsichtsbehörden} und dem Ausschuss, insbesondere das in \hyperref[itm:61-1]{Absatz 6 des
     vorliegenden Artikels} genannte standardisierte Format, festlegen. Diese Durchführungsrechtsakte werden gemäß dem
-    in \hyperref[itm:93-2]{Artikel 93 Absatz 2} genannten Prüfverfahren erlassen.
+    in \hyperref[itm:93-2]{Artikel 93 Absatz 2} genannten Prüfverfahren erlassen.%
   \label{itm:61-9}
 
 \end{enumerate}
