--- a/artikel/65.tex
+++ b/artikel/65.tex
@@ -7,7 +7,7 @@
 \begin{enumerate}
 
   \item Um die ordnungsgemäße und einheitliche Anwendung dieser Verordnung in Einzelfällen sicherzustellen, erlässt der
-   Ausschuss in den folgenden Fällen einen verbindlichen Beschluss:
+   Ausschuss in den folgenden Fällen einen verbindlichen Beschluss:%
   \label{itm:65-1}
 
   \begin{enumerate}
@@ -17,17 +17,17 @@
      federführenden Behörde eingelegt hat und sich die federführende Aufsichtsbehörde dem Einspruch nicht angeschlossen
      hat oder den Einspruch als nicht maßgeblich oder nicht begründet abgelehnt hat. Der verbindliche Beschluss
      betrifft alle Angelegenheiten, die Gegenstand des \hyperref[itm:04-27]{maßgeblichen und begründeten Einspruch}s
-     sind, insbesondere die Frage, ob ein Verstoß gegen diese Verordnung vorliegt;
+     sind, insbesondere die Frage, ob ein Verstoß gegen diese Verordnung vorliegt;%
     \label{itm:65-1a}
 
     \item wenn es widersprüchliche Standpunkte dazu gibt, welche der \hyperref[itm:04-22]{betroffenen Aufsichtsbehörden}
-     für die \hyperref[itm:04-16]{Hauptniederlassung} zuständig ist,
+     für die \hyperref[itm:04-16]{Hauptniederlassung} zuständig ist,%
     \label{itm:65-1b}
 
     \item wenn eine zuständige \hyperref[itm:04-21]{Aufsichtsbehörde} in den in \hyperref[itm:64-1]{Artikel 64 Absatz 1}
      genannten Fällen keine Stellungnahme des Ausschusses einholt oder der Stellungnahme des Ausschusses
      gemäß \hyperref[ch:64]{Artikel 64} nicht folgt. In diesem Fall kann jede \hyperref[itm:04-22]
-     {betroffene Aufsichtsbehörde} oder die Kommission die Angelegenheit dem Ausschuss vorlegen.
+     {betroffene Aufsichtsbehörde} oder die Kommission die Angelegenheit dem Ausschuss vorlegen.%
     \label{itm:65-1c}
 
   \end{enumerate}
@@ -36,24 +36,24 @@
    Angelegenheit mit einer Mehrheit von zwei Dritteln der Mitglieder des Ausschusses angenommen. Diese Frist kann wegen
    der Komplexität der Angelegenheit um einen weiteren Monat verlängert werden. Der in \hyperref[itm:65-1]{Absatz 1}
    genannte Beschluss wird begründet und an die federführende \hyperref[itm:04-21]{Aufsichtsbehörde} und alle \hyperref
-   [itm:04-22]{betroffenen Aufsichtsbehörden} übermittelt und ist für diese verbindlich.
+   [itm:04-22]{betroffenen Aufsichtsbehörden} übermittelt und ist für diese verbindlich.%
   \label{itm:65-2}
 
   \item War der Ausschuss nicht in der Lage, innerhalb der in \hyperref[itm:65-2]{Absatz 2} genannten Fristen einen
    Beschluss anzunehmen, so nimmt er seinen Beschluss innerhalb von zwei Wochen nach Ablauf des in \hyperref[itm:65-2]
    {Absatz 2} genannten zweiten Monats mit einfacher Mehrheit der Mitglieder des Ausschusses an. Bei Stimmengleichheit
-   zwischen den Mitgliedern des Ausschusses gibt die Stimme des Vorsitzes den Ausschlag.
+   zwischen den Mitgliedern des Ausschusses gibt die Stimme des Vorsitzes den Ausschlag.%
   \label{itm:65-3}
 
   \item Die \hyperref[itm:04-22]{betroffenen Aufsichtsbehörden} nehmen vor Ablauf der in den Absätzen \hyperref
    [itm:65-2]{2} und \hyperref[itm:65-3]{3} genannten Fristen keinen Beschluss über die dem Ausschuss vorgelegte
-   Angelegenheit an.
+   Angelegenheit an.%
   \label{itm:65-4}
 
   \item Der Vorsitz des Ausschusses unterrichtet die \hyperref[itm:04-22]{betroffenen Aufsichtsbehörden} unverzüglich
    über den in \hyperref[itm:65-1]{Absatz 1} genannten Beschluss. Er setzt die Kommission hiervon in Kenntnis. Der
    Beschluss wird unverzüglich auf der Website des Ausschusses veröffentlicht, nachdem die \hyperref[itm:04-21]
-   {Aufsichtsbehörde} den in \hyperref[itm:65-6]{Absatz 6} genannten endgültigen Beschluss mitgeteilt hat.
+   {Aufsichtsbehörde} den in \hyperref[itm:65-6]{Absatz 6} genannten endgültigen Beschluss mitgeteilt hat.%
   \label{itm:65-5}
 
   \item Die federführende \hyperref[itm:04-21]{Aufsichtsbehörde} oder gegebenenfalls die \hyperref[itm:04-21]
@@ -69,7 +69,7 @@
     {Absatz 1} genannten Beschluss verwiesen und festgelegt, dass der in \hyperref[itm:65-1]{Absatz 1 des vorliegenden
     Artikels} genannte Beschluss gemäß \hyperref[itm:65-5]{Absatz 5} auf der Website des Ausschusses veröffentlicht
     wird. Dem endgültigen Beschluss wird der in \hyperref[itm:65-1]{Absatz 1 des vorliegenden Artikels} genannte
-    Beschluss beigefügt.
+    Beschluss beigefügt.%
   \label{itm:65-6}
 
 \end{enumerate}
