--- a/artikel/78.tex
+++ b/artikel/78.tex
@@ -8,7 +8,7 @@
 
   \item Jede natürliche oder juristische Person hat unbeschadet eines anderweitigen verwaltungsrechtlichen oder
    außergerichtlichen Rechtsbehelfs das Recht auf einen wirksamen gerichtlichen Rechtsbehelf gegen einen sie
-   betreffenden rechtsverbindlichen Beschluss einer \hyperref[itm:04-21]{Aufsichtsbehörde}.
+   betreffenden rechtsverbindlichen Beschluss einer \hyperref[itm:04-21]{Aufsichtsbehörde}.%
   \label{itm:78-1}
 
   \item Jede \hyperref[itm:04-1]{betroffene Person} hat unbeschadet eines anderweitigen verwaltungsrechtlichen oder
@@ -16,17 +16,17 @@
    Artikeln \hyperref[ch:55]{55} und \hyperref[ch:56]{56} zuständige \hyperref[itm:04-21]{Aufsichtsbehörde} sich nicht
    mit einer Beschwerde befasst oder die
    \hyperref[itm:04-1]{betroffene Person} nicht innerhalb von drei Monaten über den Stand oder das Ergebnis der
-    gemäß \hyperref[ch:77]{Artikel 77} erhobenen Beschwerde in Kenntnis gesetzt hat.
+    gemäß \hyperref[ch:77]{Artikel 77} erhobenen Beschwerde in Kenntnis gesetzt hat.%
   \label{itm:78-2}
 
   \item Für Verfahren gegen eine \hyperref[itm:04-21]{Aufsichtsbehörde} sind die Gerichte des Mitgliedstaats zuständig,
    in dem die
-   \hyperref[itm:04-21]{Aufsichtsbehörde} ihren Sitz hat.
+   \hyperref[itm:04-21]{Aufsichtsbehörde} ihren Sitz hat.%
   \label{itm:78-3}
 
   \item Kommt es zu einem Verfahren gegen den Beschluss einer \hyperref[itm:04-21]{Aufsichtsbehörde}, dem eine
    Stellungnahme oder ein Beschluss des Ausschusses im Rahmen des Kohärenzverfahrens vorangegangen ist, so leitet
-   die \hyperref[itm:04-21]{Aufsichtsbehörde} diese Stellungnahme oder diesen Beschluss dem Gericht zu.
+   die \hyperref[itm:04-21]{Aufsichtsbehörde} diese Stellungnahme oder diesen Beschluss dem Gericht zu.%
   \label{itm:78-4}
 
 \end{enumerate}
