--- a/artikel/85.tex
+++ b/artikel/85.tex
@@ -9,7 +9,7 @@
   \item Die Mitgliedstaaten bringen durch Rechtsvorschriften das Recht auf den Schutz \hyperref[itm:04-1]
    {personenbezogener Daten} gemäß dieser Verordnung mit dem Recht auf freie Meinungsäußerung und Informationsfreiheit,
    einschließlich der \hyperref[itm:04-2]{Verarbeitung} zu journalistischen Zwecken und zu wissenschaftlichen,
-   künstlerischen oder literarischen Zwecken, in Einklang.
+   künstlerischen oder literarischen Zwecken, in Einklang.%
   \label{itm:85-1}
 
   \item Für die \hyperref[itm:04-2]{Verarbeitung}, die zu journalistischen Zwecken oder zu wissenschaftlichen,
@@ -21,11 +21,11 @@
    [itm:04-21]{Aufsichtsbehörden}), \hyperref[part:7]{Kapitel VII}(Zusammenarbeit und Kohärenz) und \hyperref[part:9]
    {Kapitel IX} (Vorschriften für besondere Verarbeitungssituationen) vor, wenn dies erforderlich ist, um das Recht auf
    Schutz der \hyperref[itm:04-1]{personenbezogenen Daten} mit der Freiheit der Meinungsäußerung und der
-   Informationsfreiheit in Einklang zu bringen.
+   Informationsfreiheit in Einklang zu bringen.%
   \label{itm:85-2}
 
   \item Jeder Mitgliedstaat teilt der Kommission die Rechtsvorschriften, die er aufgrund von \hyperref[itm:85-2]
-   {Absatz 2} erlassen hat, sowie unverzüglich alle späteren Änderungsgesetze oder Änderungen dieser Vorschriften mit.
+   {Absatz 2} erlassen hat, sowie unverzüglich alle späteren Änderungsgesetze oder Änderungen dieser Vorschriften mit.%
   \label{itm:85-3}
 
 \end{enumerate}
