--- a/artikel/89.tex
+++ b/artikel/89.tex
@@ -16,7 +16,7 @@
      {Pseudonymisierung} gehören, sofern es möglich ist, diese Zwecke auf diese Weise zu erfüllen. In allen Fällen, in
      denen diese Zwecke durch die Weiterverarbeitung, bei der die Identifizierung von \hyperref[itm:04-1]
      {betroffenen Personen} nicht oder nicht mehr möglich ist, erfüllt werden können, werden diese Zwecke auf diese
-     Weise erfüllt.
+     Weise erfüllt.%
   \label{itm:89-1}
 
   \item Werden \hyperref[itm:04-1]{personenbezogene Daten} zu wissenschaftlichen oder historischen Forschungszwecken
@@ -24,7 +24,7 @@
    [itm:89-1]{Absatz 1 des vorliegenden Artikels} im Unionsrecht oder im Recht der Mitgliedstaaten insoweit Ausnahmen
    von den Rechten gemäß der Artikel \hyperref[ch:15]{15}, \hyperref[ch:16]{16}, \hyperref[ch:18]{18} und \hyperref
    [ch:21]{21} vorgesehen werden, als diese Rechte voraussichtlich die Verwirklichung der spezifischen Zwecke unmöglich
-   machen oder ernsthaft beeinträchtigen und solche Ausnahmen für die Erfüllung dieser Zwecke notwendig sind.
+   machen oder ernsthaft beeinträchtigen und solche Ausnahmen für die Erfüllung dieser Zwecke notwendig sind.%
   \label{itm:89-2}
 
   \item Werden \hyperref[itm:04-1]{personenbezogene Daten} für im öffentlichen Interesse liegende Archivzwecke
@@ -33,12 +33,12 @@
    Artikel \hyperref[ch:15]{15}, \hyperref[ch:16]{16}, \hyperref[ch:18]{18}, \hyperref[ch:19]{19}, \hyperref[ch:20]
    {20} und \hyperref[ch:21]{21} vorgesehen werden, als diese Rechte voraussichtlich die Verwirklichung der
    spezifischen Zwecke unmöglich machen oder ernsthaft beeinträchtigen und solche Ausnahmen für die Erfüllung dieser
-   Zwecke notwendig sind.
+   Zwecke notwendig sind.%
   \label{itm:89-3}
 
   \item Dient die in den Absätzen \hyperref[itm:89-2]{2} und \hyperref[itm:89-3]{3} genannte \hyperref[itm:04-2]
    {Verarbeitung} gleichzeitig einem anderen Zweck, gelten die Ausnahmen nur für die \hyperref[itm:04-2]
-   {Verarbeitung} zu den in diesen Absätzen genannten Zwecken.
+   {Verarbeitung} zu den in diesen Absätzen genannten Zwecken.%
   \label{itm:89-4}
 
 \end{enumerate}
