--- a/artikel/93.tex
+++ b/artikel/93.tex
@@ -7,14 +7,14 @@
 \begin{enumerate}
 
   \item Die Kommission wird von einem Ausschuss unterstützt. Dieser Ausschuss ist ein Ausschuss im Sinne der Verordnung
-   (EU) Nr. 182/2011.\todo{recherchieren}
+   (EU) Nr. 182/2011.\todo{recherchieren}%
   \label{itm:93-1}
 
-  \item Wird auf diesen Absatz Bezug genommen, so gilt Artikel 5 der Verordnung (EU) Nr. 182/2011.
+  \item Wird auf diesen Absatz Bezug genommen, so gilt Artikel 5 der Verordnung (EU) Nr. 182/2011.%
   \label{itm:93-2}
 
   \item Wird auf diesen Absatz Bezug genommen, so gilt Artikel 8 der Verordnung (EU) Nr. 182/2011 in Verbindung mit
-   deren Artikel 5.
+   deren Artikel 5.%
   \label{itm:93-3}
 
 \end{enumerate}   
